update lang Administrator

--- a/package/administrator/language/vn-VN/com_actionlogs.ini
+++ b/package/administrator/language/vn-VN/com_actionlogs.ini
@@ -13,7 +13,7 @@ COM_ACTIONLOGS_API_LOGGING_LABEL="Log API Requests"
 COM_ACTIONLOGS_COMMA="Comma"
 COM_ACTIONLOGS_CONFIGURATION="User Actions Log: Options"
 COM_ACTIONLOGS_CSV_DELIMITER_LABEL="CSV Delimiter"
-COM_ACTIONLOGS_DATE="Date"
+COM_ACTIONLOGS_DATE="Ngày tháng"
 COM_ACTIONLOGS_DISABLED="Disabled"
 COM_ACTIONLOGS_EMAIL_BODY="Latest User Actions\n------\nThis is the latest action performed by a user on your website.\n\n Action | Date | Extension | Name\n{MESSAGES} {MESSAGE} | {DATE} | {EXTENSION} | {USERNAME} \n{/MESSAGES}"
 COM_ACTIONLOGS_EMAIL_DESC="This is the latest action performed by a user on your website."
