--- a/package/administrator/language/vn-VN/com_banners.ini
+++ b/package/administrator/language/vn-VN/com_banners.ini
@@ -76,7 +76,7 @@ COM_BANNERS_ERR_ZIP_CREATE_FAILURE="Zip create failure"
 COM_BANNERS_ERR_ZIP_DELETE_FAILURE="Zip delete failure"
 COM_BANNERS_ERROR_UNIQUE_ALIAS="Additional Information"
 COM_BANNERS_EXTRA="Additional Information"
-COM_BANNERS_FIELD_ALT_LABEL="Alt Text"
+COM_BANNERS_FIELD_ALT_LABEL="Alt text (Mô tả Ảnh - alt trong code html img)"
 COM_BANNERS_FIELD_BANNEROWNPREFIX_LABEL="Use Own Prefix"
 COM_BANNERS_FIELD_BASENAME_DESC="File name pattern which can contain<br>__SITE__ for the site name<br>__CATID__ for the category ID<br>__CATNAME__ for the category name<br>__CLIENTID__ for the client ID<br>__CLIENTNAME__ for the client name<br>__TYPE__ for the type<br>__TYPENAME__ for the type name<br>__BEGIN__ for the begin date<br>__END__ for the end date."
 COM_BANNERS_FIELD_BASENAME_LABEL="File Name"
