--- a/package/administrator/language/vn-VN/com_content.sys.ini
+++ b/package/administrator/language/vn-VN/com_content.sys.ini
@@ -3,7 +3,7 @@
 ; License GNU General Public License version 2 or later; see LICENSE.txt
 ; Note : All ini files need to be saved as UTF-8
 
-COM_CONTENT="Bài viết"
+COM_CONTENT="Tin - Bài"
 COM_CONTENT_ARCHIVE_VIEW_DEFAULT_DESC="Chế độ Hiển thị tất cả các bài viết archive."
 COM_CONTENT_ARCHIVE_VIEW_DEFAULT_OPTION="Default"
 COM_CONTENT_ARCHIVE_VIEW_DEFAULT_TITLE="Các bài viết Archive"
@@ -26,9 +26,9 @@ COM_CONTENT_CATEGORY_VIEW_BLOG_TITLE="Danh mục - kiểu tin (blog)"
 COM_CONTENT_CATEGORY_VIEW_DEFAULT_DESC="Menu nối đến danh mục được chọn, và các bài viết hiển thị kiểu bảng (table): chỉ hiển thị tiêu đề của các bài viết nằm trong bảng (table)"
 COM_CONTENT_CATEGORY_VIEW_DEFAULT_OPTION="List"
 COM_CONTENT_CATEGORY_VIEW_DEFAULT_TITLE="Danh mục - kiểu bảng (table)"
-COM_CONTENT_CATEGORY_VIEW_FEATURED_DESC="Hiển thị các bài viết đã được đánh dấu Feature."
-COM_CONTENT_CONTENT_TYPE_ARTICLE="Article"
-COM_CONTENT_CONTENT_TYPE_CATEGORY="Article Category"
+COM_CONTENT_CATEGORY_VIEW_FEATURED_DESC="Hiển thị các bài viết đã được đánh dấu Feature (bài viết nổi bật)."
+COM_CONTENT_CONTENT_TYPE_ARTICLE="Tin bài"
+COM_CONTENT_CONTENT_TYPE_CATEGORY="Danh Mục [Tin bài]"
 COM_CONTENT_FEATURED="Featured"
 COM_CONTENT_FEATURED_VIEW_DEFAULT_DESC="Hiển thị các bài viết đã được đánh dấu Feature."
 COM_CONTENT_FEATURED_VIEW_DEFAULT_OPTION="Default"
@@ -36,8 +36,8 @@ COM_CONTENT_FEATURED_VIEW_DEFAULT_TITLE="Bài viết được đánh dấu featu
 COM_CONTENT_FORM_VIEW_DEFAULT_DESC="Tạo form đăng bài cho thành viên gửi bài viết từ trang frontend"
 COM_CONTENT_FORM_VIEW_DEFAULT_OPTION="Create"
 COM_CONTENT_FORM_VIEW_DEFAULT_TITLE="Form đăng bài cho thành viên"
-COM_CONTENT_MENUS="Nội dung"
-COM_CONTENT_MENUS_ARTICLE_MANAGER="Quản lý bài viết"
+COM_CONTENT_MENUS="Tin - Bài"
+COM_CONTENT_MENUS_ARTICLE_MANAGER="Quản lý Tin - Bài"
 COM_CONTENT_MENUS_CATEGORY_MANAGER="Quản lý Danh mục"
 COM_CONTENT_MENUS_FEATURED="Bài Featured"
 COM_CONTENT_MENUS_MANAGE="Content Settings"
