--- a/package/administrator/language/vn-VN/com_modules.ini
+++ b/package/administrator/language/vn-VN/com_modules.ini
@@ -21,7 +21,7 @@ COM_MODULES_BATCH_TIP="If choosing to copy a module, any other actions selected 
 COM_MODULES_CHANGE_POSITION_BUTTON="Select"
 COM_MODULES_CHANGE_POSITION_TITLE="Change"
 COM_MODULES_COLLAPSE="Collapse"
-COM_MODULES_CONFIGURATION="Module: Options"
+COM_MODULES_CONFIGURATION="Cấu hình chung Modules"
 COM_MODULES_CUSTOM_OUTPUT="Custom Output"
 COM_MODULES_CUSTOM_POSITION="Active Positions"
 COM_MODULES_DESELECT="Bỏ chọn"
@@ -57,23 +57,23 @@ COM_MODULES_FIELD_PUBLISH_DOWN_LABEL="Finish Publishing"
 COM_MODULES_FIELD_PUBLISH_UP_LABEL="Start Publishing"
 COM_MODULES_FIELD_SHOWTITLE_LABEL="Hiện tiêu đề"
 COM_MODULES_FIELD_VALUE_NOCACHING="No caching"
-COM_MODULES_FIELDSET_RULES="Permissions"
+COM_MODULES_FIELDSET_RULES="Phân quyền"
 COM_MODULES_FILTER_SEARCH_DESC="Filter by position name."
 COM_MODULES_FORM_TITLE_EDIT="Edit module"
 COM_MODULES_FORM_TITLE_NEW="New Module"
-COM_MODULES_GENERAL_FIELDSET_DESC="Configure module edit interface settings."
+COM_MODULES_GENERAL_FIELDSET_DESC=""
 COM_MODULES_GLOBAL="Assigning the Module to Menu Items"
 COM_MODULES_GLOBAL_ASSIGN="Chọn hết hoặc bỏ chọn hết"
 COM_MODULES_GLOBAL_TREE_EXPAND="Thu gọn cây menu"
 COM_MODULES_HEADING_MODULE="Type"
-COM_MODULES_HEADING_MODULE_ASC="Type ascending"
-COM_MODULES_HEADING_MODULE_DESC="Type descending"
+COM_MODULES_HEADING_MODULE_ASC="Kiểu module (theo tên) : A-Z"
+COM_MODULES_HEADING_MODULE_DESC="Kiểu module (theo tên) : Z-A"
 COM_MODULES_HEADING_PAGES="Pages"
 COM_MODULES_HEADING_PAGES_ASC="Pages ascending"
 COM_MODULES_HEADING_PAGES_DESC="Pages descending"
 COM_MODULES_HEADING_POSITION="Position"
-COM_MODULES_HEADING_POSITION_ASC="Position ascending"
-COM_MODULES_HEADING_POSITION_DESC="Position descending"
+COM_MODULES_HEADING_POSITION_ASC="Tên Position (Điểm neo) : A-Z"
+COM_MODULES_HEADING_POSITION_DESC="Tên Position (Điểm neo) : Z-A"
 COM_MODULES_HEADING_TEMPLATES="Templates"
 COM_MODULES_HTML_PUBLISH_DISABLED="Publish module::Extension disabled"
 COM_MODULES_HTML_PUBLISH_ENABLED="Publish module::Extension enabled"
@@ -127,9 +127,9 @@ COM_MODULES_OPTION_ORDER_POSITION="%d. %s"
 COM_MODULES_OPTION_POSITION_TEMPLATE_DEFINED="Template"
 COM_MODULES_OPTION_POSITION_USER_DEFINED="User"
 COM_MODULES_OPTION_SELECT_CLIENT="- Select Type -"
-COM_MODULES_OPTION_SELECT_MENU_ITEM="- Select Menu Item -"
-COM_MODULES_OPTION_SELECT_MODULE="- Select Type -"
-COM_MODULES_OPTION_SELECT_POSITION="- Select Position -"
+COM_MODULES_OPTION_SELECT_MENU_ITEM="- Chọn Menu -"
+COM_MODULES_OPTION_SELECT_MODULE="- Chọn Type (Kiểu module) -"
+COM_MODULES_OPTION_SELECT_POSITION="- Chọn Position (Điểm neo) -"
 COM_MODULES_OPTION_SELECT_TYPE="- Select type -"
 COM_MODULES_POSITION_ANALYTICS="Analytics"
 COM_MODULES_POSITION_BANNER="Banner"
@@ -188,9 +188,9 @@ COM_MODULES_SEARCH_MENUITEM="Search for a Menu Item"
 COM_MODULES_SELECT_MODULE="Select module, %s"
 COM_MODULES_SUBITEMS="Thao tác đồng thời cho menu con"
 COM_MODULES_TABLE_CAPTION="Table of Modules"
-COM_MODULES_TYPE_CHOOSE="Select a Module Type"
+COM_MODULES_TYPE_CHOOSE="Lựa chọn một Type - Kiểu module sử dụng"
 COM_MODULES_TYPE_OR_SELECT_POSITION="Type or Select a Position"
 COM_MODULES_XML_DESCRIPTION="Component for module management in the Administrator Backend."
 
-JLIB_RULES_SETTING_NOTES_COM_MODULES="Changes apply to this component only.<br><em><strong>Inherited</strong></em> - a Global Configuration setting or higher level setting is applied.<br><em><strong>Denied</strong></em> always wins - whatever is set at the Global or higher level and applies to all child elements.<br><em><strong>Allowed</strong></em> will enable the action for this component unless overruled by a Global Configuration setting." ; Alternate language strings for the rules form field
+JLIB_RULES_SETTING_NOTES_COM_MODULES="Các Phân Quyền tại đây tác động cho App Component này.<br><em><strong>Inherited</strong></em> - Thừa hưởng - tức là giá trị hiện tại áp dụng sẽ được lấy động từ cấp cao hơn. Nếu tất cả các cấp cao hơn đều là Inherited, hệ thống sẽ lấy giá trị sau cùng tại Cấu hình hệ thống.<br><em><strong>Denied</strong></em> Từ chối quyền - không cho phép. Lựa chọn này cũng tác động làm tất cả các cấp sâu hơn bên dưới cũng bị từ chối quyền (không cho phép) dù có chọn gì đi nữa.<br><em><strong>Allowed</strong></em> Cho phép. Lựa chọn này sẽ cho phép (bật quyền) cho cho hành động tương ứng." ; Alternate language strings for the rules form field
 
