--- a/package/administrator/language/vn-VN/com_users.sys.ini
+++ b/package/administrator/language/vn-VN/com_users.sys.ini
@@ -30,7 +30,7 @@ COM_USERS_MENUS_ADD_NOTE="Add User Note"
 COM_USERS_MENUS_ADD_USER="Add User"
 COM_USERS_MENUS_FIELDS="User Fields"
 COM_USERS_MENUS_GROUPS="Group Thành viên"
-COM_USERS_MENUS_LEVELS="Phân cấp quyền hành"
+COM_USERS_MENUS_LEVELS="Phân nhóm truy cập"
 COM_USERS_MENUS_MISC="Miscellaneous"
 COM_USERS_MENUS_NOTE_CATEGORIES="User Note Categories"
 COM_USERS_MENUS_NOTES="User Notes"
