--- a/package/administrator/language/vn-VN/lib_joomla.ini
+++ b/package/administrator/language/vn-VN/lib_joomla.ini
@@ -270,9 +270,9 @@ JLIB_FORM_FIELD_INVALID_TIME_INPUT="Invalid time format. Please use hh:mm."
 JLIB_FORM_FIELD_INVALID_TIME_INPUT_SECONDS="Invalid time format. Please use hh:mm:ss."
 JLIB_FORM_FIELD_INVALID_VALUE="This value is not valid"
 JLIB_FORM_FIELD_PARAM_ACCESSIBLEMEDIA_LABEL="Media"
-JLIB_FORM_FIELD_PARAM_ACCESSIBLEMEDIA_PARAMS_ALT_EMPTY_DESC="Decorative Image - no description required"
-JLIB_FORM_FIELD_PARAM_ACCESSIBLEMEDIA_PARAMS_ALT_EMPTY_LABEL="No Description"
-JLIB_FORM_FIELD_PARAM_ACCESSIBLEMEDIA_PARAMS_ALT_TEXT_LABEL="Image Description (Alt Text)"
+JLIB_FORM_FIELD_PARAM_ACCESSIBLEMEDIA_PARAMS_ALT_EMPTY_DESC="Trong một số trường hợp bạn không muốn chèn thuộc tính Alt html với dòng Alt text - mô tả ảnh vào, click chọn vào đây."
+JLIB_FORM_FIELD_PARAM_ACCESSIBLEMEDIA_PARAMS_ALT_EMPTY_LABEL="Ngừng thuộc tính Alt mô tả ảnh"
+JLIB_FORM_FIELD_PARAM_ACCESSIBLEMEDIA_PARAMS_ALT_TEXT_LABEL="Alt text (Mô tả Ảnh - alt trong code html img)"
 JLIB_FORM_FIELD_PARAM_ACCESSIBLEMEDIA_PARAMS_IMAGEFILE_LABEL="Image"
 JLIB_FORM_FIELD_PARAM_CALENDAR_FORMAT_DESC="The date format to be used. This is in the format used by PHP to specify date string formats (see below). If no format argument is given, '%Y-%m-%d' is assumed (giving dates like '2008-04-16')."
 JLIB_FORM_FIELD_PARAM_CALENDAR_FORMAT_LABEL="Format"
@@ -338,7 +338,7 @@ JLIB_FORM_MEDIA_PREVIEW_ALT="Selected image."
 JLIB_FORM_MEDIA_PREVIEW_EMPTY="No image selected."
 JLIB_FORM_MEDIA_PREVIEW_SELECTED_IMAGE="Selected image."
 JLIB_FORM_MEDIA_PREVIEW_TIP_TITLE="Preview"
-JLIB_FORM_SELECT_USER="Select a User."
+JLIB_FORM_SELECT_USER="Chọn tài khoản thành viên."
 JLIB_FORM_VALIDATE_FIELD_INVALID="Invalid field: %s"
 JLIB_FORM_VALIDATE_FIELD_REQUIRED="Field required: %s"
 JLIB_FORM_VALIDATE_FIELD_RULE_MISSING="Validation Rule missing: %s"
@@ -409,7 +409,7 @@ JLIB_HTML_BUTTON_NO_LOAD="Could not load button %s (%s);"
 JLIB_HTML_BUTTON_NOT_DEFINED="Button not defined for type = %s"
 JLIB_HTML_CALENDAR="Calendar"
 JLIB_HTML_CHECKED_OUT="Checked out."
-JLIB_HTML_CHECKIN="Check-in"
+JLIB_HTML_CHECKIN="Bị khóa - Ai đó đang mở sửa và chưa lưu lại"
 JLIB_HTML_CLOAKING="This email address is being protected from spambots. You need JavaScript enabled to view it."
 JLIB_HTML_DATE_RELATIVE_DAYS_0="0 days ago."
 JLIB_HTML_DATE_RELATIVE_DAYS_ONE="One day ago."
@@ -641,7 +641,7 @@ JLIB_INSTALLER_ERROR_UNKNOWN_EXTENSION="Extension Uninstall: Unknown Extension."
 JLIB_INSTALLER_FAILED_TO_PURGE_UPDATES="Failed to clear updates."
 JLIB_INSTALLER_FILE_ERROR_MOVE="Error on moving file %s"
 JLIB_INSTALLER_INCORRECT_SEQUENCE="Downgrading from version %1$s to version %2$s is not allowed."
-JLIB_INSTALLER_INSTALL="Install"
+JLIB_INSTALLER_INSTALL="Cài đặt"
 JLIB_INSTALLER_MINIMUM_JOOMLA="You don't have the minimum Joomla version requirement of J%s"
 JLIB_INSTALLER_MINIMUM_PHP="Your server doesn't meet the minimum PHP version requirement of %s"
 JLIB_INSTALLER_NOT_ERROR="If the error is related to the installation of TinyMCE language files it has no effect on the installation of the language(s). Some language packs created prior to Joomla! 3.2.0 may try to install separate TinyMCE language files. As these are now included in the core they no longer need to be installed."
@@ -685,11 +685,11 @@ JLIB_NO_EDITOR_PLUGIN_PUBLISHED="Unable to display an editor because no editor p
 JLIB_PLUGIN_ERROR_LOADING_PLUGINS="Error loading Plugins: %s"
 JLIB_REGISTRY_EXCEPTION_LOAD_FORMAT_CLASS="Unable to load format class."
 
-JLIB_RULES_ACTION="Action"
+JLIB_RULES_ACTION="Hành động"
 JLIB_RULES_ALLOWED="Allowed"
 JLIB_RULES_ALLOWED_ADMIN="Allowed (Super User)"
 JLIB_RULES_ALLOWED_INHERITED="Allowed (Inherited)"
-JLIB_RULES_CALCULATED_SETTING="Calculated Setting <sup>2</sup>"
+JLIB_RULES_CALCULATED_SETTING="Quyền được trao"
 JLIB_RULES_CONFLICT="Conflict"
 JLIB_RULES_DATABASE_FAILURE="Failed storing the data to the database."
 JLIB_RULES_DENIED="Denied"
@@ -707,10 +707,11 @@ JLIB_RULES_NOTICE_RECALCULATE_GROUP_CHILDS_PERMISSIONS="Permissions changed in a
 JLIB_RULES_NOTICE_RECALCULATE_GROUP_PERMISSIONS="Super User permissions changed. Save or reload to recalculate this group permissions."
 JLIB_RULES_REQUEST_FAILURE="Failed sending the data to server."
 JLIB_RULES_SAVE_BEFORE_CHANGE_PERMISSIONS="Please save before changing permissions."
-JLIB_RULES_SELECT_SETTING="Select New Setting <sup>1</sup>"
-JLIB_RULES_SETTING_NOTES="1. If you change the setting, it will apply to this and all child groups, components and content. Note that <em>Denied</em> will overrule any inherited setting and also the setting in any child group, component or content. In the case of a setting conflict, <em>Deny</em> will take precedence. <em>Not Set</em> is equivalent to <em>Denied</em> but can be changed in child groups, components and content.<br />2. If you select a new setting, select <em>Save</em> to refresh the calculated settings."
-JLIB_RULES_SETTING_NOTES_ITEM="If you change the setting, it will apply to this item. Note that:<br><em><strong>Inherited</strong></em> means that the permissions from global configuration, parent group and category will be used.<br><em><strong>Denied</strong></em> means that no matter what the global configuration, parent group or category settings are, the group being edited can't take this action on this item.<br><em><strong>Allowed</strong></em> means that the group being edited will be able to take this action for this item (but if this is in conflict with the global configuration, parent group or category it will have no impact; a conflict will be indicated by <em><strong>Not Allowed (Inherited)</strong></em> under Calculated Settings)."
-JLIB_RULES_SETTINGS_DESC="Expand for notes about setting the permissions."
+JLIB_RULES_SELECT_SETTING="Thiết lập Quyền"
+JLIB_RULES_SETTING_NOTES="<br><em><strong>Inherited</strong></em> - Thừa hưởng - tức là giá trị hiện tại áp dụng sẽ được lấy động từ cấp cao hơn. Nếu tất cả các cấp cao hơn đều là Inherited, hệ thống sẽ lấy giá trị sau cùng tại Cấu hình hệ thống.<br><em><strong>Denied</strong></em> Từ chối quyền - không cho phép. Lựa chọn này cũng tác động làm tất cả các cấp sâu hơn bên dưới cũng bị từ chối quyền (không cho phép) dù có chọn gì đi nữa.<br><em><strong>Allowed</strong></em> Cho phép. Lựa chọn này sẽ cho phép (bật quyền) cho cho hành động tương ứng."
+JLIB_RULES_SETTING_NOTES_ITEM="Các Phân quyền tại đây chỉ tác động cho thành phần này.
+<br><em><strong>Inherited</strong></em> - Thừa hưởng - tức là giá trị hiện tại áp dụng sẽ được lấy động từ cấp cao hơn. Nếu tất cả các cấp cao hơn đều là Inherited, hệ thống sẽ lấy giá trị sau cùng tại Cấu hình hệ thống.<br><em><strong>Denied</strong></em> Từ chối quyền - không cho phép. Lựa chọn này cũng tác động làm tất cả các cấp sâu hơn bên dưới cũng bị từ chối quyền (không cho phép) dù có chọn gì đi nữa.<br><em><strong>Allowed</strong></em> Cho phép. Lựa chọn này sẽ cho phép (bật quyền) cho cho hành động tương ứng."
+JLIB_RULES_SETTINGS_DESC="Chú thích thêm về các thiết lập Phân Quyền."
 
 JLIB_STEMMER_INVALID_STEMMER="Invalid stemmer type %s"
 
