--- a/package/administrator/language/vn-VN/mod_custom.sys.ini
+++ b/package/administrator/language/vn-VN/mod_custom.sys.ini
@@ -4,7 +4,6 @@
 ; License GNU General Public License version 2 or later; see LICENSE.txt
 ; Note : All ini files need to be saved as UTF-8
 
-MOD_CUSTOM="Custom"
+MOD_CUSTOM="Custom HTML - Văn bản tự do"
 MOD_CUSTOM_LAYOUT_DEFAULT="Default"
-MOD_CUSTOM_XML_DESCRIPTION="This module allows you to create your own Module using a WYSIWYG editor."
-
+MOD_CUSTOM_XML_DESCRIPTION="Trình soạn thảo tích hợp, cho phép bạn soạn các nội dung như đăng Tin Bài: văn bản tự do, chèn hình (ảnh làm banner)"
