--- a/package/administrator/language/vn-VN/mod_latest.ini
+++ b/package/administrator/language/vn-VN/mod_latest.ini
@@ -8,7 +8,7 @@ MOD_LATEST_CREATED="Created"
 MOD_LATEST_CREATED_BY="Created By"
 MOD_LATEST_FIELD_AUTHORS_LABEL="Authors"
 MOD_LATEST_FIELD_COUNT_LABEL="Items to Display"
-MOD_LATEST_FIELD_ORDERING_LABEL="Order"
+MOD_LATEST_FIELD_ORDERING_LABEL="Sắp xếp thứ tự"
 MOD_LATEST_FIELD_VALUE_AUTHORS_ANYONE="Anyone"
 MOD_LATEST_FIELD_VALUE_AUTHORS_BY_ME="Added or modified by me"
 MOD_LATEST_FIELD_VALUE_AUTHORS_NOT_BY_ME="Not added or modified by me"
