--- a/package/administrator/language/vn-VN/plg_fields_text.ini
+++ b/package/administrator/language/vn-VN/plg_fields_text.ini
@@ -4,8 +4,8 @@
 ; Note : All ini files need to be saved as UTF-8
 
 PLG_FIELDS_TEXT="Fields - Text"
-PLG_FIELDS_TEXT_LABEL="Text (%s)"
+PLG_FIELDS_TEXT_LABEL="%s - Văn bản"
 PLG_FIELDS_TEXT_PARAMS_FILTER_LABEL="Filter"
-PLG_FIELDS_TEXT_PARAMS_MAXLENGTH_LABEL="Maximum Length (characters)"
+PLG_FIELDS_TEXT_PARAMS_MAXLENGTH_LABEL="Maximum Length (characters) - Đặt giới hạn số ký tự tối đa cho phép"
 PLG_FIELDS_TEXT_XML_DESCRIPTION="This plugin lets create new fields of type 'Text' in the extensions where custom fields are implemented."
 
