--- a/package/administrator/language/vn-VN/plg_fields_usergrouplist.ini
+++ b/package/administrator/language/vn-VN/plg_fields_usergrouplist.ini
@@ -5,8 +5,8 @@
 
 PLG_FIELDS_USERGROUPLIST="Fields - Usergrouplist"
 PLG_FIELDS_USERGROUPLIST_DEFAULT_VALUE_DESC="A comma separated list of user group ids."
-PLG_FIELDS_USERGROUPLIST_DEFAULT_VALUE_LABEL="Default User Groups"
-PLG_FIELDS_USERGROUPLIST_LABEL="Usergrouplist"
-PLG_FIELDS_USERGROUPLIST_PARAMS_MULTIPLE_LABEL="Multiple"
+PLG_FIELDS_USERGROUPLIST_DEFAULT_VALUE_LABEL="Default User Groups - Chọn sẵn phân nhóm thành viên"
+PLG_FIELDS_USERGROUPLIST_LABEL="%s - Phân nhóm thành viên"
+PLG_FIELDS_USERGROUPLIST_PARAMS_MULTIPLE_LABEL="Multiple - Chọn nhiều cùng lúc"
 PLG_FIELDS_USERGROUPLIST_XML_DESCRIPTION="This plugin lets create new fields of type 'Usergrouplist' in the extensions where custom fields are implemented."
 
