--- a/package/administrator/language/vn-VN/plg_user_profile.ini
+++ b/package/administrator/language/vn-VN/plg_user_profile.ini
@@ -3,7 +3,7 @@
 ; License GNU General Public License version 2 or later; see LICENSE.txt
 ; Note : All ini files need to be saved as UTF-8
 
-COM_CONTENT_SELECT_AN_ARTICLE="Select an Article"
+COM_CONTENT_SELECT_AN_ARTICLE="Chọn 1 tin bài"
 PLG_USER_PROFILE="User - Profile"
 PLG_USER_PROFILE_ERROR_INVALID_DOB="The date of birth you entered is invalid. Please enter a valid date."
 PLG_USER_PROFILE_ERROR_INVALID_DOB_FUTURE_DATE="The date of birth you entered is in the future."
