--- a/package/administrator/language/vn-VN/tpl_atum.ini
+++ b/package/administrator/language/vn-VN/tpl_atum.ini
@@ -18,9 +18,9 @@ TPL_ATUM_IMAGE_LABEL="Image"
 TPL_ATUM_IMAGE_SETTINGS_LABEL="Image Settings"
 TPL_ATUM_LOGIN_LOGO_LABEL="Login Logo"
 TPL_ATUM_LOGIN_SIDEBAR_VIEW_WEBSITE="View website"
-TPL_ATUM_LOGO_ALT_EMPTY_DESC="Decorative Image - no description required"
-TPL_ATUM_LOGO_ALT_EMPTY_LABEL="No Description"
-TPL_ATUM_LOGO_ALT_LABEL="Image Description (Alt Text)"
+TPL_ATUM_LOGO_ALT_EMPTY_DESC="Trong một số trường hợp bạn không muốn chèn thuộc tính Alt html với dòng Alt text - mô tả ảnh vào, click chọn vào đây."
+TPL_ATUM_LOGO_ALT_EMPTY_LABEL="Ngừng thuộc tính Alt mô tả ảnh"
+TPL_ATUM_LOGO_ALT_LABEL="Alt text (Mô tả Ảnh - alt trong code html img)"
 TPL_ATUM_MORE_ELEMENTS="More Elements"
 TPL_ATUM_SITE_LOGO_LABEL="Brand Large"
 TPL_ATUM_SITE_LOGO_SMALL_LABEL="Brand Small"
