--- a/package/administrator/language/vn-VN/com_admin.ini
+++ b/package/administrator/language/vn-VN/com_admin.ini
@@ -4,7 +4,7 @@
 ; Note : All ini files need to be saved as UTF-8
 
 COM_ADMIN="System Information"
-COM_ADMIN_A11Y_SETTINGS_FIELDSET_LABEL="Accessibility Settings"
+COM_ADMIN_A11Y_SETTINGS_FIELDSET_LABEL="Cài đặt trợ năng"
 COM_ADMIN_A11Y_SETTINGS_FIELD_CONTRAST="High Contrast"
 COM_ADMIN_A11Y_SETTINGS_FIELD_FONTSIZE="Increase Font Size"
 COM_ADMIN_A11Y_SETTINGS_FIELD_HIGHLIGHT="Highlight Links"
