--- a/package/administrator/language/vn-VN/com_cache.ini
+++ b/package/administrator/language/vn-VN/com_cache.ini
@@ -4,7 +4,7 @@
 ; Note : All ini files need to be saved as UTF-8
 
 COM_CACHE="Return to Cache"
-COM_CACHE_CLEAR_CACHE="Maintenance: Clear Cache"
+COM_CACHE_CLEAR_CACHE="Xem và làm sạch Cache"
 COM_CACHE_CONFIGURATION="Cache: Options"
 COM_CACHE_EMPTYSTATE_CONTENT="If you enable caching in Joomla Global Configuration, then any cached items will be displayed here."
 COM_CACHE_EMPTYSTATE_TITLE="You have no cached content."
@@ -25,15 +25,16 @@ COM_CACHE_HEADING_SIZE_ASC="Size ascending"
 COM_CACHE_HEADING_SIZE_DESC="Size descending"
 COM_CACHE_MSG_ALL_CACHE_GROUPS_CLEARED="All cache group(s) have been cleared."
 COM_CACHE_MSG_SOME_CACHE_GROUPS_CLEARED="Only some cache group(s) have been cleared."
-COM_CACHE_NUMBER_OF_FILES="Number of Files"
-COM_CACHE_PURGE_EXPIRED="Clear expired items"
+COM_CACHE_NUMBER_OF_FILES="Số file cache được tạo"
+COM_CACHE_PURGE_EXPIRED="Làm sạch Cache bị quá hạn"
 COM_CACHE_PURGE_EXPIRED_ITEMS="Clear expired items"
-COM_CACHE_PURGE_INSTRUCTIONS="Select the Clear Expired Cache button in the toolbar to delete all expired cache files. Note: Cache files that are still current will not be deleted."
+COM_CACHE_PURGE_INSTRUCTIONS="Cache là các file html tĩnh của một đường dẫn url trên web, được lưu lại từ trang web hiển thị cho người xem. Hệ thống sẽ kiểm tra xem đường dẫn đó đã file cache chưa, nếu chưa hệ thống sẽ chạy toàn bộ chu trình (chạy các chức năng, truy vấn dữ liệu từ Database, xử lý dữ liệu...) rồi hiển thị cho người xem, sau đó hệ thống sẽ lưu lại trang html đã hiển thị cho người xem thành file cache.<br /> Nếu đường dẫn đó đã có file cache, hệ thống sẽ lấy ngay file cache tương ứng để hiển thị, không cần phải chạy lại toàn bộ chu trình nữa nên sẽ rất nhanh, tuy vậy các dữ liệu đã thay đổi trên Database lại không tác động tới file Cache. Để cập nhật mới lại dữ liệu từ Database vào file cache, hãy xoá những file cache đi, hoặc chọn và xoá các file cache bị quá hạn cho phép.
+"
 COM_CACHE_QUICKICON_SRONLY="Cache: Size of cache is %s."
 COM_CACHE_QUICKICON_SRONLY_NOCACHE="Cache is not enabled."
 COM_CACHE_RESOURCE_INTENSIVE_WARNING="This can be resource intensive on sites with a large number of items!"
 COM_CACHE_SELECT_CLIENT="- Select Location -"
-COM_CACHE_SIZE="- Select Location -"
+COM_CACHE_SIZE="Dung lượng"
 COM_CACHE_TABLE_CAPTION="Table of Cached Files"
 COM_CACHE_XML_DESCRIPTION="Component for cache management."
 
