--- a/package/administrator/language/vn-VN/com_categories.ini
+++ b/package/administrator/language/vn-VN/com_categories.ini
@@ -20,16 +20,16 @@ COM_CATEGORIES_EDIT_CATEGORY="Edit Category"
 COM_CATEGORIES_EMPTYSTATE_BUTTON_ADD="Add a category"
 COM_CATEGORIES_EMPTYSTATE_CONTENT="There are currently no categories for this extension."
 COM_CATEGORIES_ERROR_ALL_LANGUAGE_ASSOCIATED="A category item set to All languages can't be associated. Associations have not been set."
-COM_CATEGORIES_FIELD_BASIC_LABEL="Options"
-COM_CATEGORIES_FIELD_IMAGE_ALT_EMPTY_DESC="Decorative Image - no description required"
-COM_CATEGORIES_FIELD_IMAGE_ALT_EMPTY_LABEL="No Description"
-COM_CATEGORIES_FIELD_IMAGE_ALT_LABEL="Image Description (Alt Text)"
-COM_CATEGORIES_FIELD_IMAGE_LABEL="Image"
+COM_CATEGORIES_FIELD_BASIC_LABEL="Thiết lập bổ sung cho Danh Mục"
+COM_CATEGORIES_FIELD_IMAGE_ALT_EMPTY_DESC="Trong một số trường hợp bạn không muốn chèn thuộc tính Alt html với dòng Alt text - mô tả ảnh vào, click chọn vào đây."
+COM_CATEGORIES_FIELD_IMAGE_ALT_EMPTY_LABEL="Ngừng thuộc tính Alt mô tả ảnh"
+COM_CATEGORIES_FIELD_IMAGE_ALT_LABEL="Alt text (Mô tả Ảnh - alt trong code html img)"
+COM_CATEGORIES_FIELD_IMAGE_LABEL="Bổ sung Hình Ảnh cho Danh mục (nếu cần)"
 COM_CATEGORIES_FIELD_NOTE_LABEL="Ghi chú riêng cho admin"
 COM_CATEGORIES_FIELD_PARENT_LABEL="Xếp làm danh mục con của"
 COM_CATEGORIES_FIELDSET_DETAILS="Category Details"
 COM_CATEGORIES_FIELDSET_PUBLISHING="Permissions"
-COM_CATEGORIES_FIELDSET_RULES="Permissions"
+COM_CATEGORIES_FIELDSET_RULES="Phân quyền"
 COM_CATEGORIES_FILTER_SEARCH_DESC="Search in title, alias and note. Prefix with ID: to search for a category ID."
 COM_CATEGORIES_FILTER_SEARCH_LABEL="Search Categories"
 COM_CATEGORIES_FORM_TITLE_EDIT="Edit Category"
@@ -65,7 +65,7 @@ COM_CATEGORIES_PATH_LABEL="Category Path"
 COM_CATEGORIES_REBUILD_FAILURE="Failed rebuilding Categories tree data."
 COM_CATEGORIES_REBUILD_SUCCESS="Categories tree data successfully rebuilt."
 COM_CATEGORIES_SAVE_SUCCESS="Category successfully saved."
-COM_CATEGORIES_SELECT_A_CATEGORY="Select a Category"
+COM_CATEGORIES_SELECT_A_CATEGORY="Chọn một Danh Mục"
 COM_CATEGORIES_TABLE_CAPTION="Table of Categories"
 COM_CATEGORIES_TIP_ASSOCIATION="Associated categories"
 COM_CATEGORIES_XML_DESCRIPTION="This component manages categories."
@@ -76,5 +76,5 @@ COM_CATEGORY_COUNT_UNPUBLISHED_ITEMS="Unpublished items"
 COM_CATEGORY_HEADING_ASSOCIATION="Association"
 JGLOBAL_NO_ITEM_SELECTED="No categories selected."
 JLIB_HTML_ACCESS_SUMMARY_DESC="Shown below is an overview of the permission settings for this category. Select the tabs above to customize these settings by action."
-JLIB_RULES_SETTING_NOTES_ITEM="Changes apply to this category and all child categories.<br><em><strong>Inherited</strong></em> - a Global Configuration setting or higher level setting is applied.<br><em><strong>Denied</strong></em> always wins - whatever is set at the Global or higher level and applies to all child elements.<br><em><strong>Allowed</strong></em> will enable the action for this component unless overruled by a Global Configuration setting."
+JLIB_RULES_SETTING_NOTES_ITEM="Các Phân Quyền tại đây tác động cho Danh mục và các Danh mục con bên trong.<br><em><strong>Inherited</strong></em> - Thừa hưởng - tức là giá trị hiện tại áp dụng sẽ được lấy động từ cấp cao hơn. Nếu tất cả các cấp cao hơn đều là Inherited, hệ thống sẽ lấy giá trị sau cùng tại Cấu hình hệ thống.<br><em><strong>Denied</strong></em> Từ chối quyền - không cho phép. Lựa chọn này cũng tác động làm tất cả các cấp sâu hơn bên dưới cũng bị từ chối quyền (không cho phép) dù có chọn gì đi nữa.<br><em><strong>Allowed</strong></em> Cho phép. Lựa chọn này sẽ cho phép (bật quyền) cho cho hành động tương ứng."
 
