--- a/package/administrator/language/vn-VN/com_checkin.ini
+++ b/package/administrator/language/vn-VN/com_checkin.ini
@@ -12,7 +12,7 @@ COM_CHECKIN_EMPTYSTATE_CONTENT="There are no tables with checked out items."
 COM_CHECKIN_FILTER_SEARCH_DESC="Search table."
 COM_CHECKIN_FILTER_SEARCH_LABEL="Search Database Tables"
 COM_CHECKIN_GLOBAL_CHECK_IN="Maintenance: Global Check-in"
-COM_CHECKIN_ITEMS_TO_CHECK_IN="Items to check-in"
+COM_CHECKIN_ITEMS_TO_CHECK_IN="Số thành phần đang bị khoá"
 COM_CHECKIN_ITEMS_TO_CHECK_IN_ASC="Items to check-in ascending"
 COM_CHECKIN_ITEMS_TO_CHECK_IN_DESC="Items to check-in descending"
 COM_CHECKIN_N_ITEMS_CHECKED_IN_ONE="Item checked in."
