--- a/package/administrator/language/vn-VN/com_config.ini
+++ b/package/administrator/language/vn-VN/com_config.ini
@@ -38,7 +38,7 @@ COM_CONFIG_ERROR_UNKNOWN_BEFORE_SAVING="A plugin reported an unknown error befor
 COM_CONFIG_ERROR_WRITE_FAILED="Could not write to the configuration file"
 COM_CONFIG_FIELD_BODY_LABEL="Body"
 COM_CONFIG_FIELD_CACHE_HANDLER_LABEL="Cache Handler"
-COM_CONFIG_FIELD_CACHE_LABEL="System Cache"
+COM_CONFIG_FIELD_CACHE_LABEL="Kích hoạt chức năng Cache"
 COM_CONFIG_FIELD_CACHE_PATH_LABEL="Path to Cache Folder"
 COM_CONFIG_FIELD_CACHE_PLATFORMPREFIX_LABEL="Platform Specific Caching"
 COM_CONFIG_FIELD_CACHE_TIME_LABEL="Cache Time (minutes)"
@@ -67,11 +67,11 @@ COM_CONFIG_FIELD_DEBUG_CONST_LANG_LABEL="Language Display"
 COM_CONFIG_FIELD_DEBUG_LANG_LABEL="Debug Language"
 COM_CONFIG_FIELD_DEBUG_SYSTEM_LABEL="Debug System"
 COM_CONFIG_FIELD_DEBUG_VALUE="Value"
-COM_CONFIG_FIELD_DEFAULT_ACCESS_LEVEL_LABEL="Default Access Level"
-COM_CONFIG_FIELD_DEFAULT_CAPTCHA_LABEL="Default Captcha"
-COM_CONFIG_FIELD_DEFAULT_EDITOR_LABEL="Default Editor"
-COM_CONFIG_FIELD_DEFAULT_FEED_LIMIT_LABEL="Default Feed Limit"
-COM_CONFIG_FIELD_DEFAULT_LIST_LIMIT_LABEL="Default List Limit"
+COM_CONFIG_FIELD_DEFAULT_ACCESS_LEVEL_LABEL="Phân nhóm truy cập, chọn sẵn trong field Phân nhóm truy cập"
+COM_CONFIG_FIELD_DEFAULT_CAPTCHA_LABEL="Áp dụng Captcha trên toàn web"
+COM_CONFIG_FIELD_DEFAULT_EDITOR_LABEL="Trình soạn thảo mặc định (Editor) cho toàn web"
+COM_CONFIG_FIELD_DEFAULT_FEED_LIMIT_LABEL="Số feed mặc định hiển thị"
+COM_CONFIG_FIELD_DEFAULT_LIST_LIMIT_LABEL="Số tin bài, dữ liệu hiển thị trong mỗi phân trang"
 COM_CONFIG_FIELD_ERROR_REPORTING_LABEL="Error Reporting"
 COM_CONFIG_FIELD_FEED_EMAIL_LABEL="Feed Email Address"
 COM_CONFIG_FIELD_FILESYSTEM_PATH_DESC="The filesystem path where session data will be stored.<br>If empty, the system's temporary directory will be used."
@@ -83,9 +83,9 @@ COM_CONFIG_FIELD_FILTERS_NO_HTML="No HTML"
 COM_CONFIG_FIELD_FILTERS_ALLOWED_LIST="Allowed List"
 COM_CONFIG_FIELD_FLOC_BLOCKER_DESC="Send a header to not support the tracking through the FLoC method."
 COM_CONFIG_FIELD_FLOC_BLOCKER_LABEL="Block FLoC"
-COM_CONFIG_FIELD_FORCE_SSL_LABEL="Force HTTPS"
+COM_CONFIG_FIELD_FORCE_SSL_LABEL="Bật HTTPS"
 COM_CONFIG_FIELD_FORCE_SSL_DESC="HTTPS must be enabled on your server or load balancer to utilize this option. Enable 'Behind Load Balancer' if your SSL terminates on your load balancer but your site is served on http on its webserver."
-COM_CONFIG_FIELD_GZIP_COMPRESSION_LABEL="Gzip Page Compression"
+COM_CONFIG_FIELD_GZIP_COMPRESSION_LABEL="Bật chế độ nén Gzip trang html"
 COM_CONFIG_FIELD_HTMLBODY_LABEL="HTML Body"
 COM_CONFIG_FIELD_LOADBALANCER_ENABLE_DESC="If your site is behind a load balancer or reverse proxy, enable this setting so that IP addresses and other configurations within Joomla automatically take this into account."
 COM_CONFIG_FIELD_LOADBALANCER_ENABLE_LABEL="Behind Load Balancer"
@@ -127,8 +127,8 @@ COM_CONFIG_FIELD_MEMCACHE_HOST_LABEL="Memcache(d) Server Host"
 COM_CONFIG_FIELD_MEMCACHE_PERSISTENT_LABEL="Persistent Memcache(d)"
 COM_CONFIG_FIELD_MEMCACHE_PORT_LABEL="Memcache(d) Server Port"
 COM_CONFIG_FIELD_METAAUTHOR_LABEL="Author Meta Tag"
-COM_CONFIG_FIELD_METADESC_LABEL="Site Meta Description"
-COM_CONFIG_FIELD_METAVERSION_LABEL="Joomla Version"
+COM_CONFIG_FIELD_METADESC_LABEL="Meta Description mặc định áp dụng (nên để trống ô này)"
+COM_CONFIG_FIELD_METAVERSION_LABEL="Hiện kèm phiên bản hệ thống (Version)"
 COM_CONFIG_FIELD_OFFLINE_IMAGE_LABEL="Offline Image"
 COM_CONFIG_FIELD_OFFLINE_MESSAGE_LABEL="Custom Message"
 COM_CONFIG_FIELD_PROXY_ENABLE_LABEL="Enable Proxy"
@@ -142,10 +142,11 @@ COM_CONFIG_FIELD_REDIS_HOST_LABEL="Redis Server Host"
 COM_CONFIG_FIELD_REDIS_PERSISTENT_LABEL="Persistent Redis"
 COM_CONFIG_FIELD_REDIS_PORT_DESC="Port discarded if connecting to Redis server over Unix sockets."
 COM_CONFIG_FIELD_REDIS_PORT_LABEL="Redis Server Port"
-COM_CONFIG_FIELD_SEF_REWRITE_DESC="Apache: Rename htaccess.txt to .htaccess<br>IIS: Rename web.config.txt to web.config"
-COM_CONFIG_FIELD_SEF_REWRITE_LABEL="Use URL Rewriting"
-COM_CONFIG_FIELD_SEF_SUFFIX_LABEL="Adds Suffix to URL"
-COM_CONFIG_FIELD_SEF_URL_LABEL="Search Engine Friendly URLs"
+COM_CONFIG_FIELD_SEF_REWRITE_DESC="Chức năng này hỗ trợ loại bỏ index.php khỏi url. Lưu ý, <strong>TRƯỚC KHI BẬT BẠN CẦN THỰC HIỆN</strong> truy cập vào quản lý file trên server, đổi tên file lại như sau:<br />
+Server dạng Apache (Linux): Đổi tên file từ htaccess.txt thành .htaccess<br>Server IIS (Windows): Đổi tên file web.config.txt thành web.config. Lưu lại và xem thử website Frontend, nếu có lỗi tắt tính năng này đi."
+COM_CONFIG_FIELD_SEF_REWRITE_LABEL="Sử dụng URL Rewriting (giúp cắt bớt index.php khỏi đường dẫn url)"
+COM_CONFIG_FIELD_SEF_SUFFIX_LABEL="Suffix to URL - Thêm tên định dạng vào cuối url. Mô tả: thêm .html vào các nội dung web, .xml vào các dữ liệu xuất dưới dạng xml..."
+COM_CONFIG_FIELD_SEF_URL_LABEL="Bật tính năng tạo URL đường dẫn thân thiện"
 COM_CONFIG_FIELD_SERVER_TIMEZONE_LABEL="Website Time Zone"
 COM_CONFIG_FIELD_SESSION_HANDLER_LABEL="Session Handler"
 COM_CONFIG_FIELD_SESSION_METADATA_DESC="If enabled, additional metadata about a user's session (including their username, user ID, and which application they are logged into) will be logged to the session database table.<br>If disabled, features dependent on this data will be unavailable."
@@ -154,12 +155,12 @@ COM_CONFIG_FIELD_SESSION_TIME_LABEL="Session Lifetime (minutes)"
 COM_CONFIG_FIELD_SHARED_SESSION_DESC="When enabled, a user's session is shared between the frontend and administrator sections of the site. Note that changing this value will invalidate all existing sessions on the site. This is not available when the \"Force HTTPS\" option is set to \"Administrator Only\"."
 COM_CONFIG_FIELD_SHARED_SESSION_LABEL="Shared Sessions"
 COM_CONFIG_FIELD_SITE_DISPLAY_MESSAGE_LABEL="Offline Message"
-COM_CONFIG_FIELD_SITE_NAME_LABEL="Site Name"
-COM_CONFIG_FIELD_SITE_OFFLINE_LABEL="Site Offline"
-COM_CONFIG_FIELD_SITENAME_PAGETITLES_LABEL="Include Site Name in Page Titles"
+COM_CONFIG_FIELD_SITE_NAME_LABEL="Tên trang web"
+COM_CONFIG_FIELD_SITE_OFFLINE_LABEL="Site Offline - Kích hoạt chế độ khoá toàn bộ website, ngăn chặn mọi truy cập (tất cả chỉ hiện form đăng nhập)"
+COM_CONFIG_FIELD_SITENAME_PAGETITLES_LABEL="Thêm tên trang web vào sau mọi tiêu đề title (code html) của từng trang bất kỳ trên Site"
 COM_CONFIG_FIELD_SUBJECT_LABEL="Subject"
 COM_CONFIG_FIELD_TEMP_PATH_LABEL="Path to Temp Folder"
-COM_CONFIG_FIELD_UNICODESLUGS_LABEL="Unicode Aliases"
+COM_CONFIG_FIELD_UNICODESLUGS_LABEL="Chấp nhận các ký tự Unicode (bao gồm các chữ tiếng Việt) trên đường dẫn"
 COM_CONFIG_FIELD_VALUE_ADMINISTRATOR_ONLY="Administrator Only"
 COM_CONFIG_FIELD_VALUE_AFTER="After"
 COM_CONFIG_FIELD_VALUE_AUTHOR_EMAIL="Before"
@@ -188,10 +189,10 @@ COM_CONFIG_FIELD_WEBSERVICES_CORS_ALLOW_METHODS_DESC="Specifies the webservice m
 COM_CONFIG_FIELD_WEBSERVICES_CORS_ALLOW_ORIGIN_DESC="Specifies the origin allowed to access webservices on this site,sent back in response to a preflight request. Default: * (=all)."
 COM_CONFIG_FIELDSET_TAGS_LABEL="Tags"
 COM_CONFIG_FILTER_OPTION_SELECT_EXTENSION="- Select Extension -"
-COM_CONFIG_FRONTEDITING_LABEL="Frontend Editing"
-COM_CONFIG_FRONTEDITING_MENUSANDMODULES="Modules & Menus"
-COM_CONFIG_FRONTEDITING_MODULES="Modules"
-COM_CONFIG_GLOBAL_CONFIGURATION="Global Configuration"
+COM_CONFIG_FRONTEDITING_LABEL="Hiện Nút chỉnh sửa module khi xem Site Frontend (chỉ áp dụng cho tài khoản đăng nhập có quyền tương ứng)"
+COM_CONFIG_FRONTEDITING_MENUSANDMODULES="Cả Module và Menu"
+COM_CONFIG_FRONTEDITING_MODULES="Chỉ Module"
+COM_CONFIG_GLOBAL_CONFIGURATION="Cấu hình hệ thống"
 COM_CONFIG_HEADING_COMPONENT="Component"
 COM_CONFIG_HEADING_DESCRIPTION="Enter a description of the overall website that is to be used by search engines. Generally, a maximum of 20 words is optimal."
 COM_CONFIG_HEADING_LANUAGES="Languages"
@@ -207,7 +208,7 @@ COM_CONFIG_PAGE_EDIT_MAIL="Global Configuration: Edit Mail Template"
 COM_CONFIG_PERMISSION_SETTINGS="Permissions"
 COM_CONFIG_PERMISSIONS="Permissions"
 COM_CONFIG_PROXY_SETTINGS="Proxy"
-COM_CONFIG_SAVE_SUCCESS="Configuration successfully saved."
+COM_CONFIG_SAVE_SUCCESS="Đã cập nhật thành công."
 COM_CONFIG_SENDMAIL_ACTION_BUTTON="Send Test Mail"
 COM_CONFIG_SENDMAIL_BODY="This is a test mail sent using \"{METHOD}\". Your email settings are correct!"
 COM_CONFIG_SENDMAIL_ERROR="Test mail could not be sent."
@@ -217,12 +218,12 @@ COM_CONFIG_SENDMAIL_METHOD_SMTP="SMTP"
 COM_CONFIG_SENDMAIL_SUBJECT="Test mail from {SITENAME}"
 COM_CONFIG_SENDMAIL_SUCCESS="The email was sent successfully to <strong>%s</strong> using <strong>%s</strong>. You should check that you've received the test email."
 COM_CONFIG_SENDMAIL_SUCCESS_FALLBACK="The email was sent successfully to <strong>%s</strong> but using <strong>%s</strong> as fallback. You should check that you've received the test email."
-COM_CONFIG_SEO_SETTINGS="SEO"
+COM_CONFIG_SEO_SETTINGS="Tối ưu URL thân thiện (cần cho SEO)"
 COM_CONFIG_SERVER="Server"
 COM_CONFIG_SERVER_SETTINGS="Server"
 COM_CONFIG_SESSION_SETTINGS="Session"
 COM_CONFIG_SITE_SETTINGS="Site"
-COM_CONFIG_SYSTEM="System"
+COM_CONFIG_SYSTEM="Hệ thống"
 COM_CONFIG_SYSTEM_SETTINGS="System"
 COM_CONFIG_TEXT_FILTER_SETTINGS="Text Filters"
 COM_CONFIG_TEXT_FILTERS="Text Filters"
