--- a/package/administrator/language/vn-VN/com_content.ini
+++ b/package/administrator/language/vn-VN/com_content.ini
@@ -3,42 +3,43 @@
 ; License GNU General Public License version 2 or later; see LICENSE.txt
 ; Note : All ini files need to be saved as UTF-8
 
-COM_CONTENT="Bài viết"
+COM_CONTENT="Tin - Bài"
 COM_CONTENT_ADD_NEW_MENU_ITEM="New Menu Item"
 COM_CONTENT_ARTICLE_CONTENT="Tab nội dung chính"
 COM_CONTENT_ARTICLES_TABLE_CAPTION="Table of Articles"
-COM_CONTENT_ARTICLES_TITLE="Bài viết"
+COM_CONTENT_ARTICLES_TITLE="Tin - Bài"
 COM_CONTENT_ATTRIBS_ARTICLE_SETTINGS_LABEL="Options"
-COM_CONTENT_ATTRIBS_FIELDSET_LABEL="Thiết lập bổ sung"
+COM_CONTENT_ATTRIBS_FIELDSET_LABEL="Hiển thị trong mỗi Tin Bài"
 COM_CONTENT_BATCH_OPTIONS="Batch process the selected articles"
 COM_CONTENT_BATCH_TIP="If a category is selected for move/copy, any actions selected will be applied to the copied or moved articles. Otherwise, all actions are applied to the selected articles."
 COM_CONTENT_CHANGE_STAGE="Change stage"
 COM_CONTENT_CHANGE_STAGE_AMBIGUOUS_TRANSITIONS="Some transitions are ambiguous for this condition. Please select your preferred transition and proceed."
-COM_CONTENT_CONFIG_ARTICLE_SETTINGS_DESC="These settings apply for article layouts unless they are changed for a specific menu item."
-COM_CONTENT_CONFIG_BLOG_SETTINGS_DESC="These settings apply for blog or featured layouts unless they are changed for a specific menu item."
-COM_CONTENT_CONFIG_BLOG_SETTINGS_LABEL="Blog/Featured Layouts"
-COM_CONTENT_CONFIG_CATEGORIES_SETTINGS_DESC="These settings apply for Articles Categories Options, unless they are changed by the individual category or menu settings."
-COM_CONTENT_CONFIG_CATEGORY_SETTINGS_DESC="These settings apply for Articles Category Options unless they are changed by the individual category or menu settings."
-COM_CONTENT_CONFIG_EDITOR_LAYOUT="These options control the layout of the article editing page."
-COM_CONTENT_CONFIG_INTEGRATION_SETTINGS_DESC="These settings determine how the Article Component will integrate with other extensions."
-COM_CONTENT_CONFIG_LIST_SETTINGS_DESC="These settings apply for List Layouts Options unless they are changed for a specific menu item or category."
-COM_CONTENT_CONFIGURATION="Articles: Options"
+COM_CONTENT_CONFIG_ARTICLE_SETTINGS_DESC="Thiết lập Cấu hình chung cho hiển thị Tin - Bài viết."
+COM_CONTENT_CONFIG_BLOG_SETTINGS_DESC="Thiết lập Cấu hình chung cho Danh Mục hiển thị kiểu Blog hoặc Featured.  Bạn có thể điều chỉnh lại các thiết lập riêng tại Menu có điểm kết nối kiểu: Danh mục - kiểu tin (blog), hoặc Bài viết được đánh dấu Featured "
+COM_CONTENT_CONFIG_BLOG_SETTINGS_LABEL="Bố cục Blog/Featured"
+COM_CONTENT_CONFIG_CATEGORIES_SETTINGS_DESC="Các thiết lập chung cho phần Danh Mục cha với các thiển thị chỉ bao gồm danh sách các danh mục con (không hiển thị bài viết). Bạn có thể điều chỉnh lại các thiết lập riêng tại Menu có điểm kết nối dạng: Hiển thị Danh sách tất cả Danh mục."
+COM_CONTENT_CONFIG_CATEGORY_SETTINGS_DESC="Các thiết lập chung cho Danh Mục bài viết (dạng Blog hoặc dạng Bảng). Bạn có thể điều chỉnh lại các thiết lập riêng cho từng Danh Mục ở các điều chỉnh Menu tương ứng (Menu danh mục kiểu Blog, hoặc Menu Danh mục kiểu Bảng - Table)."
+COM_CONTENT_CONFIG_EDITOR_LAYOUT="Các thiết lập tại đây tác động đến form soạn thảo đăng (chỉnh sửa) bài viết. Bạn có thể bỏ bớt/thêm các tính năng trên form soạn thảo bài viết."
+COM_CONTENT_CONFIG_INTEGRATION_SETTINGS_DESC="Cấu hình chung các chức năng tích hợp cùng bài viết."
+COM_CONTENT_CONFIG_LIST_SETTINGS_DESC="
+Thiết lập Cấu hình chung cho Danh Mục hiển thị kiểu Bảng - Table. Bạn có thể điều chỉnh lại các thiết lập riêng tại Menu có điểm kết nối kiểu: Danh mục - kiểu bảng (table)"
+COM_CONTENT_CONFIGURATION="Cấu hình chung Tin - Bài"
 COM_CONTENT_CREATE_ARTICLE_CANCEL_REDIRECT_MENU_DESC="Select the page the user will be redirected to after Canceling article submission. The default is to redirect to the same article submission page (cleaning form)."
-COM_CONTENT_CREATE_ARTICLE_CANCEL_REDIRECT_MENU_LABEL="Cancel Redirect"
-COM_CONTENT_CREATE_ARTICLE_CATEGORY_LABEL="Specific Category"
+COM_CONTENT_CREATE_ARTICLE_CANCEL_REDIRECT_MENU_LABEL="Chọn menu sẽ mở ra khi bấm Canel"
+COM_CONTENT_CREATE_ARTICLE_CATEGORY_LABEL="Chỉ định sẵn Danh mục để lưu Tin bài"
 COM_CONTENT_CREATE_ARTICLE_CUSTOM_CANCEL_REDIRECT_DESC="If set to 'Yes', you can set a redirection page, distinct from above 'Submission/Cancel Redirect', to redirect to when user Cancels article submission.<br>If set to 'No', when user Cancels article submission, the user is redirected to the above 'Submission/Cancel Redirect' page."
-COM_CONTENT_CREATE_ARTICLE_CUSTOM_CANCEL_REDIRECT_LABEL="Custom Redirect on Cancel"
+COM_CONTENT_CREATE_ARTICLE_CUSTOM_CANCEL_REDIRECT_LABEL="Khi bấm Cancel, có muốn mở menu nào khác không"
 COM_CONTENT_CREATE_ARTICLE_ERROR="Varsayılan kategori etkinleştirildiğinde, bir kategori seçilmelidir."
 COM_CONTENT_CREATE_ARTICLE_REDIRECTMENU_DESC="Select the page the user will be redirected to after a successful article submission. The default is to redirect to the home page."
-COM_CONTENT_CREATE_ARTICLE_REDIRECTMENU_LABEL="Submission Redirect"
+COM_CONTENT_CREATE_ARTICLE_REDIRECTMENU_LABEL="Chỉ định menu mở ra sau khi gửi tin bài thành công"
 COM_CONTENT_DASHBOARD_TITLE="Content Dashboard"
 COM_CONTENT_EDIT_ARTICLE="Edit Article"
 COM_CONTENT_EDIT_CATEGORY="Edit Category"
-COM_CONTENT_EDITING_LAYOUT="Editing Layout"
+COM_CONTENT_EDITING_LAYOUT="Soạn thảo"
 COM_CONTENT_EDITORCONFIG_FIELDSET_LABEL="Configure Edit Screen"
-COM_CONTENT_EMPTYSTATE_BUTTON_ADD="Add your first article"
-COM_CONTENT_EMPTYSTATE_CONTENT="Articles are the main content on most Joomla sites. You can use the Joomla Article Editor to create and manage your content."
-COM_CONTENT_EMPTYSTATE_TITLE="No Articles have been created yet."
+COM_CONTENT_EMPTYSTATE_BUTTON_ADD="Thêm bài viết mới"
+COM_CONTENT_EMPTYSTATE_CONTENT="Đây là nơi quản lý tất cả các tin / bài viết trên web. Hiện tại chưa có tin bài nào."
+COM_CONTENT_EMPTYSTATE_TITLE="Chưa có bài viết nào."
 COM_CONTENT_ERROR_ALL_LANGUAGE_ASSOCIATED="A content item set to All languages can't be associated. Associations have not been set."
 COM_CONTENT_ERROR_CANNOT_ARCHIVE="One or more of the selected articles can't be set to archived."
 COM_CONTENT_ERROR_CANNOT_PUBLISH="One or more of the selected articles can't be set to published."
@@ -46,36 +47,36 @@ COM_CONTENT_ERROR_CANNOT_TRASH="One or more of the selected articles can't be se
 COM_CONTENT_ERROR_CANNOT_UNPUBLISH="One or more of the selected articles can't be set to unpublished."
 COM_CONTENT_ERROR_UPDATE_STAGE="You cannot execute this transition and update the stage."
 COM_CONTENT_FEATURED_ARTICLES="Featured Articles"
-COM_CONTENT_FEATURED_CATEGORIES_LABEL="Select Categories"
-COM_CONTENT_FEATURED_ORDER="Featured Articles Order"
+COM_CONTENT_FEATURED_CATEGORIES_LABEL="Chọn Danh Mục"
+COM_CONTENT_FEATURED_ORDER="Sắp xếp chủ động Feature"
 COM_CONTENT_FEATURED_TABLE_CAPTION="Table of Featured Articles"
 COM_CONTENT_FEATURED_TITLE="Bài Feature"
 COM_CONTENT_FIELD_ARTICLETEXT_LABEL="Vùng soạn thảo nội dung"
 COM_CONTENT_FIELD_BROWSER_PAGE_TITLE_LABEL="Browser Page Title"
 COM_CONTENT_FIELD_CAPTCHA_LABEL="Allow Captcha on submit"
 COM_CONTENT_FIELD_CREATED_BY_ALIAS_LABEL="Created by Alias"
-COM_CONTENT_FIELD_CREATED_BY_LABEL="Created By"
-COM_CONTENT_FIELD_CREATED_LABEL="Created Date"
-COM_CONTENT_FIELD_FEATURED_DOWN_LABEL="Finish Featured"
-COM_CONTENT_FIELD_FEATURED_UP_LABEL="Start Featured"
+COM_CONTENT_FIELD_CREATED_BY_LABEL="Tác giả bài viết"
+COM_CONTENT_FIELD_CREATED_LABEL="Chỉ định lại ngày tạo"
+COM_CONTENT_FIELD_FEATURED_DOWN_LABEL="Hẹn thời gian gỡ bài khỏi Feature"
+COM_CONTENT_FIELD_FEATURED_UP_LABEL="Hẹn thời gian đánh dấu bài là Feature"
 COM_CONTENT_FIELD_FULL_LABEL="Hình hiển thị khi xem toàn bài"
 COM_CONTENT_FIELD_FULLTEXT="Full text"
-COM_CONTENT_FIELD_IMAGE_ALT_EMPTY_DESC="Decorative Image - no description required"
-COM_CONTENT_FIELD_IMAGE_ALT_EMPTY_LABEL="No Description"
-COM_CONTENT_FIELD_IMAGE_ALT_LABEL="Tạo mô tả cho ảnh (Alt Text)"
-COM_CONTENT_FIELD_IMAGE_CAPTION_LABEL="Caption"
+COM_CONTENT_FIELD_IMAGE_ALT_EMPTY_DESC="Trong một số trường hợp bạn không muốn chèn thuộc tính Alt html với dòng Mô tả Ảnh phía trên vào, click chọn vào đây."
+COM_CONTENT_FIELD_IMAGE_ALT_EMPTY_LABEL="Ngừng thuộc tính Alt mô tả ảnh"
+COM_CONTENT_FIELD_IMAGE_ALT_LABEL="Alt text (Mô tả Ảnh - Alt trong code html img)"
+COM_CONTENT_FIELD_IMAGE_CAPTION_LABEL="Caption - dòng mô tả hiện phía dưới ảnh khi xem tin bài"
 COM_CONTENT_FIELD_IMAGE_CLASS_LABEL="Thêm Class CSS cho ảnh"
 COM_CONTENT_FIELD_IMAGE_OPTIONS="Image Options"
-COM_CONTENT_FIELD_INFOBLOCK_POSITION_LABEL="Position of Article Info"
-COM_CONTENT_FIELD_INFOBLOCK_TITLE_LABEL="Article Info Title"
+COM_CONTENT_FIELD_INFOBLOCK_POSITION_LABEL="Vị trí thanh thông tin bài viết"
+COM_CONTENT_FIELD_INFOBLOCK_TITLE_LABEL="Tiêu đề thanh thông tin"
 COM_CONTENT_FIELD_INTRO_LABEL="Hình Intro"
 COM_CONTENT_FIELD_INTROTEXT="Intro Text"
 COM_CONTENT_FIELD_NOTE_LABEL="Ghi chú riêng cho admin"
-COM_CONTENT_FIELD_OPTION_ABOVE="Above"
-COM_CONTENT_FIELD_OPTION_BELOW="Below"
-COM_CONTENT_FIELD_OPTION_SPLIT="Split"
-COM_CONTENT_FIELD_PUBLISH_DOWN_LABEL="Finish Publishing"
-COM_CONTENT_FIELD_PUBLISH_UP_LABEL="Start Publishing"
+COM_CONTENT_FIELD_OPTION_ABOVE="Phía trên"
+COM_CONTENT_FIELD_OPTION_BELOW="Phía dưới"
+COM_CONTENT_FIELD_OPTION_SPLIT="Cả hai"
+COM_CONTENT_FIELD_PUBLISH_DOWN_LABEL="Hẹn thời gian Ngừng xuất bản"
+COM_CONTENT_FIELD_PUBLISH_UP_LABEL="Hẹn thời gian Đăng - Xuất bản"
 COM_CONTENT_FIELD_SELECT_ARTICLE_LABEL="Chọn bài viết để kết nối"
 COM_CONTENT_FIELD_SHOW_CAT_TAGS_LABEL="Tags"
 COM_CONTENT_FIELD_SHOW_TAGS_LABEL="Tags"
@@ -86,32 +87,32 @@ COM_CONTENT_FIELD_URLB_LINK_TEXT_LABEL="Link B Text"
 COM_CONTENT_FIELD_URLC_LABEL="Link C"
 COM_CONTENT_FIELD_URLC_LINK_TEXT_LABEL="Link C Text"
 COM_CONTENT_FIELD_URLS_OPTIONS="URL Options"
-COM_CONTENT_FIELD_URLSPOSITION_LABEL="Positioning of the Links"
+COM_CONTENT_FIELD_URLSPOSITION_LABEL="Vị trí của các khối Links liên kết"
 COM_CONTENT_FIELD_VALUE_USE_ARTICLE_SETTINGS="Use Article Settings"
 COM_CONTENT_FIELD_VERSION_LABEL="Revision"
 COM_CONTENT_FIELDS_ARTICLE_FIELD_ADD_TITLE="Articles: New Field"
 COM_CONTENT_FIELDS_ARTICLE_FIELD_EDIT_TITLE="Articles: Edit Field"
 COM_CONTENT_FIELDS_ARTICLE_FIELDS_TITLE="Articles: Fields"
 COM_CONTENT_FIELDS_TYPE_MODAL_ARTICLE="Article"
-COM_CONTENT_FIELDSET_PUBLISHING="Thêm chế độ công bố"
+COM_CONTENT_FIELDSET_PUBLISHING="Thêm thiết lập Đăng - Xuất bản"
 COM_CONTENT_FIELDSET_RULES="Permissions - Quyền hạn"
-COM_CONTENT_FIELDSET_URLS_AND_IMAGES="Thêm Links"
-COM_CONTENT_FILTER_FEATURED_NO="Unfeatured Articles"
-COM_CONTENT_FILTER_FEATURED_YES="Featured Articles"
-COM_CONTENT_FILTER_SEARCH_DESC="Search in title, alias and note. Prefix with ID: or AUTHOR: or CONTENT: to search for an article ID, article author or search in article content."
+COM_CONTENT_FIELDSET_URLS_AND_IMAGES="Khối Links liên kết"
+COM_CONTENT_FILTER_FEATURED_NO="Không đánh dấu Feature"
+COM_CONTENT_FILTER_FEATURED_YES="Có đánh dấu Feature"
+COM_CONTENT_FILTER_SEARCH_DESC="Tìm trên tiêu đề, alias, và ghi chú. Cú pháp nâng cao ID: từ_khoá ,  AUTHOR: từ_khoá, CONTENT: từ_khoá để tìm chính xác hơn."
 COM_CONTENT_FILTER_SEARCH_LABEL="Search Articles"
 COM_CONTENT_FORM_TITLE_EDIT="Edit Article"
 COM_CONTENT_FORM_TITLE_NEW="New Article"
 COM_CONTENT_HEADING_ASSOCIATION="Association"
-COM_CONTENT_HEADING_DATE_CREATED="Ngày viết bài"
+COM_CONTENT_HEADING_DATE_CREATED="Ngày tạo tin"
 COM_CONTENT_HEADING_DATE_MODIFIED="Date Modified"
 COM_CONTENT_HEADING_DATE_PUBLISH_DOWN="Finish Publishing"
 COM_CONTENT_HEADING_DATE_PUBLISH_UP="Start Publishing"
 COM_CONTENT_ID_LABEL="ID"
-COM_CONTENT_IMAGE_FULLTEXT_CLASS_LABEL="Full Text Image Class"
-COM_CONTENT_IMAGE_INTRO_CLASS_LABEL="Intro Image Class"
-COM_CONTENT_MODIFIED_ASC="Date Modified ascending"
-COM_CONTENT_MODIFIED_DESC="Date Modified descending"
+COM_CONTENT_IMAGE_FULLTEXT_CLASS_LABEL="Class Html CSS cho Hình ở nội dung đầy đủ"
+COM_CONTENT_IMAGE_INTRO_CLASS_LABEL="Class Html CSS cho Hình Intro"
+COM_CONTENT_MODIFIED_ASC="Sửa bài: mới sửa xếp sau"
+COM_CONTENT_MODIFIED_DESC="Sửa bài: mới sửa lên trước"
 COM_CONTENT_MONTH="Month"
 COM_CONTENT_N_ITEMS_ARCHIVED_ONE="Article archived."
 COM_CONTENT_N_ITEMS_ARCHIVED_OTHER="%s articles archived."
@@ -136,10 +137,10 @@ COM_CONTENT_N_QUICKICON_SRONLY_0="Articles: No article is available."
 COM_CONTENT_N_QUICKICON_SRONLY_ONE="Articles: One article is available."
 COM_CONTENT_N_QUICKICON_SRONLY_OTHER="Articles: %s articles are available."
 COM_CONTENT_NEW_ARTICLE="New Article"
-COM_CONTENT_NO_ARTICLES_LABEL="No Articles Message"
+COM_CONTENT_NO_ARTICLES_LABEL="Hiện dòng thông điệp khi Danh Mục chưa có viết nào"
 COM_CONTENT_NO_ITEM_SELECTED="Please first make a selection from the list."
-COM_CONTENT_NUMBER_CATEGORY_ITEMS_LABEL="# Articles in Category"
-COM_CONTENT_OTHER_OPTIONS="Options"
+COM_CONTENT_NUMBER_CATEGORY_ITEMS_LABEL="Hiện tổng số bài viết trong mỗi Danh Mục con"
+COM_CONTENT_OTHER_OPTIONS="Thiết lập thêm"
 COM_CONTENT_PAGE_ADD_ARTICLE="Thêm bài viết mới"
 COM_CONTENT_PAGE_EDIT_ARTICLE="Chỉnh sửa bài viết"
 COM_CONTENT_PAGE_VIEW_ARTICLE="Articles: View"
@@ -147,26 +148,26 @@ COM_CONTENT_PAGEBREAK_DOC_TITLE="Page Break"
 COM_CONTENT_PAGEBREAK_INSERT_BUTTON="Insert Page Break"
 COM_CONTENT_PAGEBREAK_TITLE="Page Title"
 COM_CONTENT_PAGEBREAK_TOC="Table of Contents Alias"
-COM_CONTENT_PUBLISH_DOWN_ASC="Finish Publishing ascending"
-COM_CONTENT_PUBLISH_DOWN_DESC="Finish Publishing descending"
-COM_CONTENT_PUBLISH_UP_ASC="Start Publishing ascending"
-COM_CONTENT_PUBLISH_UP_DESC="Start Publishing descending"
+COM_CONTENT_PUBLISH_DOWN_ASC="Ngừng xuất bản: quá khứ-&gt;tương lai"
+COM_CONTENT_PUBLISH_DOWN_DESC="Ngừng xuất bản: tương lai-&gt;quá khứ"
+COM_CONTENT_PUBLISH_UP_ASC="Ngày xuất bản: quá khứ-&gt;tương lai"
+COM_CONTENT_PUBLISH_UP_DESC="Ngày xuất bản: tương lai-&gt;quá khứ"
 COM_CONTENT_PUBLISHED="Published"
 COM_CONTENT_RUN_TRANSITIONS="Run Transitions"
 COM_CONTENT_SAVE_SUCCESS="Article successfully saved."
 COM_CONTENT_SAVE_WARNING="Alias already existed so a number was added at the end. You can re-edit the article to customize the alias."
 COM_CONTENT_SELECT_AN_ARTICLE="Select an Article"
-COM_CONTENT_SELECT_FEATURED="- Select Featured -"
-COM_CONTENT_SHARED_DESC="These settings apply for Shared Options in List, Blog and Featured unless they are changed by the menu settings."
-COM_CONTENT_SHARED_LABEL="Shared"
-COM_CONTENT_SHOW_ARTICLE_OPTIONS_LABEL="Article Options"
-COM_CONTENT_SHOW_ASSOCIATIONS_LABEL="Multilingual Associations"
-COM_CONTENT_SHOW_CONFIGURE_EDIT_LABEL="Edit Screen Options"
-COM_CONTENT_SHOW_IMAGES_URLS_BACK_LABEL="Administrator Images and Links"
-COM_CONTENT_SHOW_IMAGES_URLS_FRONT_LABEL="Frontend Images and Links"
-COM_CONTENT_SHOW_PERMISSIONS_LABEL="Article Permissions"
-COM_CONTENT_SHOW_PUBLISHING_OPTIONS_LABEL="Publishing Options"
-COM_CONTENT_SLIDER_EDITOR_CONFIG="Configure Edit Screen"
+COM_CONTENT_SELECT_FEATURED="- Tìm theo Feature -"
+COM_CONTENT_SHARED_DESC="Các cấu hình chung được áp dụng khi hiển thị Danh mục - kiểu tin (blog), Danh mục - kiểu bảng (table), Bài viết được đánh dấu Feature."
+COM_CONTENT_SHARED_LABEL="Kết hợp"
+COM_CONTENT_SHOW_ARTICLE_OPTIONS_LABEL="Khối bố cục hiển thị bài viết"
+COM_CONTENT_SHOW_ASSOCIATIONS_LABEL="Khối Multilingual Associations - chuyển đổi đa ngôn ngữ"
+COM_CONTENT_SHOW_CONFIGURE_EDIT_LABEL="Khối thiết lập soạn thảo trên Frontend"
+COM_CONTENT_SHOW_IMAGES_URLS_BACK_LABEL="Administrator - Khối Link liên kết"
+COM_CONTENT_SHOW_IMAGES_URLS_FRONT_LABEL="Frontend - Khối Ảnh và Link liên kết"
+COM_CONTENT_SHOW_PERMISSIONS_LABEL="Khối Permissions - Quyền hạn"
+COM_CONTENT_SHOW_PUBLISHING_OPTIONS_LABEL="Khối thiết lập chế độ xuất bản"
+COM_CONTENT_SLIDER_EDITOR_CONFIG="Thiết lập soạn thảo trên Frontend"
 COM_CONTENT_STAGE_ARTICLE_TITLE="%1$s <small>(ID: %2$d)</small>"
 COM_CONTENT_SUBMENU_CATEGORIES="Categories"
 COM_CONTENT_SUBMENU_FEATURED="Featured Articles"
@@ -190,8 +191,8 @@ JLIB_APPLICATION_ERROR_BATCH_CANNOT_CREATE="You are not allowed to create new ar
 JLIB_APPLICATION_ERROR_BATCH_CANNOT_EDIT="You are not allowed to edit one or more of these articles."
 JLIB_APPLICATION_ERROR_BATCH_CANNOT_EXECUTE_TRANSITION="You are not allowed to execute a transition for one or more of these articles."
 
-JLIB_RULES_SETTING_NOTES_COM_CONTENT="Changes apply to this component only.<br><em><strong>Inherited</strong></em> - a Global Configuration setting or higher level setting is applied.<br><em><strong>Denied</strong></em> always wins - whatever is set at the Global or higher level and applies to all child elements.<br><em><strong>Allowed</strong></em> will enable the action for this component unless overruled by a Global Configuration setting." ; Alternate language strings for the rules form field
-JLIB_RULES_SETTING_NOTES_ITEM_COM_CONTENT_ARTICLE="Changes apply to this article only.<br><em><strong>Inherited</strong></em> - a Global Configuration setting or higher level setting is applied.<br><em><strong>Denied</strong></em> always wins - whatever is set at the Global or higher level and applies to all child elements.<br><em><strong>Allowed</strong></em> will enable the action for this component unless overruled by a Global Configuration setting." ; Alternate language strings for the rules form field
+JLIB_RULES_SETTING_NOTES_COM_CONTENT="Các Phân Quyền tại đây tác động cho App Component này.<br><em><strong>Inherited</strong></em> - Thừa hưởng - tức là giá trị hiện tại áp dụng sẽ được lấy động từ cấp cao hơn. Nếu tất cả các cấp cao hơn đều là Inherited, hệ thống sẽ lấy giá trị sau cùng tại Cấu hình hệ thống.<br><em><strong>Denied</strong></em> Từ chối quyền - không cho phép. Lựa chọn này cũng tác động làm tất cả các cấp sâu hơn bên dưới cũng bị từ chối quyền (không cho phép) dù có chọn gì đi nữa.<br><em><strong>Allowed</strong></em> Cho phép. Lựa chọn này sẽ cho phép (bật quyền) cho cho hành động tương ứng." ; Alternate language strings for the rules form field
+JLIB_RULES_SETTING_NOTES_ITEM_COM_CONTENT_ARTICLE="Các Phân Quyền tại đây chỉ tác động lên bài viết này. Các Phân Quyền đã được thiết lập sẵn, chỉ điều chỉnh khi bạn thực sự hiểu các tác động lên bài viết.<br><em><strong>Inherited</strong></em> - Thừa hưởng - tức là giá trị hiện tại áp dụng sẽ được lấy động từ cấp cao hơn. Nếu tất cả các cấp cao hơn đều là Inherited, hệ thống sẽ lấy giá trị sau cùng tại Cấu hình hệ thống.<br><em><strong>Denied</strong></em> Từ chối quyền - không cho phép. Lựa chọn này cũng tác động làm tất cả các cấp sâu hơn bên dưới cũng bị từ chối quyền (không cho phép) dù có chọn gì đi nữa.<br><em><strong>Allowed</strong></em> Cho phép. Lựa chọn này sẽ cho phép (bật quyền) cho cho hành động tương ứng." ; Alternate language strings for the rules form field
 
 COM_CONTENT_ARTICLE_CATEGORIES_TITLE="Articles: Field Groups" ; Fields overrides
 COM_CONTENT_ARTICLE_CATEGORY_ADD_TITLE="Articles: New Field Group" ; Fields overrides
