--- a/package/administrator/language/vn-VN/com_joomlaupdate.ini
+++ b/package/administrator/language/vn-VN/com_joomlaupdate.ini
@@ -39,7 +39,7 @@ COM_JOOMLAUPDATE_NODOWNLOAD_EMPTYSTATE_APPEND="Update your site by manually uplo
 COM_JOOMLAUPDATE_NODOWNLOAD_EMPTYSTATE_BUTTON_ADD="Retry check for update"
 COM_JOOMLAUPDATE_NODOWNLOAD_EMPTYSTATE_CONTENT="An update to Joomla %1$s was found, but it wasn't possible to fetch the download URL for that update. Either the update to Joomla %1$s is not available for your stability level or there is a problem with the Joomla Update Server.<br>Please try to download the update package from <a href=\"https://downloads.joomla.org/latest\">the official Joomla download page</a> and use the Upload and Update function."
 COM_JOOMLAUPDATE_NODOWNLOAD_EMPTYSTATE_TITLE="We can't find a download URL"
-COM_JOOMLAUPDATE_OVERVIEW="Joomla Update"
+COM_JOOMLAUPDATE_OVERVIEW="Nâng cấp hệ thống"
 COM_JOOMLAUPDATE_PREUPDATE_CHECK_CAPTION="Table of server settings to check before update."
 COM_JOOMLAUPDATE_PREUPDATE_CHECK_COMPLETED_YOU_HAVE_DANGEROUS_PLUGINS="There are plugins installed and enabled that could interfere with the Joomla upgrade and result in a failed upgrade that leaves the site inaccessible.<br><br>You are strongly advised to upgrade, disable or uninstall these plugins before upgrading."
 COM_JOOMLAUPDATE_PREUPDATE_CHECK_EXTENSION_AUTHOR_URL="Extension Author URL"
@@ -59,9 +59,9 @@ COM_JOOMLAUPDATE_SELF_EMPTYSTATE_TITLE="Live Update is not available"
 COM_JOOMLAUPDATE_SYSTEM_CHECK="System Check"
 COM_JOOMLAUPDATE_TOOLBAR_CHECK="Check for Updates"
 COM_JOOMLAUPDATE_UPDATE_CHECK="Update Check"
-COM_JOOMLAUPDATE_UPDATE_CONFIRM_BACKUP="I've created a backup and my extensions are compatible."
-COM_JOOMLAUPDATE_UPDATE_EMPTYSTATE_TITLE="Update your site to \"Joomla! %s\""
-COM_JOOMLAUPDATE_UPDATE_EMPTYSTATE_BUTTON_ADD="Start update"
+COM_JOOMLAUPDATE_UPDATE_CONFIRM_BACKUP="Tôi xác nhận thực hiện Nâng cấp phiên bản hệ thống website."
+COM_JOOMLAUPDATE_UPDATE_EMPTYSTATE_TITLE="Nâng cấp hệ thống lên phiên bản \"%s\""
+COM_JOOMLAUPDATE_UPDATE_EMPTYSTATE_BUTTON_ADD="Tiến hành NÂNG CẤP"
 COM_JOOMLAUPDATE_UPDATE_LOG_CLEANUP="Cleaning up after installation."
 COM_JOOMLAUPDATE_UPDATE_LOG_COMPLETE="Update to version %s is complete."
 COM_JOOMLAUPDATE_UPDATE_LOG_DELETE_FILES="Deleting removed files and folders."
@@ -114,7 +114,7 @@ COM_JOOMLAUPDATE_VIEW_DEFAULT_EXTENSIONS_SHOW_MORE_COMPATIBILITY_INFORMATION="[ 
 COM_JOOMLAUPDATE_VIEW_DEFAULT_EXTENSIONS_UPDATE_SERVER_OFFERS_NO_COMPATIBLE_VERSION="Update Information Unavailable"
 COM_JOOMLAUPDATE_VIEW_DEFAULT_EXTENSIONS_UPDATE_SERVER_OFFERS_NO_COMPATIBLE_VERSION_NOTES="Extension does not use the Joomla update system or the developer has provided no compatibility information."
 COM_JOOMLAUPDATE_VIEW_DEFAULT_HELP="More Information."
-COM_JOOMLAUPDATE_VIEW_DEFAULT_INFOURL="Additional Information"
+COM_JOOMLAUPDATE_VIEW_DEFAULT_INFOURL=""
 COM_JOOMLAUPDATE_VIEW_DEFAULT_INSTALL_SELF_UPDATE_FIRST="You must update to the latest version of the Joomla Update Component before you can install the Joomla Core Update!"
 COM_JOOMLAUPDATE_VIEW_DEFAULT_INSTALLAGAIN="Reinstall Joomla core files"
 COM_JOOMLAUPDATE_VIEW_DEFAULT_INSTALLED="Installed Joomla version"
@@ -146,11 +146,11 @@ COM_JOOMLAUPDATE_VIEW_DEFAULT_REQUIRED_SETTINGS_PASSED="Required PHP & Database 
 COM_JOOMLAUPDATE_VIEW_DEFAULT_REQUIRED_SETTINGS_WARNING="Required PHP & Database Settings : Warning"
 COM_JOOMLAUPDATE_VIEW_DEFAULT_TAB_ONLINE="Live Update"
 COM_JOOMLAUPDATE_VIEW_DEFAULT_TAB_PRE_UPDATE_CHECK="Pre-Update Check"
-COM_JOOMLAUPDATE_VIEW_DEFAULT_TAB_UPLOAD="Upload & Update"
-COM_JOOMLAUPDATE_VIEW_DEFAULT_UPDATE_NOTICE="Before you update Joomla, ensure that the installed extensions are available for the new Joomla version. <br>You are strongly advised to make a <strong>backup</strong> of your installation before you start updating."
+COM_JOOMLAUPDATE_VIEW_DEFAULT_TAB_UPLOAD="Upload và Nâng cấp"
+COM_JOOMLAUPDATE_VIEW_DEFAULT_UPDATE_NOTICE="Nâng cấp hệ thống lên phiên bản mới hơn<br>Trước khi cập nhật bạn nên tạo bản <strong>backup</strong> đề đề phòng có sự cố đáng tiếc xảy ra trước khi tiến hành nâng cấp."
 COM_JOOMLAUPDATE_VIEW_DEFAULT_UPDATEFOUND="A Joomla update was found."
 COM_JOOMLAUPDATE_VIEW_DEFAULT_UPDATES_INFO_CUSTOM="You are on the \"%s\" update channel. This is not an official Joomla update channel."
-COM_JOOMLAUPDATE_VIEW_DEFAULT_UPDATES_INFO_DEFAULT="You are on the \"%s\" update channel. Through this channel you'll receive notifications for all updates of the current Joomla release (4.x)"
+COM_JOOMLAUPDATE_VIEW_DEFAULT_UPDATES_INFO_DEFAULT=""
 COM_JOOMLAUPDATE_VIEW_DEFAULT_UPDATES_INFO_NEXT="You are on the \"%s\" update channel. Through this channel you'll receive notifications for all updates of the current Joomla release (4.x) and you will also be notified when the future major release (5.x) will be available. Before upgrading to 5.x you'll need to assess its compatibility with your environment."
 COM_JOOMLAUPDATE_VIEW_DEFAULT_UPDATES_INFO_TESTING="You are on the \"%s\" update channel. This channel is designed for testing new releases and fixes in Joomla.<br>It is only intended for JBS (Joomla Bug Squad&trade;) members and others within the Joomla community who are testing. Do not use this setting on a production site."
 COM_JOOMLAUPDATE_VIEW_DEFAULT_UPLOAD_INTRO="You can use this feature to update Joomla if your server is behind a firewall or otherwise unable to contact the update servers. First download the Joomla <em>Update Package</em> in ZIP format from <a class='alert-link' href='%s' target='_blank' rel='noopener noreferrer'>the official Joomla download page</a>. Then use the fields below to upload and install it."
@@ -165,7 +165,7 @@ COM_JOOMLAUPDATE_VIEW_UPDATE_FINALISE_HEAD_DESC="To complete the update Process 
 COM_JOOMLAUPDATE_VIEW_UPDATE_PERCENT="Percent complete"
 COM_JOOMLAUPDATE_VIEW_UPLOAD_CAPTIVE_INTRO_BODY="Make sure that the update file you have uploaded comes from the official Joomla download page. Afterwards, please confirm that you want to install it by re-entering the login information for your site \"%s\" below."
 COM_JOOMLAUPDATE_VIEW_UPLOAD_CAPTIVE_INTRO_HEAD="Are you sure you want to install the file you uploaded?"
-COM_JOOMLAUPDATE_VIEW_UPLOAD_PACKAGE_FILE="Joomla package file"
+COM_JOOMLAUPDATE_VIEW_UPLOAD_PACKAGE_FILE="Chọn gói file nâng cấp đã tải về máy tính"
 COM_JOOMLAUPDATE_XML_DESCRIPTION="Updates Joomla to the latest version with one click."
 ;Copy of INSTL constants (Pre-Update check)
 INSTL_DATABASE_SUPPORT="Database Support:"
