--- a/package/administrator/language/vn-VN/com_languages.ini
+++ b/package/administrator/language/vn-VN/com_languages.ini
@@ -25,7 +25,7 @@ COM_LANGUAGES_HEADING_AUTHOR_DESC="Author descending"
 COM_LANGUAGES_HEADING_AUTHOR_EMAIL="Before"
 COM_LANGUAGES_HEADING_AUTHOR_EMAIL_ASC="Author Email ascending"
 COM_LANGUAGES_HEADING_AUTHOR_EMAIL_DESC="Author Email descending"
-COM_LANGUAGES_HEADING_DATE="Date"
+COM_LANGUAGES_HEADING_DATE="Ngày tháng"
 COM_LANGUAGES_HEADING_DATE_ASC="Date ascending"
 COM_LANGUAGES_HEADING_DATE_DESC="Date descending"
 COM_LANGUAGES_HEADING_DEFAULT="Default"
