--- a/package/administrator/language/vn-VN/com_media.ini
+++ b/package/administrator/language/vn-VN/com_media.ini
@@ -15,7 +15,7 @@ COM_MEDIA_BROWSER_TABLE_CAPTION="Contents of Directory %s"
 COM_MEDIA_CONFIGURATION="Media: Options"
 COM_MEDIA_CONFIRM_DELETE_MODAL="Delete"
 COM_MEDIA_CONFIRM_DELETE_MODAL_HEADING="Confirm Delete"
-COM_MEDIA_CREATE_NEW_FOLDER="Create New Folder"
+COM_MEDIA_CREATE_NEW_FOLDER="Tạo Folder mới"
 COM_MEDIA_CREATE_NEW_FOLDER_ERROR="Error creating folder."
 COM_MEDIA_CREATE_NEW_FOLDER_SUCCESS="Folder created."
 COM_MEDIA_DECREASE_GRID="Decrease grid size"
@@ -29,32 +29,32 @@ COM_MEDIA_ERROR_NOT_AUTHENTICATED="You are not authenticated. Please login."
 COM_MEDIA_ERROR_NOT_AUTHORIZED="You are not authorized"
 COM_MEDIA_ERROR_NOT_FOUND="File or Folder not found"
 COM_MEDIA_ERROR_WARNFILETOOLARGE="This file is too large to upload."
-COM_MEDIA_FIELD_CHECK_MIME_DESC="Use MIME Magic or Fileinfo to attempt to verify files. Try disabling this if you get invalid mime type errors."
-COM_MEDIA_FIELD_CHECK_MIME_LABEL="Check MIME Types"
+COM_MEDIA_FIELD_CHECK_MIME_DESC="Xác minh kiểu file tài liệu bằng  MIME Magic hoặc Fileinfo để xác thực file. Nếu có lỗi xảy ra, và bạn yên tâm về các file tải lên, bạn có thể tắt tính năng này."
+COM_MEDIA_FIELD_CHECK_MIME_LABEL="Check MIME Types - Kiểm tra kiểu file tài liệu"
 COM_MEDIA_FIELD_IGNORED_EXTENSIONS_DESC="Ignored file extensions for MIME type checking and restricted uploads."
-COM_MEDIA_FIELD_IGNORED_EXTENSIONS_LABEL="Ignored Extensions"
+COM_MEDIA_FIELD_IGNORED_EXTENSIONS_LABEL="Kiểu file bị cấm"
 COM_MEDIA_FIELD_ILLEGAL_MIME_TYPES_DESC="A comma separated list of forbidden MIME types to upload."
-COM_MEDIA_FIELD_ILLEGAL_MIME_TYPES_LABEL="Forbidden MIME Types"
+COM_MEDIA_FIELD_ILLEGAL_MIME_TYPES_LABEL="Kiểu MIME Types bị cấm"
 COM_MEDIA_FIELD_LEGAL_AUDIO_EXTENSIONS_DESC="Audio extensions (file types) you are allowed to upload (comma separated). These are used to check for valid audio headers."
-COM_MEDIA_FIELD_LEGAL_AUDIO_EXTENSIONS_LABEL="Legal Audio Extensions (File Types)"
+COM_MEDIA_FIELD_LEGAL_AUDIO_EXTENSIONS_LABEL="Kiểu file âm thanh cho phép (File Types)"
 COM_MEDIA_FIELD_LEGAL_DOCUMENT_EXTENSIONS_DESC="Document extensions (file types) you are allowed to upload (comma separated). These are used to check for valid document headers."
-COM_MEDIA_FIELD_LEGAL_DOCUMENT_EXTENSIONS_LABEL="Legal Document Extensions (File Types)"
+COM_MEDIA_FIELD_LEGAL_DOCUMENT_EXTENSIONS_LABEL="Kiểu file tài liệu cho phép (File Types)"
 COM_MEDIA_FIELD_LEGAL_IMAGE_EXTENSIONS_DESC=" Image extensions (file types) you are allowed to upload (comma separated). These are used to check for valid image headers."
-COM_MEDIA_FIELD_LEGAL_IMAGE_EXTENSIONS_LABEL="Legal Image Extensions (File Types)"
+COM_MEDIA_FIELD_LEGAL_IMAGE_EXTENSIONS_LABEL="Kiểu file Hình ảnh cho phép (File Types)"
 COM_MEDIA_FIELD_LEGAL_VIDEO_EXTENSIONS_DESC="Video extensions (file types) you are allowed to upload (comma separated). These are used to check for valid video headers."
-COM_MEDIA_FIELD_LEGAL_VIDEO_EXTENSIONS_LABEL="Legal Video Extensions (File Types)"
+COM_MEDIA_FIELD_LEGAL_VIDEO_EXTENSIONS_LABEL="Kiểu file video phim cho phép (File Types)"
 COM_MEDIA_FIELD_LEGAL_MIME_TYPES_DESC="A comma separated list of legal MIME types to upload."
-COM_MEDIA_FIELD_LEGAL_MIME_TYPES_LABEL="Legal MIME Types"
-COM_MEDIA_FIELD_MAXIMUM_SIZE_DESC="Use zero for no limit. Note: your server has a maximum limit."
-COM_MEDIA_FIELD_MAXIMUM_SIZE_LABEL="Maximum Size (in MB)"
-COM_MEDIA_FIELD_PATH_FILE_FOLDER_DESC="Enter the path to the files folder relative to the root of your webspace. Warning! Changing to another path than the default 'images' may break your links. Note: Do not start the path with a slash!"
-COM_MEDIA_FIELD_PATH_FILE_FOLDER_LABEL="Path to Files Folder"
-COM_MEDIA_FIELD_PATH_IMAGE_FOLDER_DESC="Enter the path to the images folder relative to the root of your webspace. This path <strong>has to be the same as path to files (default) or to a subfolder of the path to file folder.</strong> Note: Do not start the path with a slash!"
-COM_MEDIA_FIELD_PATH_IMAGE_FOLDER_LABEL="Path to Images Folder"
-COM_MEDIA_FIELD_RESTRICT_UPLOADS_DESC="Restrict uploads for lower than manager users to just images if Fileinfo or MIME Magic isn't installed."
-COM_MEDIA_FIELD_RESTRICT_UPLOADS_EXTENSIONS_DESC="Restrict uploads for lower than manager users to files in the list."
-COM_MEDIA_FIELD_RESTRICT_UPLOADS_EXTENSIONS_LABEL="Allowed Extensions"
-COM_MEDIA_FIELD_RESTRICT_UPLOADS_LABEL="Restrict Uploads"
+COM_MEDIA_FIELD_LEGAL_MIME_TYPES_LABEL="Kiểu MIME Types cho phép"
+COM_MEDIA_FIELD_MAXIMUM_SIZE_DESC="Để trống hoặc nhập 0: không giới hạn dung lượng ảnh upload. Lưu ý: dù vậy, nó vẫn bị giới hạn bởi cấu hình của server."
+COM_MEDIA_FIELD_MAXIMUM_SIZE_LABEL="Dung lượng Ảnh tối đa cho phép (đơn vị MB)"
+COM_MEDIA_FIELD_PATH_FILE_FOLDER_DESC="Đây là folder để lưu file vào. Bạn có thể thay đổi một folder khác để lưu file . Lưu ý: đường dẫn path nhập vào không bắt đầu với dấu gạch chéo"
+COM_MEDIA_FIELD_PATH_FILE_FOLDER_LABEL="Folder mặc định để file"
+COM_MEDIA_FIELD_PATH_IMAGE_FOLDER_DESC="Đây là folder để lưu ảnh vào, và mở ảnh khi gọi chức năng chèn Hình ảnh. Bạn có thể thay đổi một folder khác để lưu ảnh . Lưu ý: đường dẫn path nhập vào không bắt đầu với dấu gạch chéo"
+COM_MEDIA_FIELD_PATH_IMAGE_FOLDER_LABEL="Folder mặc định để lưu Hình ảnh"
+COM_MEDIA_FIELD_RESTRICT_UPLOADS_DESC="Không cho phép upload với các kiểu file chưa được khai báo hoặc quá trình kiểm tra Fileinfo or MIME Magic không hoàn thành được. (Áp dụng cho Tài khoản thành viên bình thường)"
+COM_MEDIA_FIELD_RESTRICT_UPLOADS_EXTENSIONS_DESC="Danh sách các file được upload trong chế độ Restrict Uploads - Chế độ kiểm soát Upload."
+COM_MEDIA_FIELD_RESTRICT_UPLOADS_EXTENSIONS_LABEL="Kiểu file cho phép upload"
+COM_MEDIA_FIELD_RESTRICT_UPLOADS_LABEL="Restrict Uploads - Chế độ kiểm soát Upload"
 COM_MEDIA_FIELDSET_OPTIONS_LABEL="Media"
 COM_MEDIA_FILE="File"
 COM_MEDIA_FILE_EXISTS_AND_OVERRIDE="%s already exists. Do you want to replace it?"
@@ -78,7 +78,7 @@ COM_MEDIA_RENAME_ERROR="Error renaming item."
 COM_MEDIA_ERROR_MAKESAFE="Could not make the file name safe. If it contains non ASCII chars please ensure you have the INTL and ICONV PHP Extensions installed."
 COM_MEDIA_RENAME_SUCCESS="Item renamed."
 COM_MEDIA_RESET="Reset"
-COM_MEDIA_SEARCH="Search"
+COM_MEDIA_SEARCH="Tìm"
 COM_MEDIA_SELECT_ALL="Toggle select all"
 COM_MEDIA_SERVER_ERROR="Internal server error"
 COM_MEDIA_SHARE="Share the file"
