--- a/package/administrator/language/vn-VN/com_menus.ini
+++ b/package/administrator/language/vn-VN/com_menus.ini
@@ -41,64 +41,64 @@ COM_MENUS_FIELD_FEEDLINK_LABEL="Feed link"
 COM_MENUS_FIELD_PRESET_DESC="Select a preset if you want to populate this menu with the menu items in that preset. Otherwise leave this empty."
 COM_MENUS_FIELD_PRESET_LABEL="Import a preset"
 COM_MENUS_FIELD_VALUE_IGNORE="Ignore"
-COM_MENUS_FIELD_VALUE_NEW_WITH_NAV="New Window With Navigation"
-COM_MENUS_FIELD_VALUE_NEW_WITHOUT_NAV="New Without Navigation"
-COM_MENUS_FIELD_VALUE_PARENT="Category Details"
+COM_MENUS_FIELD_VALUE_NEW_WITH_NAV="Mở cửa sổ MỚI"
+COM_MENUS_FIELD_VALUE_NEW_WITHOUT_NAV="Mở cửa sổ Mới, dạng đơn giản"
+COM_MENUS_FIELD_VALUE_PARENT="Mở trong cửa sổ hiện tại (mặc định)"
 COM_MENUS_FIELDSET_RULES="Permissions"
 COM_MENUS_FILTER_PARENT_MENU_ITEM_LABEL="Parent Menu Item"
 COM_MENUS_FILTER_SELECT_PARENT_MENU_ITEM="- Select Parent Menu Item -"
 COM_MENUS_GRID_UNSET_LANGUAGE="Unset %s Default"
 COM_MENUS_HEADING_ASSIGN_MODULE="Module"
 COM_MENUS_HEADING_ASSOCIATION="Association"
-COM_MENUS_HEADING_DISPLAY="Display"
+COM_MENUS_HEADING_DISPLAY="Menu chọn hiển thị"
 COM_MENUS_HEADING_HOME="Home"
 COM_MENUS_HEADING_HOME_ASC="Home ascending"
 COM_MENUS_HEADING_HOME_DESC="Home descending"
-COM_MENUS_HEADING_LEVELS="View level"
+COM_MENUS_HEADING_LEVELS="Phân nhóm truy cập"
 COM_MENUS_HEADING_LINKED_MODULES="Linked Modules"
 COM_MENUS_HEADING_MENU="Menu"
 COM_MENUS_HEADING_MENU_ASC="Menu ascending"
 COM_MENUS_HEADING_MENU_DESC="Menu descending"
 COM_MENUS_HEADING_NUMBER_MENU_ITEMS="Number of Menu Items"
-COM_MENUS_HEADING_POSITION="Show or hide a Position column in the list of Contacts."
-COM_MENUS_HEADING_PUBLISHED_ITEMS="Published"
+COM_MENUS_HEADING_POSITION="Positon - Điểm neo"
+COM_MENUS_HEADING_PUBLISHED_ITEMS="Đã xuất bản (kích hoạt)"
 COM_MENUS_HEADING_TRASHED_ITEMS="Trashed"
 COM_MENUS_HEADING_UNPUBLISHED_ITEMS="Unpublished"
 COM_MENUS_INTEGRATION_FIELDSET_LABEL="Menu Item Associations"
-COM_MENUS_ITEM_DETAILS="Details"
+COM_MENUS_ITEM_DETAILS="Thiết lập cơ sở"
 COM_MENUS_ITEM_FIELD_ALIAS_MENU_LABEL="Menu Item"
 COM_MENUS_ITEM_FIELD_ALIAS_REDIRECT_LABEL="Use Redirection"
-COM_MENUS_ITEM_FIELD_ANCHOR_CSS_LABEL="Link CSS Style"
+COM_MENUS_ITEM_FIELD_ANCHOR_CSS_LABEL="Đặt CSS html vào Menu"
 COM_MENUS_ITEM_FIELD_ANCHOR_REL_LABEL="Link Rel Attribute"
-COM_MENUS_ITEM_FIELD_ANCHOR_TITLE_LABEL="Link Title Attribute"
+COM_MENUS_ITEM_FIELD_ANCHOR_TITLE_LABEL="Thêm thuộc tính title (code html) vào Menu link (rê chuột vào Menu sẽ hiện lên dòng title này)"
 COM_MENUS_ITEM_FIELD_ASSIGNED_LABEL="Xếp vào Cây menu"
 COM_MENUS_ITEM_FIELD_ASSOCIATION_NO_VALUE="- No association -"
-COM_MENUS_ITEM_FIELD_BROWSERNAV_LABEL="Target Window"
+COM_MENUS_ITEM_FIELD_BROWSERNAV_LABEL="Target Window - Mở link ở cửa sổ hiện tại/cửa sổ mới"
 COM_MENUS_ITEM_FIELD_COMPONENTS_CONTAINER_HIDE_ITEMS_DESC="Select the menu items that should or should not be shown under this container. If there are no items to show, then this container will also be hidden.<br>Please note that when you install a new component it will be displayed by default until you come back here and hide it too."
 COM_MENUS_ITEM_FIELD_COMPONENTS_CONTAINER_HIDE_ITEMS_LABEL="Show or Hide Menu Items"
 COM_MENUS_ITEM_FIELD_DASHBOARD_DESC="If an identifier is provided, a dashboard is created for this menu item."
 COM_MENUS_ITEM_FIELD_DASHBOARD_LABEL="Dashboard"
-COM_MENUS_ITEM_FIELD_HIDE_UNASSIGNED_LABEL="Unassigned Modules"
-COM_MENUS_ITEM_FIELD_HIDE_UNPUBLISHED_LABEL="Unpublished Modules"
+COM_MENUS_ITEM_FIELD_HIDE_UNASSIGNED_LABEL="Hiện tất cả Module, cả các module không liên quan tới Menu này"
+COM_MENUS_ITEM_FIELD_HIDE_UNPUBLISHED_LABEL="Hiện luôn các Module chưa được kích hoạt (Xuất bản)"
 COM_MENUS_ITEM_FIELD_HOME_LABEL="Chuyển menu này thành trang chủ"
 COM_MENUS_ITEM_FIELD_ICON_TITLE_DESC="If an icon class is entered, it takes precedence over the link image."
 COM_MENUS_ITEM_FIELD_ICON_TITLE_LABEL="Link Icon Class"
-COM_MENUS_ITEM_FIELD_LINK_LABEL="Link"
-COM_MENUS_ITEM_FIELD_MENU_IMAGE_CSS_LABEL="Image Class"
-COM_MENUS_ITEM_FIELD_MENU_IMAGE_LABEL="Link Image"
+COM_MENUS_ITEM_FIELD_LINK_LABEL="Link - Cấu trúc link nguồn (trước khi được route chuyển thành url thân thiện)"
+COM_MENUS_ITEM_FIELD_MENU_IMAGE_CSS_LABEL="Thêm Class CSS cho ảnh trên"
+COM_MENUS_ITEM_FIELD_MENU_IMAGE_LABEL="Hiện kèm hình ảnh vào Menu"
 COM_MENUS_ITEM_FIELD_MENU_SHOW_DESC="Select 'No' if you want to hide this menu item. Note any submenu items will also be hidden."
-COM_MENUS_ITEM_FIELD_MENU_SHOW_LABEL="Display in Menu"
-COM_MENUS_ITEM_FIELD_MENU_TEXT_LABEL="Display Menu Title"
+COM_MENUS_ITEM_FIELD_MENU_SHOW_LABEL="Hiện Menu (chọn No khi không muốn menu này hiển thị trên site frontend, nhưng vẫn muốn giữ cấu trúc menu này)"
+COM_MENUS_ITEM_FIELD_MENU_TEXT_LABEL="Hiện tiêu đề Menu (chọn No khi bạn chỉ muốn hiện Hình ảnh mà không hiện tiêu đề chữ)"
 COM_MENUS_ITEM_FIELD_ORDERING_LABEL="Ordering"
 COM_MENUS_ITEM_FIELD_ORDERING_TEXT="Ordering will be available after saving."
 COM_MENUS_ITEM_FIELD_ORDERING_VALUE_FIRST="- First -"
 COM_MENUS_ITEM_FIELD_ORDERING_VALUE_LAST="- Last -"
-COM_MENUS_ITEM_FIELD_PAGE_CLASS_LABEL="Page Class"
-COM_MENUS_ITEM_FIELD_PAGE_HEADING_LABEL="Page Heading"
-COM_MENUS_ITEM_FIELD_PAGE_TITLE_LABEL="Browser Page Title"
+COM_MENUS_ITEM_FIELD_PAGE_CLASS_LABEL="Thêm Class CSS vào class của thẻ <strong>body</strong> html (ảnh hưởng toàn trang)"
+COM_MENUS_ITEM_FIELD_PAGE_HEADING_LABEL="Đặt lại tiêu đề trang trong nội dung hiển thị (phần đầu nội dung)"
+COM_MENUS_ITEM_FIELD_PAGE_TITLE_LABEL="Đặt lại tiêu đề trang - can thiệp vào thẻ title (html code)"
 COM_MENUS_ITEM_FIELD_PARENT_LABEL="Xếp làm menu con của"
-COM_MENUS_ITEM_FIELD_SHOW_PAGE_HEADING_LABEL="Show Page Heading"
-COM_MENUS_ITEM_FIELD_TEMPLATE_LABEL="Template Style"
+COM_MENUS_ITEM_FIELD_SHOW_PAGE_HEADING_LABEL="Hiện tiêu đề trang vô nội dung hiển thị (phần đầu nội dung)"
+COM_MENUS_ITEM_FIELD_TEMPLATE_LABEL="Chọn Giao diện áp dụng cho Menu"
 COM_MENUS_ITEM_FIELD_TEXT_SEPARATOR_AS_LABEL="Label"
 COM_MENUS_ITEM_FIELD_TEXT_SEPARATOR_AS_SEPARATOR="Separator"
 COM_MENUS_ITEM_FIELD_TEXT_SEPARATOR_LABEL="Display as a label"
@@ -106,7 +106,7 @@ COM_MENUS_ITEM_FIELD_TITLE_LABEL="Menu Title"
 COM_MENUS_ITEM_FIELD_TYPE_LABEL="Điểm kết nối"
 COM_MENUS_ITEM_FORM_EDIT="Edit Menu Item"
 COM_MENUS_ITEM_FORM_NEW="New Menu Item"
-COM_MENUS_ITEM_MODULE_ASSIGNMENT="Module Assignment"
+COM_MENUS_ITEM_MODULE_ASSIGNMENT="Kiểm Module hiển thị cùng Menu"
 COM_MENUS_ITEMS_N_QUICKICON_0="Menus Items"
 COM_MENUS_ITEMS_N_QUICKICON_ONE="Menu Item"
 COM_MENUS_ITEMS_N_QUICKICON_OTHER="Menus Items"
@@ -125,7 +125,7 @@ COM_MENUS_ITEMS_UNSET_HOME="Menu item unset to home."
 COM_MENUS_LABEL_DISABLED="Component disabled"
 COM_MENUS_LABEL_HIDDEN="Hidden"
 COM_MENUS_LAYOUT_FEATURED_OPTIONS="Layout"
-COM_MENUS_LINKTYPE_OPTIONS_LABEL="Link Type"
+COM_MENUS_LINKTYPE_OPTIONS_LABEL="Hiển thị Menu"
 COM_MENUS_MENU_CONFIRM_DELETE="Are you sure you want to delete these menus? Confirming will delete the selected menu types, all their menu items and the associated menu modules."
 COM_MENUS_MENU_DETAILS="Menu Details"
 COM_MENUS_MENU_EXPORT_BUTTON="Download as Preset"
@@ -164,7 +164,7 @@ COM_MENUS_NO_MENUS_SELECTED="No menu selected."
 COM_MENUS_OPTION_SELECT_COMPONENT="- Select Component -"
 COM_MENUS_OPTION_SELECT_CONTEXT="- Select Context -"
 COM_MENUS_OPTION_SELECT_LEVEL="- Select Max Levels -"
-COM_MENUS_PAGE_OPTIONS_LABEL="Page Display"
+COM_MENUS_PAGE_OPTIONS_LABEL="Cấu trúc trang hiển thị"
 COM_MENUS_PRESET_IMPORT_FAILED="Menu was saved but failed to import the preset: %s"
 COM_MENUS_PRESET_IMPORT_SUCCESS="Menu was saved and the menu items was imported from the selected preset."
 COM_MENUS_PRESET_LOAD_FAILED="Failed to load the specified preset."
