--- a/package/administrator/language/vn-VN/com_newsfeeds.ini
+++ b/package/administrator/language/vn-VN/com_newsfeeds.ini
@@ -29,10 +29,10 @@ COM_NEWSFEEDS_FIELD_CONFIG_NEWSFEED_SETTINGS_DESC="These settings apply for sing
 COM_NEWSFEEDS_FIELD_CONFIG_NEWSFEED_SETTINGS_LABEL="News Feed"
 COM_NEWSFEEDS_FIELD_FEED_DISPLAY_ORDER_LABEL="Feed Display Order"
 COM_NEWSFEEDS_FIELD_FIRST_LABEL="First Image"
-COM_NEWSFEEDS_FIELD_IMAGE_ALT_EMPTY_DESC="Decorative Image - no description required"
-COM_NEWSFEEDS_FIELD_IMAGE_ALT_EMPTY_LABEL="No Description"
-COM_NEWSFEEDS_FIELD_IMAGE_ALT_LABEL="Image Description (Alt Text)"
-COM_NEWSFEEDS_FIELD_IMAGE_CAPTION_LABEL="Caption"
+COM_NEWSFEEDS_FIELD_IMAGE_ALT_EMPTY_DESC="Trong một số trường hợp bạn không muốn chèn thuộc tính Alt html với dòng Alt text - mô tả ảnh vào, click chọn vào đây."
+COM_NEWSFEEDS_FIELD_IMAGE_ALT_EMPTY_LABEL="Ngừng thuộc tính Alt mô tả ảnh"
+COM_NEWSFEEDS_FIELD_IMAGE_ALT_LABEL="Alt text (Mô tả Ảnh - alt trong code html img)"
+COM_NEWSFEEDS_FIELD_IMAGE_CAPTION_LABEL="Caption - dòng mô tả hiện phía dưới ảnh khi xem tin bài"
 COM_NEWSFEEDS_FIELD_LINK_LABEL="Link"
 COM_NEWSFEEDS_FIELD_NUM_ARTICLES_COLUMN_LABEL="# Articles"
 COM_NEWSFEEDS_FIELD_NUM_ARTICLES_LABEL="Number of Articles"
