--- a/package/administrator/language/vn-VN/com_templates.ini
+++ b/package/administrator/language/vn-VN/com_templates.ini
@@ -27,13 +27,13 @@ COM_TEMPLATES_CHECK_FILE_OWNERSHIP="Check file ownership"
 COM_TEMPLATES_CLICK_TO_ENLARGE="Select to enlarge."
 COM_TEMPLATES_COMPILE_ERROR="An error occurred. Failed to compile."
 COM_TEMPLATES_COMPILE_LESS="You should compile %s to generate a CSS file."
-COM_TEMPLATES_CONFIG_FIELDSET_DESC="Global configuration for templates."
-COM_TEMPLATES_CONFIG_FONT_LABEL="Valid Font Formats"
-COM_TEMPLATES_CONFIG_IMAGE_LABEL="Valid Image Formats"
+COM_TEMPLATES_CONFIG_FIELDSET_DESC="Cấu hình chung cho Giao diện"
+COM_TEMPLATES_CONFIG_FONT_LABEL="Valid Font Formats - Kiểu font cho phép"
+COM_TEMPLATES_CONFIG_IMAGE_LABEL="Valid Image Formats - Kiểu file Hình ảnh cho phép"
 COM_TEMPLATES_CONFIG_POSITIONS_LABEL="Kích hoạt Xem layout vị trí điểm neo (Position)"
-COM_TEMPLATES_CONFIG_SOURCE_LABEL="Valid Source Formats"
-COM_TEMPLATES_CONFIG_UPLOAD_LABEL="Max. Upload Size (MB)"
-COM_TEMPLATES_CONFIGURATION="Template: Options"
+COM_TEMPLATES_CONFIG_SOURCE_LABEL="Valid Source Formats - Kiểu file mã nguồn cho phép"
+COM_TEMPLATES_CONFIG_UPLOAD_LABEL="Max. Upload Size (MB) - Dung lượng file tối đa khi upload file thông qua trình chỉnh sửa source code giao diện"
+COM_TEMPLATES_CONFIGURATION="Cấu hình chung Giao diện"
 COM_TEMPLATES_COPY_SUCCESS="New template called %s was installed."
 COM_TEMPLATES_CROP_AREA_ERROR="Crop area not selected."
 COM_TEMPLATES_DIRECTORY_NOT_WRITABLE="The template folder is not writable. Some features may not work."
@@ -207,7 +207,7 @@ COM_TEMPLATES_STYLES_PAGES_ALL_LANGUAGE="Default for %s pages"
 COM_TEMPLATES_STYLES_PAGES_NONE="Not assigned"
 COM_TEMPLATES_STYLES_PAGES_SELECTED="Assigned on %s pages"
 COM_TEMPLATES_STYLES_TABLE_CAPTION="Table of Template Styles"
-COM_TEMPLATES_SUBMENU_TEMPLATES="Templates"
+COM_TEMPLATES_SUBMENU_TEMPLATES="Giao diện"
 COM_TEMPLATES_SUCCESS_DUPLICATED="Style duplicated."
 COM_TEMPLATES_SUCCESS_HOME_SET="Default style set."
 COM_TEMPLATES_SUCCESS_HOME_UNSET="Default style unset."
@@ -227,10 +227,10 @@ COM_TEMPLATES_TEMPLATE_NEW_NAME_LABEL="New Template Name"
 COM_TEMPLATES_TEMPLATE_NEW_PREVIEW="Preview %s in new window."
 COM_TEMPLATES_TEMPLATE_NO_PREVIEW="No preview available. You can enable preview in the options."
 COM_TEMPLATES_TEMPLATE_NOT_SPECIFIED="Template not specified."
-COM_TEMPLATES_TEMPLATE_PREVIEW="Xem thử"
+COM_TEMPLATES_TEMPLATE_PREVIEW="Thử"
 COM_TEMPLATES_TEMPLATES_FILTER_SEARCH_DESC="Search in template name or folder name."
 COM_TEMPLATES_TEMPLATES_TABLE_CAPTION="Table of Templates"
-COM_TEMPLATES_TOOLBAR_SET_HOME="Default"
+COM_TEMPLATES_TOOLBAR_SET_HOME="Mặc định"
 COM_TEMPLATES_UPTODATE="Up to date"
 COM_TEMPLATES_WARNING_FORMAT_WILL_NOT_BE_VISIBLE="You have created a new file with the extension '%s'. This is supported but as you did not have that file extension in the list of supported formats this can't be displayed. Please double check the options for Templates and add the format if needed."
 COM_TEMPLATES_XML_DESCRIPTION="This component manages templates"
