--- a/package/administrator/language/vn-VN/com_users.ini
+++ b/package/administrator/language/vn-VN/com_users.ini
@@ -4,14 +4,14 @@
 ; Note : All ini files need to be saved as UTF-8
 
 COM_USERS="Users"
-COM_USERS_A11Y_SETTINGS_FIELDSET_LABEL="Accessibility Settings"
-COM_USERS_A11Y_SETTINGS_FIELD_CONTRAST="High Contrast"
-COM_USERS_A11Y_SETTINGS_FIELD_FONTSIZE="Increase Font Size"
-COM_USERS_A11Y_SETTINGS_FIELD_HIGHLIGHT="Highlight Links"
-COM_USERS_A11Y_SETTINGS_FIELD_MONOCHROME="Monochrome"
+COM_USERS_A11Y_SETTINGS_FIELDSET_LABEL="Cài đặt trợ năng"
+COM_USERS_A11Y_SETTINGS_FIELD_CONTRAST="Độ tương phản cao"
+COM_USERS_A11Y_SETTINGS_FIELD_FONTSIZE="Cỡ chữ to hơn"
+COM_USERS_A11Y_SETTINGS_FIELD_HIGHLIGHT="Links liên kết nổi bật hơn"
+COM_USERS_A11Y_SETTINGS_FIELD_MONOCHROME="Giao diện Đơn sắc"
 COM_USERS_ACTIVATED="Activated"
-COM_USERS_ADD_NOTE="Add Note"
-COM_USERS_ASSIGNED_GROUPS="Assigned User Groups"
+COM_USERS_ADD_NOTE="Thêm ghi chú"
+COM_USERS_ASSIGNED_GROUPS="Nhóm thành viên được tham gia"
 COM_USERS_BATCH_ACTIONS="Select Action"
 COM_USERS_BATCH_ADD="Add To Group"
 COM_USERS_BATCH_DELETE="Delete From Group"
@@ -20,11 +20,11 @@ COM_USERS_BATCH_OPTIONS="Batch process the selected users"
 COM_USERS_BATCH_SET="Set To Group"
 COM_USERS_CATEGORIES_TITLE="User Notes: Categories"
 COM_USERS_CATEGORY_HEADING="Category"
-COM_USERS_CONFIGURATION="Users: Options"
+COM_USERS_CONFIGURATION="Cấu hình chung Chức năng thành viên"
 COM_USERS_CONFIG_DOMAIN_OPTIONS="Email Domain Options"
-COM_USERS_CONFIG_FIELD_ALLOWREGISTRATION_LABEL="Allow User Registration"
-COM_USERS_CONFIG_FIELD_CAPTCHA_LABEL="Captcha"
-COM_USERS_CONFIG_FIELD_CHANGEUSERNAME_LABEL="Change Login Name"
+COM_USERS_CONFIG_FIELD_ALLOWREGISTRATION_LABEL="Bật tính năng cho phép Đăng ký thành viên"
+COM_USERS_CONFIG_FIELD_CAPTCHA_LABEL="Dùng Captcha trên form đăng ký thành viên"
+COM_USERS_CONFIG_FIELD_CHANGEUSERNAME_LABEL="Cho phép thành viên tự thay đổi Username"
 COM_USERS_CONFIG_FIELD_DOMAINS_DESC="Enter a list of allowed and disallowed email domains. By default, all domains are allowed."
 COM_USERS_CONFIG_FIELD_DOMAINS_LABEL="Email Domains"
 COM_USERS_CONFIG_FIELD_DOMAIN_NAME_DESC="Enter a domain name. Wildcards (*) are supported. For example:<br><strong>*</strong> allows or disallows all domains;<br><strong>*.com</strong> allows or disallows all .com domains;<br><strong>*.joomla.org</strong> allows or disallows all joomla.org subdomains."
@@ -36,40 +36,40 @@ COM_USERS_CONFIG_FIELD_DOMAIN_RULE_OPTION_DISALLOW="Забрани"
 COM_USERS_CONFIG_FIELD_ENFORCE_2FA_FIELD_ADMIN="Admin (Backend)"
 COM_USERS_CONFIG_FIELD_ENFORCE_2FA_FIELD_BOTH="Both"
 COM_USERS_CONFIG_FIELD_ENFORCE_2FA_FIELD_DESC="You must enable at least one Two Factor Authentication plugin."
-COM_USERS_CONFIG_FIELD_ENFORCE_2FA_FIELD_LABEL="Enforce Two Factor Authentication"
+COM_USERS_CONFIG_FIELD_ENFORCE_2FA_FIELD_LABEL="Áp dụng Xác thực 2 lớp cho"
 COM_USERS_CONFIG_FIELD_ENFORCE_2FA_FIELD_SITE="Site (Frontend)"
 COM_USERS_CONFIG_FIELD_FRONTEND_LANG_LABEL="Frontend Language"
-COM_USERS_CONFIG_FIELD_FRONTEND_RESET_COUNT_LABEL="Maximum Reset Count"
-COM_USERS_CONFIG_FIELD_FRONTEND_RESET_TIME_LABEL="Reset Time (hours)"
-COM_USERS_CONFIG_FIELD_FRONTEND_USERPARAMS_LABEL="Frontend User Parameters"
-COM_USERS_CONFIG_FIELD_GUEST_USER_GROUP_LABEL="Guest User Group"
+COM_USERS_CONFIG_FIELD_FRONTEND_RESET_COUNT_LABEL="Được lấy lại password (resset password) tối đa bao nhiêu lần"
+COM_USERS_CONFIG_FIELD_FRONTEND_RESET_TIME_LABEL="Sau khi yêu cầu và nhận được email, thời gian cho phép để kích hoạt lấy lại password (resset password) là bao lâu (tính trên giờ)"
+COM_USERS_CONFIG_FIELD_FRONTEND_USERPARAMS_LABEL="Cho phép thành viên tự thay đổi Trình soạn thảo chính, ngôn ngữ sử dụng, giao diện trên Site Frontend "
+COM_USERS_CONFIG_FIELD_GUEST_USER_GROUP_LABEL="Khi không đăng nhập, được xem là thuộc về Group thành viên nào"
 COM_USERS_CONFIG_FIELD_MAILBODY_SUFFIX_LABEL="Mailbody Suffix"
-COM_USERS_CONFIG_FIELD_MAILTOADMIN_LABEL="Send Mail to Administrators"
-COM_USERS_CONFIG_FIELD_MINIMUM_INTEGERS="Minimum Numbers"
-COM_USERS_CONFIG_FIELD_MINIMUM_LOWERCASE="Minimalna liczba małych liter"
-COM_USERS_CONFIG_FIELD_MINIMUM_PASSWORD_LENGTH="Minimum Characters"
-COM_USERS_CONFIG_FIELD_MINIMUM_SYMBOLS="Password Minimum Symbols"
-COM_USERS_CONFIG_FIELD_MINIMUM_UPPERCASE="Password Minimum Upper Case"
-COM_USERS_CONFIG_FIELD_NEW_USER_TYPE_LABEL="New User Registration Group"
+COM_USERS_CONFIG_FIELD_MAILTOADMIN_LABEL="Gửi mail thông báo có thành viên đăng ký cho Administrators"
+COM_USERS_CONFIG_FIELD_MINIMUM_INTEGERS="Yêu cầu thêm số vào password. Thêm bao nhiêu số"
+COM_USERS_CONFIG_FIELD_MINIMUM_LOWERCASE="Yêu cầu số chữ cái in thường. Tối thiểu bao nhiêu chữ cái in thường"
+COM_USERS_CONFIG_FIELD_MINIMUM_PASSWORD_LENGTH="Độ dài tối thiểu của password (tổng các ký tự, số và chữ cái)"
+COM_USERS_CONFIG_FIELD_MINIMUM_SYMBOLS="Yêu cầu thêm ký tự đặc biệt vào Password. Thêm bao nhiêu ký tự"
+COM_USERS_CONFIG_FIELD_MINIMUM_UPPERCASE="Yêu cầu thêm chữ cái In hoa vào Password. Thêm bao nhiêu chữ cái in hoa"
+COM_USERS_CONFIG_FIELD_NEW_USER_TYPE_LABEL="Xếp thành viên tự đăng ký vào Group thành viên"
 COM_USERS_CONFIG_FIELD_NOTES_HISTORY="User Notes History"
-COM_USERS_CONFIG_FIELD_SENDPASSWORD_LABEL="Send Password"
+COM_USERS_CONFIG_FIELD_SENDPASSWORD_LABEL="Kèm password trong email phản hồi khi đăng ký (khuyến cáo: không gửi password)"
 COM_USERS_CONFIG_FIELD_SUBJECT_PREFIX_LABEL="Subject Prefix"
-COM_USERS_CONFIG_FIELD_USERACTIVATION_LABEL="New User Account Activation"
-COM_USERS_CONFIG_FIELD_USERACTIVATION_OPTION_ADMINACTIVATION="Administrator"
-COM_USERS_CONFIG_FIELD_USERACTIVATION_OPTION_SELFACTIVATION="Self"
+COM_USERS_CONFIG_FIELD_USERACTIVATION_LABEL="Thiết lập cách xác thực tài khoản cho thành viên"
+COM_USERS_CONFIG_FIELD_USERACTIVATION_OPTION_ADMINACTIVATION="Xác nhận bởi Administrator"
+COM_USERS_CONFIG_FIELD_USERACTIVATION_OPTION_SELFACTIVATION="Xác thực - xác nhận qua email"
 COM_USERS_CONFIG_IMPORT_FAILED="An error was encountered while importing the configuration: %s."
 COM_USERS_CONFIG_INTEGRATION_SETTINGS_DESC="These settings determine how the Users Component will integrate with other extensions."
-COM_USERS_CONFIG_PASSWORD_OPTIONS="Password Options"
+COM_USERS_CONFIG_PASSWORD_OPTIONS="Độ dài Password và các thiết lập"
 COM_USERS_CONFIG_SAVE_FAILED="An error was encountered while saving the configuration: %s."
-COM_USERS_CONFIG_USER_OPTIONS="User Options"
-COM_USERS_COUNT_DISABLED_USERS="Blocked Users"
-COM_USERS_COUNT_ENABLED_USERS="Enabled users"
+COM_USERS_CONFIG_USER_OPTIONS="Thiết lập đăng ký và tài khoản"
+COM_USERS_COUNT_DISABLED_USERS="Số Thành viên bị ngưng"
+COM_USERS_COUNT_ENABLED_USERS="Số Thành viên được kích hoạt"
 COM_USERS_DASHBOARD_TITLE="Users Dashboard"
 COM_USERS_DEBUG_EXPLICIT_ALLOW="Allowed"
 COM_USERS_DEBUG_EXPLICIT_DENY="Forbidden"
 COM_USERS_DEBUG_GROUP_TABLE_CAPTION="Table of Permissions"
 COM_USERS_DEBUG_IMPLICIT_DENY="Not Allowed"
-COM_USERS_DEBUG_PERMISSIONS="Permissions"
+COM_USERS_DEBUG_PERMISSIONS="Quyền được phân"
 COM_USERS_DEBUG_USER_TABLE_CAPTION="Table of Permissions"
 COM_USERS_DELETE_ERROR_INVALID_GROUP="You can't delete user groups to which you belong."
 COM_USERS_EDIT_NOTE="Edit Note"
@@ -88,9 +88,9 @@ COM_USERS_FIELDS_USER_FIELD_ADD_TITLE="Users: New Field"
 COM_USERS_FIELDS_USER_FIELD_EDIT_TITLE="Users: Edit Field"
 COM_USERS_FIELD_CATEGORY_ID_LABEL="Category"
 COM_USERS_FIELD_ID_LABEL="ID"
-COM_USERS_FIELD_IMAGE_ALT_EMPTY_DESC="Decorative Image - no description required"
-COM_USERS_FIELD_IMAGE_ALT_EMPTY_LABEL="No Description"
-COM_USERS_FIELD_IMAGE_ALT_LABEL="Image Description (Alt Text)"
+COM_USERS_FIELD_IMAGE_ALT_EMPTY_DESC="Trong một số trường hợp bạn không muốn chèn thuộc tính Alt html với dòng Mô tả Ảnh phía trên vào, click chọn vào đây."
+COM_USERS_FIELD_IMAGE_ALT_EMPTY_LABEL="Ngừng thuộc tính Alt mô tả ảnh"
+COM_USERS_FIELD_IMAGE_ALT_LABEL="Alt text (Mô tả Ảnh - alt trong code html img)"
 COM_USERS_FIELD_LOGIN_MENUITEM="Menu Item"
 COM_USERS_FIELD_LOGIN_REDIRECTMENU_DESC="If no menu item is selected, users will be redirected to the their profile after login."
 COM_USERS_FIELD_LOGIN_REDIRECTMENU_LABEL="Menu Item Login Redirect"
@@ -119,14 +119,14 @@ COM_USERS_GROUPS_NO_ITEM_SELECTED="No User Groups selected."
 COM_USERS_GROUPS_N_ITEMS_DELETED_ONE="User Group deleted."
 COM_USERS_GROUPS_N_ITEMS_DELETED_OTHER="%d User Groups deleted."
 COM_USERS_GROUPS_TABLE_CAPTION="Table of User Groups"
-COM_USERS_GROUP_FIELD_PARENT_LABEL="Group Parent"
-COM_USERS_GROUP_FIELD_TITLE_LABEL="Group Title"
+COM_USERS_GROUP_FIELD_PARENT_LABEL="Group thành viên cha"
+COM_USERS_GROUP_FIELD_TITLE_LABEL="Tiêu đề Group thành viên"
 COM_USERS_GROUP_FORM_EDIT="Edit Group"
 COM_USERS_GROUP_FORM_NEW="New Group"
 COM_USERS_GROUP_SAVE_SUCCESS="Group successfully saved."
-COM_USERS_HEADING_ACTIVATED="Activated"
-COM_USERS_HEADING_ACTIVATED_ASC="Activated ascending"
-COM_USERS_HEADING_ACTIVATED_DESC="Activated descending"
+COM_USERS_HEADING_ACTIVATED="Xác thực"
+COM_USERS_HEADING_ACTIVATED_ASC="Xác thực - Lên TRƯỚC"
+COM_USERS_HEADING_ACTIVATED_DESC="Xác thực - Xuống SAU"
 COM_USERS_HEADING_ASSET_NAME="Asset Name"
 COM_USERS_HEADING_ASSET_NAME_ASC="Asset Name ascending"
 COM_USERS_HEADING_ASSET_NAME_DESC="Asset Name descending"
@@ -138,26 +138,26 @@ COM_USERS_HEADING_CATEGORY_ASC="Category ascending"
 COM_USERS_HEADING_CATEGORY_DESC="Category descending"
 COM_USERS_HEADING_EMAIL_ASC="Email ascending"
 COM_USERS_HEADING_EMAIL_DESC="Email descending"
-COM_USERS_HEADING_ENABLED="Enabled"
-COM_USERS_HEADING_ENABLED_ASC="Enabled ascending"
-COM_USERS_HEADING_ENABLED_DESC="Enabled descending"
-COM_USERS_HEADING_GROUPS="User Groups"
-COM_USERS_HEADING_GROUP_TITLE="Group Title"
-COM_USERS_HEADING_GROUP_TITLE_ASC="Group Title ascending"
-COM_USERS_HEADING_GROUP_TITLE_DESC="Group Title descending"
-COM_USERS_HEADING_LAST_VISIT_DATE="Last Visit"
-COM_USERS_HEADING_LAST_VISIT_DATE_ASC="Last visit date ascending"
-COM_USERS_HEADING_LAST_VISIT_DATE_DESC="Last visit date descending"
-COM_USERS_HEADING_LEVEL_NAME="Level Name"
+COM_USERS_HEADING_ENABLED="Kích hoạt"
+COM_USERS_HEADING_ENABLED_ASC="Kích hoạt - Lên TRƯỚC"
+COM_USERS_HEADING_ENABLED_DESC="Kích hoạt - Xuống SAU"
+COM_USERS_HEADING_GROUPS="Group Thành viên"
+COM_USERS_HEADING_GROUP_TITLE="Group Thành viên"
+COM_USERS_HEADING_GROUP_TITLE_ASC="Tên Group thành viên : A-Z"
+COM_USERS_HEADING_GROUP_TITLE_DESC="Tên Group thành viên : Z-A"
+COM_USERS_HEADING_LAST_VISIT_DATE="Lần đăng nhập gần nhất"
+COM_USERS_HEADING_LAST_VISIT_DATE_ASC="Đăng nhập gần nhất - Xuống SAU"
+COM_USERS_HEADING_LAST_VISIT_DATE_DESC="Đăng nhập gần nhất - Lên TRƯỚC"
+COM_USERS_HEADING_LEVEL_NAME="Phân nhóm truy cập"
 COM_USERS_HEADING_LEVEL_NAME_ASC="Level Name ascending"
 COM_USERS_HEADING_LEVEL_NAME_DESC="Level Name descending"
 COM_USERS_HEADING_LFT="LFT"
 COM_USERS_HEADING_LFT_ASC="LFT ascending"
 COM_USERS_HEADING_LFT_DESC="LFT descending"
-COM_USERS_HEADING_NAME="Name"
-COM_USERS_HEADING_REGISTRATION_DATE="Registration"
-COM_USERS_HEADING_REGISTRATION_DATE_ASC="Registration date ascending"
-COM_USERS_HEADING_REGISTRATION_DATE_DESC="Registration date descending"
+COM_USERS_HEADING_NAME="Tên thành viên"
+COM_USERS_HEADING_REGISTRATION_DATE="Ngày đăng ký"
+COM_USERS_HEADING_REGISTRATION_DATE_ASC="Ngày đăng ký mới nhất - Xuống SAU"
+COM_USERS_HEADING_REGISTRATION_DATE_DESC="Ngày đăng ký mới nhất - Lên TRƯỚC"
 COM_USERS_HEADING_REVIEW="Review Date"
 COM_USERS_HEADING_REVIEW_ASC="Review Date ascending"
 COM_USERS_HEADING_REVIEW_DESC="Review Date descending"
@@ -174,8 +174,8 @@ COM_USERS_HEADING_USER_DESC="User descending"
 COM_USERS_LEVELS_N_ITEMS_DELETED_ONE="View Permission Level deleted."
 COM_USERS_LEVELS_N_ITEMS_DELETED_OTHER="%d View Permission Levels deleted."
 COM_USERS_LEVELS_TABLE_CAPTION="Table of Viewing Access Levels"
-COM_USERS_LEVEL_DETAILS="Level Details"
-COM_USERS_LEVEL_FIELD_TITLE_LABEL="Level Title"
+COM_USERS_LEVEL_DETAILS="Phân nhóm truy cập"
+COM_USERS_LEVEL_FIELD_TITLE_LABEL="Tên phân nhóm truy cập"
 COM_USERS_LEVEL_FORM_EDIT="Edit Viewing Access Level"
 COM_USERS_LEVEL_FORM_NEW="New Viewing Access Level"
 COM_USERS_LEVEL_HEADER_ERROR="User header access level error."
@@ -304,7 +304,7 @@ COM_USERS_SEARCH_IN_NOTE_TITLE="Search in subject, name or username. Prefix with
 COM_USERS_SEARCH_TITLE_LEVELS="Search Access Levels"
 COM_USERS_SEARCH_USERS="Search Users"
 COM_USERS_SEARCH_USER_NOTES="Search User Notes"
-COM_USERS_SETTINGS_FIELDSET_LABEL="Basic Settings"
+COM_USERS_SETTINGS_FIELDSET_LABEL="Thiết lập nâng cao"
 COM_USERS_SUBJECT_HEADING="Subject"
 COM_USERS_SUBMENU_GROUPS="User Groups"
 COM_USERS_SUBMENU_LEVELS="Viewing Access Levels"
@@ -318,7 +318,7 @@ COM_USERS_TOOLBAR_BLOCK="Block"
 COM_USERS_TOOLBAR_MAIL_SEND_MAIL="Send Email"
 COM_USERS_TOOLBAR_UNBLOCK="Unblock"
 COM_USERS_UNACTIVATED="Unactivated"
-COM_USERS_USERGROUP_DETAILS="User Group Details"
+COM_USERS_USERGROUP_DETAILS="Thiết lập Group thành viên"
 COM_USERS_USERS_ERROR_CANNOT_BLOCK_SELF="You can't block yourself."
 COM_USERS_USERS_ERROR_CANNOT_DELETE_SELF="You can't delete yourself."
 COM_USERS_USERS_ERROR_CANNOT_DEMOTE_SELF="Could not write to the configuration file"
@@ -330,34 +330,34 @@ COM_USERS_USERS_NO_ITEM_SELECTED="No Users selected."
 COM_USERS_USERS_N_ITEMS_DELETED_ONE="User deleted."
 COM_USERS_USERS_N_ITEMS_DELETED_OTHER="%d users deleted."
 COM_USERS_USERS_TABLE_CAPTION="Table of Users"
-COM_USERS_USER_ACCOUNT_DETAILS="Account Details"
+COM_USERS_USER_ACCOUNT_DETAILS="Thiết lập tài khoản"
 COM_USERS_USER_BATCH_FAILED="An error was encountered while performing the batch operation: %s."
 COM_USERS_USER_BATCH_SUCCESS="Batch operation completed successfully."
-COM_USERS_USER_FIELD_BACKEND_LANGUAGE_LABEL="Backend Language"
-COM_USERS_USER_FIELD_BACKEND_TEMPLATE_LABEL="Backend Template Style"
-COM_USERS_USER_FIELD_BLOCK="Blocked"
-COM_USERS_USER_FIELD_BLOCK_LABEL="Block this User"
-COM_USERS_USER_FIELD_EDITOR_LABEL="Enter an email address for the user."
-COM_USERS_USER_FIELD_ENABLE="Enabled"
-COM_USERS_USER_FIELD_FRONTEND_LANGUAGE_LABEL="Frontend Language"
+COM_USERS_USER_FIELD_BACKEND_LANGUAGE_LABEL="Ngôn ngữ sử dụng trang Administrator cho thành viên này"
+COM_USERS_USER_FIELD_BACKEND_TEMPLATE_LABEL="Giao diện trang Administrator cho thành viên này"
+COM_USERS_USER_FIELD_BLOCK="KHÔNG kích hoạt"
+COM_USERS_USER_FIELD_BLOCK_LABEL="Trạng thái kích hoạt tài khoản"
+COM_USERS_USER_FIELD_EDITOR_LABEL="Trình soạn thảo chính (Editor) cho thành viên này"
+COM_USERS_USER_FIELD_ENABLE="Kích hoạt"
+COM_USERS_USER_FIELD_FRONTEND_LANGUAGE_LABEL="Ngôn ngữ hiển thị trên Site Frontend cho thành viên này"
 COM_USERS_USER_FIELD_LASTRESET_LABEL="Last Reset Date"
-COM_USERS_USER_FIELD_LASTVISIT_LABEL="Last Visit Date"
-COM_USERS_USER_FIELD_NAME_LABEL="Name"
+COM_USERS_USER_FIELD_LASTVISIT_LABEL="Lần đăng nhập gần nhất"
+COM_USERS_USER_FIELD_NAME_LABEL="Tên hiển thị"
 COM_USERS_USER_FIELD_NOCHANGE_USERNAME_DESC="If you want to change your Username, please contact a site administrator."
 COM_USERS_USER_FIELD_PASSWORD1_MESSAGE="The passwords you entered do not match. Please enter your desired password in the password field and confirm your entry by entering it in the confirm password field."
-COM_USERS_USER_FIELD_PASSWORD2_LABEL="Confirm Administrator Password"
-COM_USERS_USER_FIELD_REGISTERDATE_LABEL="Registration Date"
-COM_USERS_USER_FIELD_REQUIRERESET_LABEL="Require Password Reset"
-COM_USERS_USER_FIELD_RESETCOUNT_LABEL="Password Reset Count"
-COM_USERS_USER_FIELD_SENDEMAIL_LABEL="Receive System Emails"
+COM_USERS_USER_FIELD_PASSWORD2_LABEL="Xác nhận lại Password"
+COM_USERS_USER_FIELD_REGISTERDATE_LABEL="Ngày đăng ký"
+COM_USERS_USER_FIELD_REQUIRERESET_LABEL="Yêu cầu đổi lại password ở lần đăng nhập đầu tiên"
+COM_USERS_USER_FIELD_RESETCOUNT_LABEL="Số lần đã yêu cầu đổi Password"
+COM_USERS_USER_FIELD_SENDEMAIL_LABEL="Nhận email hệ thống"
 COM_USERS_USER_FIELD_TIMEZONE_LABEL="Time Zone"
 COM_USERS_USER_FIELD_TWOFACTOR_LABEL="Authentication Method"
-COM_USERS_USER_FIELD_USERNAME_LABEL="Login Name (Username)"
+COM_USERS_USER_FIELD_USERNAME_LABEL="Username (dùng Đăng nhập)"
 COM_USERS_USER_FORM_EDIT="Edit User"
 COM_USERS_USER_FORM_NEW="New User"
-COM_USERS_USER_GROUPS_HAVING_ACCESS="User Groups With Viewing Access"
+COM_USERS_USER_GROUPS_HAVING_ACCESS="Group thành viên thừa hưởng quyền"
 COM_USERS_USER_HEADING="User"
-COM_USERS_USER_NEW_USER_TITLE="New User Details"
+COM_USERS_USER_NEW_USER_TITLE="Thông tin thành viên"
 COM_USERS_USER_OTEPS="One time emergency passwords"
 COM_USERS_USER_OTEPS_DESC="If you do not have access to your two factor authentication device you can use any of the following passwords instead of a regular security code. Each one of these emergency passwords is immediately destroyed upon use. We recommend printing these passwords out and keeping the printout in a safe and accessible location, eg your wallet or a safety deposit box."
 COM_USERS_USER_OTEPS_WAIT_DESC="There are currently no emergency one time passwords generated in your account. The passwords will be generated automatically and displayed here as soon as you activate two factor authentication."
@@ -366,17 +366,17 @@ COM_USERS_USER_SAVE_SUCCESS="User successfully saved."
 COM_USERS_USER_TWO_FACTOR_AUTH="Two Factor Authentication"
 COM_USERS_VIEW_DEBUG_GROUP_TITLE="Permissions for Group #%d, %s"
 COM_USERS_VIEW_DEBUG_USER_TITLE="Permissions for User #%d, %s"
-COM_USERS_VIEW_EDIT_GROUP_TITLE="Users: Edit Group"
-COM_USERS_VIEW_EDIT_LEVEL_TITLE="Users: Edit Viewing Access Level"
+COM_USERS_VIEW_EDIT_GROUP_TITLE="Group thành viên - chỉnh sửa"
+COM_USERS_VIEW_EDIT_LEVEL_TITLE="Phân nhóm truy cập - chỉnh sửa"
 COM_USERS_VIEW_EDIT_PROFILE_TITLE="Users: Edit Profile"
 COM_USERS_VIEW_EDIT_USER_TITLE="Users: Edit"
-COM_USERS_VIEW_GROUPS_TITLE="Users: Groups"
-COM_USERS_VIEW_LEVELS_TITLE="Users: Viewing Access Levels"
-COM_USERS_VIEW_NEW_GROUP_TITLE="Users: New Group"
-COM_USERS_VIEW_NEW_LEVEL_TITLE="Users: New Viewing Access Level"
-COM_USERS_VIEW_NEW_USER_TITLE="Users: New"
+COM_USERS_VIEW_GROUPS_TITLE="Group thành viên"
+COM_USERS_VIEW_LEVELS_TITLE="Phân nhóm truy cập"
+COM_USERS_VIEW_NEW_GROUP_TITLE="Group thành viên - Tạo mới"
+COM_USERS_VIEW_NEW_LEVEL_TITLE="Phân nhóm truy cập - Tạo mới"
+COM_USERS_VIEW_NEW_USER_TITLE="Thêm Thành viên"
 COM_USERS_VIEW_NOTES_TITLE="User Notes"
-COM_USERS_VIEW_USERS_TITLE="Users"
+COM_USERS_VIEW_USERS_TITLE="Quản lý Thành viên"
 COM_USERS_XML_DESCRIPTION="Component for managing users"
 
 JLIB_RULES_SETTING_NOTES_COM_USERS="Changes apply to this component only.<br><em><strong>Inherited</strong></em> - a Global Configuration setting or higher level setting is applied.<br><em><strong>Denied</strong></em> always wins - whatever is set at the Global or higher level and applies to all child elements.<br><em><strong>Allowed</strong></em> will enable the action for this component unless overruled by a Global Configuration setting." ; Alternate language strings for the rules form field
