--- a/package/administrator/language/vn-VN/mod_quickicon.ini
+++ b/package/administrator/language/vn-VN/mod_quickicon.ini
@@ -4,27 +4,27 @@
 ; Note : All ini files need to be saved as UTF-8
 
 MOD_QUICKICON="Quick Icons"
-MOD_QUICKICON_ARTICLE_MANAGER="Articles"
-MOD_QUICKICON_ARTICLE_MANAGER_ADD="Add Article"
-MOD_QUICKICON_CACHE="Return to Cache"
-MOD_QUICKICON_CATEGORY_MANAGER="Article Categories"
-MOD_QUICKICON_CATEGORY_MANAGER_ADD="Add Article Category"
+MOD_QUICKICON_ARTICLE_MANAGER="Bài viết"
+MOD_QUICKICON_ARTICLE_MANAGER_ADD="Thêm bài viết"
+MOD_QUICKICON_CACHE="Quản lý Cache"
+MOD_QUICKICON_CATEGORY_MANAGER="Danh mục"
+MOD_QUICKICON_CATEGORY_MANAGER_ADD="Thêm danh mục"
 MOD_QUICKICON_CHECKIN="Checkin"
-MOD_QUICKICON_CHECKINS="Global Checkin"
+MOD_QUICKICON_CHECKINS="Gỡ khoá"
 MOD_QUICKICON_CONFIGURATION="Configuration Manager"
 MOD_QUICKICON_CONTENT="Content"
-MOD_QUICKICON_GLOBAL_CONFIGURATION="Global Configuration"
+MOD_QUICKICON_GLOBAL_CONFIGURATION="Cấu hình hệ thống"
 MOD_QUICKICON_GROUP_DESC="The group of this module (this value is compared with the group value used in <strong>Quick Icons</strong> plugins to inject icons). The Joomla! core icons are available to be used in any Quick Icons module."
 MOD_QUICKICON_GROUP_LABEL="Group"
 MOD_QUICKICON_HEADER_ICON_LABEL="Header Icon"
 MOD_QUICKICON_INSTALL_EXTENSIONS="Install Extensions"
 MOD_QUICKICON_LOAD_PLUGINS_LABEL="Load 3rd party plugins"
 MOD_QUICKICON_MAINTENANCE="Maintenance"
-MOD_QUICKICON_MEDIA_MANAGER="Media"
+MOD_QUICKICON_MEDIA_MANAGER="Ảnh và files"
 MOD_QUICKICON_MENUITEMS_MANAGER="Menu Items"
 MOD_QUICKICON_MENUITEMS_MANAGER_ADD="Add Menu Item"
-MOD_QUICKICON_MODULE_MANAGER="Modules"
-MOD_QUICKICON_MODULE_MANAGER_ADD="Add Site Module"
+MOD_QUICKICON_MODULE_MANAGER="Các Module"
+MOD_QUICKICON_MODULE_MANAGER_ADD="Thêm Module"
 MOD_QUICKICON_NAV_LABEL="Quick Links"
 MOD_QUICKICON_PLUGIN_MANAGER="Plugins"
 MOD_QUICKICON_SHOW_ARTICLES_LABEL="Articles Icon"
@@ -52,7 +52,7 @@ MOD_QUICKICON_TEMPLATE_STYLES="Template Styles"
 MOD_QUICKICON_TYPE="Icon Type"
 MOD_QUICKICON_UPDATE="Icons Update"
 MOD_QUICKICON_USER_MANAGER="Users"
-MOD_QUICKICON_USER_MANAGER_ADD="Add User"
+MOD_QUICKICON_USER_MANAGER_ADD="Thêm User"
 MOD_QUICKICON_WITH_COUNT="Show Items with Count"
 MOD_QUICKICON_XML_DESCRIPTION="This module shows Quick Icons that are visible on the Dashboard (administrator area home page)."
 
