--- a/package/administrator/language/vn-VN/mod_sampledata.ini
+++ b/package/administrator/language/vn-VN/mod_sampledata.ini
@@ -4,10 +4,10 @@
 ; Note : All ini files need to be saved as UTF-8
 
 MOD_SAMPLEDATA="Sample Data"
-MOD_SAMPLEDATA_COMPLETED="Sample data installed."
-MOD_SAMPLEDATA_CONFIRM_START="Proceeding will install a sample data set into your Joomla website. This process can't be reverted once done."
+MOD_SAMPLEDATA_COMPLETED="Demo đã được cài đặt. Tải lại trang admin và mở trang frontend để xem kết quả."
+MOD_SAMPLEDATA_CONFIRM_START="Bạn có chắc chắn muốn cài demo vào web."
 MOD_SAMPLEDATA_INVALID_RESPONSE="There is an error in the sample data plugins. Response is invalid."
 MOD_SAMPLEDATA_ITEM_ALREADY_PROCESSED="This sample data set is already installed."
-MOD_SAMPLEDATA_MANAGE_SAMPLEDATA="Manage"
+MOD_SAMPLEDATA_MANAGE_SAMPLEDATA="Thiết lập plugin cài demo"
 MOD_SAMPLEDATA_XML_DESCRIPTION="This module lets you install sample data."
 
