--- a/package/administrator/language/vn-VN/mod_user.ini
+++ b/package/administrator/language/vn-VN/mod_user.ini
@@ -3,10 +3,10 @@
 ; License GNU General Public License version 2 or later; see LICENSE.txt
 ; Note : All ini files need to be saved as UTF-8
 
-MOD_USER="User Menu"
-MOD_USER_ACCESSIBILITY_SETTINGS="Accessibility Settings"
-MOD_USER_EDIT_ACCOUNT="Edit Account"
-MOD_USER_MENU="User Menu"
-MOD_USER_TITLE="Signed in as %s"
+MOD_USER="Module Menu cho Thành viên (User Menu)"
+MOD_USER_ACCESSIBILITY_SETTINGS="Cài đặt trợ năng"
+MOD_USER_EDIT_ACCOUNT="Chỉnh sửa tài khoản"
+MOD_USER_MENU="Tài khoản của bạn"
+MOD_USER_TITLE="Đăng nhập với quyền %s"
 MOD_USER_XML_DESCRIPTION="This module shows the User Menu."
 
