--- a/package/administrator/language/vn-VN/plg_fields_checkboxes.ini
+++ b/package/administrator/language/vn-VN/plg_fields_checkboxes.ini
@@ -4,9 +4,9 @@
 ; Note : All ini files need to be saved as UTF-8
 
 PLG_FIELDS_CHECKBOXES="Fields - Checkboxes"
-PLG_FIELDS_CHECKBOXES_LABEL="Checkboxes (%s)"
-PLG_FIELDS_CHECKBOXES_PARAMS_OPTIONS_LABEL="Checkbox Values"
-PLG_FIELDS_CHECKBOXES_PARAMS_OPTIONS_NAME_LABEL="Text"
-PLG_FIELDS_CHECKBOXES_PARAMS_OPTIONS_VALUE_LABEL="Value"
+PLG_FIELDS_CHECKBOXES_LABEL="%s - Hộp kiểm chọn 1 hoặc nhiều giá trị"
+PLG_FIELDS_CHECKBOXES_PARAMS_OPTIONS_LABEL="Tạo các giá trị cho hộp kiểm để chọn"
+PLG_FIELDS_CHECKBOXES_PARAMS_OPTIONS_NAME_LABEL="Tiêu đề mô tả"
+PLG_FIELDS_CHECKBOXES_PARAMS_OPTIONS_VALUE_LABEL="Giá trị"
 PLG_FIELDS_CHECKBOXES_XML_DESCRIPTION="This plugin lets you create new fields of type 'checkboxes' in any extensions where custom fields are supported."
 
