--- a/package/administrator/language/vn-VN/plg_fields_color.ini
+++ b/package/administrator/language/vn-VN/plg_fields_color.ini
@@ -4,6 +4,6 @@
 ; Note : All ini files need to be saved as UTF-8
 
 PLG_FIELDS_COLOR="Fields - Color"
-PLG_FIELDS_COLOR_LABEL="Color"
+PLG_FIELDS_COLOR_LABEL="%s - Chọn màu"
 PLG_FIELDS_COLOR_XML_DESCRIPTION="This plugin lets create new fields of type 'Color' in the extensions where custom fields are implemented."
 
