--- a/package/administrator/language/vn-VN/plg_fields_integer.ini
+++ b/package/administrator/language/vn-VN/plg_fields_integer.ini
@@ -4,10 +4,10 @@
 ; Note : All ini files need to be saved as UTF-8
 
 PLG_FIELDS_INTEGER="Fields - Integer"
-PLG_FIELDS_INTEGER_LABEL="Integer"
-PLG_FIELDS_INTEGER_PARAMS_FIRST_LABEL="First"
-PLG_FIELDS_INTEGER_PARAMS_LAST_LABEL="Last"
-PLG_FIELDS_INTEGER_PARAMS_MULTIPLE_LABEL="Multiple"
-PLG_FIELDS_INTEGER_PARAMS_STEP_LABEL="Step Increment"
+PLG_FIELDS_INTEGER_LABEL="%s - Số nguyên"
+PLG_FIELDS_INTEGER_PARAMS_FIRST_LABEL="Số bắt đầu"
+PLG_FIELDS_INTEGER_PARAMS_LAST_LABEL="Số cuối"
+PLG_FIELDS_INTEGER_PARAMS_MULTIPLE_LABEL="Multiple - Chọn nhiều số cùng lúc"
+PLG_FIELDS_INTEGER_PARAMS_STEP_LABEL="Step Increment - khoảng giá trị tăng thêm sau mỗi bước"
 PLG_FIELDS_INTEGER_XML_DESCRIPTION="This plugin lets create new fields of type 'Integer' in the extensions where custom fields are implemented."
 
