--- a/package/administrator/language/vn-VN/plg_fields_media.ini
+++ b/package/administrator/language/vn-VN/plg_fields_media.ini
@@ -4,11 +4,11 @@
 ; Note : All ini files need to be saved as UTF-8
 
 PLG_FIELDS_MEDIA="Fields - Media"
-PLG_FIELDS_MEDIA_LABEL="Media (%s)"
-PLG_FIELDS_MEDIA_PARAMS_DIRECTORY_LABEL="Directory"
-PLG_FIELDS_MEDIA_PARAMS_IMAGE_CLASS_LABEL="Image Class"
+PLG_FIELDS_MEDIA_LABEL="%s - Chức năng Ảnh"
+PLG_FIELDS_MEDIA_PARAMS_DIRECTORY_LABEL="Chỉ định sẵn một folder ảnh"
+PLG_FIELDS_MEDIA_PARAMS_IMAGE_CLASS_LABEL="Class Css html cho <strong>Ảnh</strong>"
 PLG_FIELDS_MEDIA_PARAMS_PREVIEW_INLINE="Inline"
-PLG_FIELDS_MEDIA_PARAMS_PREVIEW_LABEL="Preview"
-PLG_FIELDS_MEDIA_PARAMS_PREVIEW_TOOLTIP="Tooltip"
+PLG_FIELDS_MEDIA_PARAMS_PREVIEW_LABEL="Chế độ xem thử hình Ảnh"
+PLG_FIELDS_MEDIA_PARAMS_PREVIEW_TOOLTIP="Tooltip "
 PLG_FIELDS_MEDIA_XML_DESCRIPTION="This plugin lets create new fields of type 'Media' in the extensions where custom fields are implemented."
 
