--- a/package/administrator/language/vn-VN/plg_fields_textarea.ini
+++ b/package/administrator/language/vn-VN/plg_fields_textarea.ini
@@ -4,10 +4,10 @@
 ; Note : All ini files need to be saved as UTF-8
 
 PLG_FIELDS_TEXTAREA="Fields - Textarea"
-PLG_FIELDS_TEXTAREA_LABEL="Textarea"
-PLG_FIELDS_TEXTAREA_PARAMS_COLS_LABEL="Columns"
+PLG_FIELDS_TEXTAREA_LABEL="%s - Đoạn văn bản"
+PLG_FIELDS_TEXTAREA_PARAMS_COLS_LABEL="Columns - số cột"
 PLG_FIELDS_TEXTAREA_PARAMS_FILTER_LABEL="Filter"
-PLG_FIELDS_TEXTAREA_PARAMS_MAXLENGTH_LABEL="Maximum Length (characters)"
-PLG_FIELDS_TEXTAREA_PARAMS_ROWS_LABEL="Rows"
+PLG_FIELDS_TEXTAREA_PARAMS_MAXLENGTH_LABEL="Maximum Length (characters) - Đặt giới hạn số ký tự tối đa cho phép"
+PLG_FIELDS_TEXTAREA_PARAMS_ROWS_LABEL="Rows - Số hàng"
 PLG_FIELDS_TEXTAREA_XML_DESCRIPTION="This plugin lets create new fields of type 'Textarea' in the extensions where custom fields are implemented."
 
