--- a/package/administrator/language/vn-VN/plg_fields_url.ini
+++ b/package/administrator/language/vn-VN/plg_fields_url.ini
@@ -4,9 +4,9 @@
 ; Note : All ini files need to be saved as UTF-8
 
 PLG_FIELDS_URL="Fields - Url"
-PLG_FIELDS_URL_LABEL="Url (%s)"
+PLG_FIELDS_URL_LABEL="%s - Url liên kết"
 PLG_FIELDS_URL_PARAMS_RELATIVE_LABEL="Relative URLs"
-PLG_FIELDS_URL_PARAMS_SCHEMES_LABEL="Schemes"
-PLG_FIELDS_URL_PARAMS_SHOW_URL="Show URL"
+PLG_FIELDS_URL_PARAMS_SCHEMES_LABEL="Schemes - kiểu url bắt buộc"
+PLG_FIELDS_URL_PARAMS_SHOW_URL="Hiện URL"
 PLG_FIELDS_URL_XML_DESCRIPTION="This plugin lets create new fields of type 'Url' in the extensions where custom fields are implemented."
 
