--- a/package/administrator/language/vn-VN/plg_fields_user.ini
+++ b/package/administrator/language/vn-VN/plg_fields_user.ini
@@ -4,7 +4,7 @@
 ; Note : All ini files need to be saved as UTF-8
 
 PLG_FIELDS_USER="Fields - User"
-PLG_FIELDS_USER_DEFAULT_VALUE_LABEL="Default Users"
-PLG_FIELDS_USER_LABEL="User (%s)"
+PLG_FIELDS_USER_DEFAULT_VALUE_LABEL="Default User - Chọn sẵn tài khoản thành viên"
+PLG_FIELDS_USER_LABEL="%s - Tài khoàn thành viên"
 PLG_FIELDS_USER_XML_DESCRIPTION="This plugin lets create new fields of type 'User' in the extensions where custom fields are implemented."
 
