--- a/package/administrator/language/vn-VN/plg_sampledata_multilang.ini
+++ b/package/administrator/language/vn-VN/plg_sampledata_multilang.ini
@@ -19,8 +19,8 @@ PLG_SAMPLEDATA_MULTILANG_ERROR_MENUMODULES="Step %1$u: Failed creating the %2$s 
 PLG_SAMPLEDATA_MULTILANG_ERROR_MENUS="Step %1$u: Failed creating the Main menu (%2$s)."
 PLG_SAMPLEDATA_MULTILANG_ERROR_SWITCHER="Step %1$u: Failed creating and enabling the %2$s."
 PLG_SAMPLEDATA_MULTILANG_MISSING_LANGUAGE="The site should have at least 2 languages installed and their content languages created."
-PLG_SAMPLEDATA_MULTILANG_OVERVIEW_DESC="Sample data which will set up a multilingual site.<br>Before launching, make sure you have at least 2 languages installed with their Content Languages and that no sample data has been installed."
-PLG_SAMPLEDATA_MULTILANG_OVERVIEW_TITLE="Multilingual Sample Data"
+PLG_SAMPLEDATA_MULTILANG_OVERVIEW_DESC="Các danh mục demo, nội dung demo tương ứng với các ngôn ngữ sẽ được thêm vào web. Các cây menu và menu tương ứng với mỗi ngôn ngữ được tạo. Plugin hỗ trợ được kích hoạt. Module chọn ngôn ngữ được thêm vào site."
+PLG_SAMPLEDATA_MULTILANG_OVERVIEW_TITLE="Cài Demo web Đa ngôn ngữ"
 PLG_SAMPLEDATA_MULTILANG_STEP1_SUCCESS="Step 1: The Language Filter plugin has been enabled!"
 PLG_SAMPLEDATA_MULTILANG_STEP2_SUCCESS="Step 2: The Language Switcher module has been created and published!"
 PLG_SAMPLEDATA_MULTILANG_STEP3_SUCCESS="Step 3: All Content Languages have been published!"
