update lang site

--- a/package/language/vn-VN/com_content.ini
+++ b/package/language/vn-VN/com_content.ini
@@ -17,7 +17,7 @@ COM_CONTENT_CATEGORY_LIST_TABLE_CAPTION="List of articles in category %s"
 COM_CONTENT_CHECKED_OUT_BY="Checked out by %s"
 COM_CONTENT_CONTENT_TYPE_ARTICLE="Article"
 COM_CONTENT_CONTENT_TYPE_CATEGORY="Article Category"
-COM_CONTENT_CREATED_DATE="Created Date"
+COM_CONTENT_CREATED_DATE="Ngày tạo"
 COM_CONTENT_CREATED_DATE_ON="Created: %s"
 COM_CONTENT_EDIT_ITEM="Edit Article"
 COM_CONTENT_EDIT_PUBLISHED_ARTICLE="Published Article"
@@ -58,12 +58,12 @@ COM_CONTENT_LAST_UPDATED="Last Updated: %s"
 COM_CONTENT_METADATA="Metadata"
 COM_CONTENT_MODAL_FILTER_SEARCH_DESC="Search in title and alias. Prefix with ID: or AUTHOR: to search for an article ID or article author."
 COM_CONTENT_MODAL_FILTER_SEARCH_LABEL="Search Articles"
-COM_CONTENT_MODIFIED_DATE="Modified Date"
+COM_CONTENT_MODIFIED_DATE="Ngày Sửa"
 COM_CONTENT_MONTH="Month"
 COM_CONTENT_MORE_ARTICLES="More Articles ..."
 COM_CONTENT_NEW_ARTICLE="New Article"
 COM_CONTENT_NO_ARTICLES="There are no articles in this category. If subcategories display on this page, they may have articles."
-COM_CONTENT_NUM_ITEMS="Article Count:"
+COM_CONTENT_NUM_ITEMS="Tin bài:"
 COM_CONTENT_ON_NEW_CONTENT="A new Article has been submitted by '%1$s' entitled '%2$s'."
 COM_CONTENT_ORDERING="Ordering:<br>New articles default to the first position in the Category. The ordering can be changed in Backend."
 COM_CONTENT_PAGEBREAK_DOC_TITLE="Page Break"
@@ -71,7 +71,7 @@ COM_CONTENT_PAGEBREAK_INSERT_BUTTON="Insert Page Break"
 COM_CONTENT_PAGEBREAK_TITLE="Page Title:"
 COM_CONTENT_PAGEBREAK_TOC="Table of Contents Alias:"
 COM_CONTENT_PARENT="Parent Category: %s"
-COM_CONTENT_PUBLISHED_DATE="Published Date"
+COM_CONTENT_PUBLISHED_DATE="Ngày Xuất bản"
 COM_CONTENT_PUBLISHED_DATE_ON="Published: %s"
 COM_CONTENT_PUBLISHING="Permissions"
 COM_CONTENT_RATINGS="Rating"
