--- a/package/language/vn-VN/joomla.ini
+++ b/package/language/vn-VN/joomla.ini
@@ -276,8 +276,8 @@ JGLOBAL_FIELD_CREATED_BY_ALIAS_DESC="Uses another name than the author's for dis
 JGLOBAL_FIELD_CREATED_BY_ALIAS_LABEL="Author's Alias"
 JGLOBAL_FIELD_CREATED_BY_DESC="The user who created this."
 JGLOBAL_FIELD_CREATED_BY_LABEL="Created By"
-JGLOBAL_FIELD_CREATED_DESC="Created Date."
-JGLOBAL_FIELD_CREATED_LABEL="Created Date"
+JGLOBAL_FIELD_CREATED_DESC="Ngày tạo."
+JGLOBAL_FIELD_CREATED_LABEL="Ngày tạo"
 JGLOBAL_FIELD_FEATURED_DESC="Assign the article to the featured blog layout."
 JGLOBAL_FIELD_FEATURED_LABEL="Featured"
 JGLOBAL_FIELD_FIELD_CACHETIME_DESC="The number of minutes before the cache is refreshed."
@@ -290,7 +290,7 @@ JGLOBAL_FIELD_LAYOUT_DESC="Default layout to use for items."
 JGLOBAL_FIELD_LAYOUT_LABEL="Choose a Layout"
 JGLOBAL_FIELD_MODIFIED_BY_DESC="The user who did the last modification."
 JGLOBAL_FIELD_MODIFIED_BY_LABEL="Modified By"
-JGLOBAL_FIELD_MODIFIED_LABEL="Modified Date"
+JGLOBAL_FIELD_MODIFIED_LABEL="Ngày Sửa"
 JGLOBAL_FIELD_MOVE="Move"
 JGLOBAL_FIELD_NUM_CATEGORY_ITEMS_DESC="Number of categories to display for each level."
 JGLOBAL_FIELD_NUM_CATEGORY_ITEMS_LABEL="Number of Categories"
@@ -351,7 +351,7 @@ JGLOBAL_SELECT_PRESS_TO_SELECT="Press to select"
 JGLOBAL_SELECT_SOME_OPTIONS="Select some options"
 JGLOBAL_SORT_BY="Sort Table By:"
 JGLOBAL_START_PUBLISH_AFTER_FINISH="Item start publishing date must be before finish publishing date"
-JGLOBAL_SUBCATEGORIES="Subcategories"
+JGLOBAL_SUBCATEGORIES="Các Danh mục con"
 JGLOBAL_TITLE="Title"
 JGLOBAL_TITLE_ASC="Title ascending"
 JGLOBAL_TITLE_DESC="Title descending"
