--- a/package/language/vn-VN/mod_articles_category.sys.ini
+++ b/package/language/vn-VN/mod_articles_category.sys.ini
@@ -4,7 +4,8 @@
 ; License GNU General Public License version 2 or later; see LICENSE.txt
 ; Note : All ini files need to be saved as UTF-8
 
-MOD_ARTICLES_CATEGORY="Articles - Category"
+MOD_ARTICLES_CATEGORY="Tin Bài - Đa dụng"
 MOD_ARTICLES_CATEGORY_LAYOUT_DEFAULT="Default"
-MOD_ARTICLES_CATEGORY_XML_DESCRIPTION="This module displays a list of articles from one or more categories."
+MOD_ARTICLES_CATEGORY_XML_DESCRIPTION="Module hiển thị các tin bài với nhiều chế độ, nhiều kiểu kết hợp với nhau. Vd: hiện tin trong 1 hoặc nhiều Danh mục, tin theo tác giả, theo ngày tháng...; chế độ động,"
+
 
