--- a/package/language/vn-VN/mod_articles_news.ini
+++ b/package/language/vn-VN/mod_articles_news.ini
@@ -3,30 +3,31 @@
 ; License GNU General Public License version 2 or later; see LICENSE.txt
 ; Note : All ini files need to be saved as UTF-8
 
-MOD_ARTICLES_NEWS="Articles - Newsflash"
-MOD_ARTICLES_NEWS_FIELD_EXCLUDE_CURRENT_LABEL="Exclude Current Article"
-MOD_ARTICLES_NEWS_FIELD_FEATURED_LABEL="Featured Articles"
-MOD_ARTICLES_NEWS_FIELD_IMAGES_ARTICLE_LABEL="Show Intro/Full Image"
-MOD_ARTICLES_NEWS_FIELD_IMAGES_DESC="Show the images that are inside the text of the article."
-MOD_ARTICLES_NEWS_FIELD_IMAGES_LABEL="Show Article Images"
-MOD_ARTICLES_NEWS_FIELD_ITEMS_LABEL="Number of Articles"
-MOD_ARTICLES_NEWS_FIELD_LINKTITLE_LABEL="Linked Titles"
-MOD_ARTICLES_NEWS_FIELD_ORDERING_CREATED_DATE="Created Date"
-MOD_ARTICLES_NEWS_FIELD_ORDERING_LABEL="Order Results"
-MOD_ARTICLES_NEWS_FIELD_ORDERING_MODIFIED_DATE="Modified Date"
-MOD_ARTICLES_NEWS_FIELD_ORDERING_ORDERING="Ordering"
-MOD_ARTICLES_NEWS_FIELD_ORDERING_PUBLISHED_DATE="Published Date"
-MOD_ARTICLES_NEWS_FIELD_ORDERING_RANDOM="Random"
-MOD_ARTICLES_NEWS_FIELD_READMORE_LABEL="'Read more ...' Link"
+MOD_ARTICLES_NEWS="Tin Bài - Tin hiển thị"
+MOD_ARTICLES_NEWS_FIELD_EXCLUDE_CURRENT_LABEL="Không hiển thị tin lên module nếu kết quả truy vấn trùng với tin bài đầy đủ đang xem"
+MOD_ARTICLES_NEWS_FIELD_FEATURED_LABEL="Tin bài được đánh dấu Feature"
+MOD_ARTICLES_NEWS_FIELD_IMAGES_ARTICLE_LABEL="Sử dụng hình ảnh nào trên bài viết để hiện vào tin"
+MOD_ARTICLES_NEWS_FIELD_IMAGES_DESC="Hiện Hình ảnh của bài viết, chọn thêm hình ảnh nào được sử dụng ở field bên dưới"
+MOD_ARTICLES_NEWS_FIELD_IMAGES_LABEL="Hiện Hình ảnh"
+MOD_ARTICLES_NEWS_FIELD_ITEMS_LABEL="Số tin bài hiển thị"
+MOD_ARTICLES_NEWS_FIELD_LINKTITLE_LABEL="Bật link liên kết vào tiêu đề"
+MOD_ARTICLES_NEWS_FIELD_ORDERING_CREATED_DATE="Ngày tạo"
+MOD_ARTICLES_NEWS_FIELD_ORDERING_LABEL="Sắp xếp thứ tự theo"
+MOD_ARTICLES_NEWS_FIELD_ORDERING_MODIFIED_DATE="Ngày Sửa"
+MOD_ARTICLES_NEWS_FIELD_ORDERING_ORDERING="Sắp xếp chủ động"
+MOD_ARTICLES_NEWS_FIELD_ORDERING_PUBLISHED_DATE="Ngày Xuất bản"
+MOD_ARTICLES_NEWS_FIELD_ORDERING_RANDOM="Ngẫu nhiên"
+MOD_ARTICLES_NEWS_FIELD_READMORE_LABEL="Hiện nút Đọc thêm"
 MOD_ARTICLES_NEWS_FIELD_SEPARATOR_LABEL="Last Separator"
-MOD_ARTICLES_NEWS_FIELD_SHOWINTROTEXT_LABEL="Intro Text"
-MOD_ARTICLES_NEWS_FIELD_TITLE_LABEL="Article Title"
-MOD_ARTICLES_NEWS_FIELD_TRIGGEREVENTS_LABEL="Trigger Plugin Events"
-MOD_ARTICLES_NEWS_OPTION_FULLIMAGE="Full Image"
-MOD_ARTICLES_NEWS_OPTION_INTROIMAGE="Intro Image"
+MOD_ARTICLES_NEWS_FIELD_SHOWINTROTEXT_LABEL="Hiện nội dung Intro"
+MOD_ARTICLES_NEWS_FIELD_TITLE_LABEL="Hiện tiêu đề tin bài"
+MOD_ARTICLES_NEWS_FIELD_TRIGGEREVENTS_LABEL="Trigger Plugin Events - Xử lý hiện field và các chế độ tự động"
+MOD_ARTICLES_NEWS_OPTION_FULLIMAGE="Ảnh bài đầy đủ"
+MOD_ARTICLES_NEWS_OPTION_INTROIMAGE="Ảnh Intro"
 MOD_ARTICLES_NEWS_READMORE="Read more ..."
 MOD_ARTICLES_NEWS_READMORE_REGISTER="Register to Read More"
-MOD_ARTICLES_NEWS_TITLE_HEADING="Header Level"
-MOD_ARTICLES_NEWS_VALUE_ONLY_SHOW_FEATURED="Only show Featured Articles"
-MOD_ARTICLES_NEWS_XML_DESCRIPTION="The Article Newsflash Module will display a fixed number of Articles from a specific Category or a set of Categories."
+MOD_ARTICLES_NEWS_TITLE_HEADING="Thẻ html heading bao bọc tiêu đề tin bài"
+MOD_ARTICLES_NEWS_VALUE_ONLY_SHOW_FEATURED="Chỉ tin bài được đánh dấu Feature"
+MOD_ARTICLES_NEWS_XML_DESCRIPTION="Hiển thị tin bài với hình ảnh, tiêu đề, các field tuỳ chỉnh, nội dung Intro"
+JGLOBAL_ORDER_DIRECTION_LABEL="Quy tắc sắp xếp"
 
