--- a/package/language/vn-VN/mod_articles_archive.sys.ini
+++ b/package/language/vn-VN/mod_articles_archive.sys.ini
@@ -3,7 +3,7 @@
 ; License GNU General Public License version 2 or later; see LICENSE.txt
 ; Note : All ini files need to be saved as UTF-8
 
-MOD_ARTICLES_ARCHIVE="Articles - Archived"
+MOD_ARTICLES_ARCHIVE="Tin Bài - bài Archive lưu trữ"
 MOD_ARTICLES_ARCHIVE_LAYOUT_DEFAULT="Default"
-MOD_ARTICLES_ARCHIVE_XML_DESCRIPTION="This module shows a list of the calendar months containing Archived Articles. After you have changed the status of an Article to Archived, this list will be automatically generated."
+MOD_ARTICLES_ARCHIVE_XML_DESCRIPTION="Module hiển thị tin bài xếp theo danh sách thời gian tháng năm . Lưu ý các bài được đánh dấu là Archive mới xuất hiện trong danh sách liên kết."
 
