--- a/package/language/vn-VN/mod_articles_categories.ini
+++ b/package/language/vn-VN/mod_articles_categories.ini
@@ -3,14 +3,14 @@
 ; License GNU General Public License version 2 or later; see LICENSE.txt
 ; Note : All ini files need to be saved as UTF-8
 
-MOD_ARTICLES_CATEGORIES="Articles - Categories"
-MOD_ARTICLES_CATEGORIES_FIELD_COUNT_DESC="Select the number of first level subcategories to display. Default is all."
-MOD_ARTICLES_CATEGORIES_FIELD_COUNT_LABEL="# First Subcategories"
-MOD_ARTICLES_CATEGORIES_FIELD_MAXLEVEL_LABEL="Maximum Level Depth"
-MOD_ARTICLES_CATEGORIES_FIELD_NUMITEMS_LABEL="Number of Articles"
-MOD_ARTICLES_CATEGORIES_FIELD_PARENT_LABEL="Category Details"
-MOD_ARTICLES_CATEGORIES_FIELD_SHOW_CHILDREN_LABEL="Subcategories"
-MOD_ARTICLES_CATEGORIES_FIELD_SHOW_DESCRIPTION_LABEL="Category Descriptions"
+MOD_ARTICLES_CATEGORIES="Danh Mục con (Tin Bài)"
+MOD_ARTICLES_CATEGORIES_FIELD_COUNT_DESC="Mặc định Chọn hết để hiển thị tất cả."
+MOD_ARTICLES_CATEGORIES_FIELD_COUNT_LABEL="# Giới hạn Số lượng Danh mục con hiển thị (không tính các Danh mục con sâu hơn) "
+MOD_ARTICLES_CATEGORIES_FIELD_MAXLEVEL_LABEL="Độ sâu hết cỡ của Danh mục con hiển thị"
+MOD_ARTICLES_CATEGORIES_FIELD_NUMITEMS_LABEL="Hiện tổng số bài viết trong Danh Mục"
+MOD_ARTICLES_CATEGORIES_FIELD_PARENT_LABEL="Chọn Danh Mục"
+MOD_ARTICLES_CATEGORIES_FIELD_SHOW_CHILDREN_LABEL="Hiện Danh Mục con"
+MOD_ARTICLES_CATEGORIES_FIELD_SHOW_DESCRIPTION_LABEL="Hiện Description - Văn bản mô tả mở rộng của Danh Mục"
 MOD_ARTICLES_CATEGORIES_TITLE_HEADING_LABEL="Heading Style"
-MOD_ARTICLES_CATEGORIES_XML_DESCRIPTION="This module displays a list of categories from one parent category."
+MOD_ARTICLES_CATEGORIES_XML_DESCRIPTION="Module này hiện danh sách các Danh Mục con của một Danh mục được chọn"
 
