--- a/package/language/vn-VN/mod_articles_categories.sys.ini
+++ b/package/language/vn-VN/mod_articles_categories.sys.ini
@@ -3,7 +3,8 @@
 ; License GNU General Public License version 2 or later; see LICENSE.txt
 ; Note : All ini files need to be saved as UTF-8
 
-MOD_ARTICLES_CATEGORIES="Articles - Categories"
+MOD_ARTICLES_CATEGORIES="Danh Mục con (Tin Bài)"
 MOD_ARTICLES_CATEGORIES_LAYOUT_DEFAULT="Default"
-MOD_ARTICLES_CATEGORIES_XML_DESCRIPTION="This module displays a list of categories from one parent category."
+MOD_ARTICLES_CATEGORIES_XML_DESCRIPTION="Module này hiện danh sách các Danh Mục con của một Danh mục được chọn"
+
 
