--- a/package/language/vn-VN/mod_articles_category.ini
+++ b/package/language/vn-VN/mod_articles_category.ini
@@ -3,74 +3,74 @@
 ; License GNU General Public License version 2 or later; see LICENSE.txt
 ; Note : All ini files need to be saved as UTF-8
 
-MOD_ARTICLES_CATEGORY="Articles - Category"
-MOD_ARTICLES_CATEGORY_FIELD_ARTICLEGROUPING_LABEL="Article Grouping"
-MOD_ARTICLES_CATEGORY_FIELD_ARTICLEGROUPINGDIR_LABEL="Grouping Direction"
-MOD_ARTICLES_CATEGORY_FIELD_ARTICLEORDERING_LABEL="Article Field to Order By"
-MOD_ARTICLES_CATEGORY_FIELD_ARTICLEORDERINGDIR_LABEL="Ordering Direction"
-MOD_ARTICLES_CATEGORY_FIELD_AUTHOR_LABEL="Authors"
+MOD_ARTICLES_CATEGORY="Tin Bài - Đa dụng"
+MOD_ARTICLES_CATEGORY_FIELD_ARTICLEGROUPING_LABEL="Gom tin bài theo nhóm với cùng thuộc tính"
+MOD_ARTICLES_CATEGORY_FIELD_ARTICLEGROUPINGDIR_LABEL="Sắp xếp thứ tự"
+MOD_ARTICLES_CATEGORY_FIELD_ARTICLEORDERING_LABEL="Sắp xếp dựa theo"
+MOD_ARTICLES_CATEGORY_FIELD_ARTICLEORDERINGDIR_LABEL="Kiểu sắp xếp"
+MOD_ARTICLES_CATEGORY_FIELD_AUTHOR_LABEL="Tác giả"
 MOD_ARTICLES_CATEGORY_FIELD_AUTHORALIAS_LABEL="Author Aliases"
 MOD_ARTICLES_CATEGORY_FIELD_AUTHORALIASFILTERING_LABEL="Author Alias Filtering Type"
-MOD_ARTICLES_CATEGORY_FIELD_AUTHORFILTERING_LABEL="Author Filtering Type"
-MOD_ARTICLES_CATEGORY_FIELD_CATDEPTH_LABEL="Category Depth"
-MOD_ARTICLES_CATEGORY_FIELD_CATFILTERINGTYPE_LABEL="Category Filtering Type"
-MOD_ARTICLES_CATEGORY_FIELD_COUNT_DESC="The number of items to display. The default value of 0 will display all articles."
-MOD_ARTICLES_CATEGORY_FIELD_COUNT_LABEL="Impressions"
-MOD_ARTICLES_CATEGORY_FIELD_DATEFIELD_LABEL="Date Field"
-MOD_ARTICLES_CATEGORY_FIELD_DATEFIELDFORMAT_DESC="Please enter in a valid date format. See: https://php.net/date for formatting information."
-MOD_ARTICLES_CATEGORY_FIELD_DATEFIELDFORMAT_LABEL="Date Format"
-MOD_ARTICLES_CATEGORY_FIELD_DATEFILTERING_LABEL="Date Filtering"
-MOD_ARTICLES_CATEGORY_FIELD_DATEGROUPINGFIELD_DESC="Select which date field you want the date grouping to be applied to."
-MOD_ARTICLES_CATEGORY_FIELD_DATEGROUPINGFIELD_LABEL="Date Grouping Field"
-MOD_ARTICLES_CATEGORY_FIELD_DATERANGEFIELD_LABEL="Date Range Field"
-MOD_ARTICLES_CATEGORY_FIELD_ENDDATE_LABEL="To Date"
-MOD_ARTICLES_CATEGORY_FIELD_EXCLUDEDARTICLES_LABEL="Article IDs to Exclude"
-MOD_ARTICLES_CATEGORY_FIELD_GROUP_DISPLAY_LABEL="Display Options"
-MOD_ARTICLES_CATEGORY_FIELD_GROUP_FILTERING_LABEL="Filtering Options"
-MOD_ARTICLES_CATEGORY_FIELD_GROUP_GROUPING_LABEL="Grouping Options"
-MOD_ARTICLES_CATEGORY_FIELD_GROUP_ORDERING_LABEL="Ordering Options"
-MOD_ARTICLES_CATEGORY_FIELD_INTROTEXTLIMIT_LABEL="Introtext Limit (characters)"
-MOD_ARTICLES_CATEGORY_FIELD_LINKTITLES_LABEL="Linked Titles"
-MOD_ARTICLES_CATEGORY_FIELD_MODE_DESC="Please select the mode you would like to use. If Normal Mode is chosen, then configure the module and it will display a static list of Articles on the menu items you assign the module to. If Dynamic Mode is chosen, then you can still configure the module normally, however now the Category option will no longer be used. Instead, the module will dynamically detect if you are on a Category view and will display the list of articles within that Category. When Dynamic Mode is chosen, it is best to leave the module set to display on all pages, as it will decide to display anything dynamically."
-MOD_ARTICLES_CATEGORY_FIELD_MODE_LABEL="Mode"
-MOD_ARTICLES_CATEGORY_FIELD_MONTHYEARFORMAT_DESC="Please enter in a valid date format. See: https://php.net/date for formatting information."
-MOD_ARTICLES_CATEGORY_FIELD_MONTHYEARFORMAT_LABEL="Month and Year Display Format"
-MOD_ARTICLES_CATEGORY_FIELD_RELATIVEDATE_LABEL="Relative Date"
-MOD_ARTICLES_CATEGORY_FIELD_SHOWCHILDCATEGORYARTICLES_LABEL="Child Category Articles"
-MOD_ARTICLES_CATEGORY_FIELD_SHOWFEATURED_LABEL="Featured Articles"
-MOD_ARTICLES_CATEGORY_FIELD_SHOWHITS_LABEL="Hits"
-MOD_ARTICLES_CATEGORY_FIELD_SHOWINTROTEXT_LABEL="Introtext"
-MOD_ARTICLES_CATEGORY_FIELD_SHOWONARTICLEPAGE_DESC="Select to Show or hide Article List from Article Pages. This means that the module will only display itself dynamically on Category Pages."
-MOD_ARTICLES_CATEGORY_FIELD_SHOWONARTICLEPAGE_LABEL="Show on Article Page"
-MOD_ARTICLES_CATEGORY_FIELD_STARTDATE_LABEL="Start Date Range"
-MOD_ARTICLES_CATEGORY_OPTION_ASCENDING_VALUE="Ascending"
-MOD_ARTICLES_CATEGORY_OPTION_CREATED_VALUE="Created Date"
-MOD_ARTICLES_CATEGORY_OPTION_DATERANGE_VALUE="Date Range"
-MOD_ARTICLES_CATEGORY_OPTION_DESCENDING_VALUE="Descending"
-MOD_ARTICLES_CATEGORY_OPTION_DYNAMIC_VALUE="Dynamic"
-MOD_ARTICLES_CATEGORY_OPTION_EXCLUDE_VALUE="Exclude"
-MOD_ARTICLES_CATEGORY_OPTION_EXCLUSIVE_VALUE="Exclusive"
-MOD_ARTICLES_CATEGORY_OPTION_FINISHPUBLISHING_VALUE="Finish Publishing Date"
-MOD_ARTICLES_CATEGORY_OPTION_HITS_VALUE="Hits"
-MOD_ARTICLES_CATEGORY_OPTION_ID_VALUE="ID"
-MOD_ARTICLES_CATEGORY_OPTION_INCLUDE_VALUE="Include"
-MOD_ARTICLES_CATEGORY_OPTION_INCLUSIVE_VALUE="Inclusive"
-MOD_ARTICLES_CATEGORY_OPTION_MODIFIED_VALUE="Modified Date"
-MOD_ARTICLES_CATEGORY_OPTION_MONTHYEAR_VALUE="Month and Year"
-MOD_ARTICLES_CATEGORY_OPTION_NORMAL_VALUE="Normal"
+MOD_ARTICLES_CATEGORY_FIELD_AUTHORFILTERING_LABEL="Chế độ lấy tin bài theo Tác giả"
+MOD_ARTICLES_CATEGORY_FIELD_CATDEPTH_LABEL="Cấp sâu của Danh Mục con lấy tới"
+MOD_ARTICLES_CATEGORY_FIELD_CATFILTERINGTYPE_LABEL="Chế độ lấy bài trong Danh Mục"
+MOD_ARTICLES_CATEGORY_FIELD_COUNT_DESC="Tổng số tin bài muốn hiển thị. Nhập giá trị 0 nếu muốn hiển thị tất cả kết quả tìm được."
+MOD_ARTICLES_CATEGORY_FIELD_COUNT_LABEL="Số tin bài hiển thị"
+MOD_ARTICLES_CATEGORY_FIELD_DATEFIELD_LABEL="Hiện ngày"
+MOD_ARTICLES_CATEGORY_FIELD_DATEFIELDFORMAT_DESC="Tạo ra dạng ngày tháng hiển thị theo ý bạn. Dùng các ký tự viết tắt Y:năm,m:tháng,d:ngày,H:giờ,i:phút. Ví dụ, hiển thị ngày tháng dạng 25/11/2021 thì nhập vào phía trên là d/m/Y. Một số dạng khác d-m-Y, hoặc ngày d tháng m năm Y"
+MOD_ARTICLES_CATEGORY_FIELD_DATEFIELDFORMAT_LABEL="Hiển thị ngày tháng năm"
+MOD_ARTICLES_CATEGORY_FIELD_DATEFILTERING_LABEL="Ràng buộc thời gian"
+MOD_ARTICLES_CATEGORY_FIELD_DATEGROUPINGFIELD_DESC="Lựa chọn dữ liệu ngày tháng lưu trên Tin bài để sắp xếp."
+MOD_ARTICLES_CATEGORY_FIELD_DATEGROUPINGFIELD_LABEL="Sắp xếp theo"
+MOD_ARTICLES_CATEGORY_FIELD_DATERANGEFIELD_LABEL="Áp dụng theo dữ liệu ngày tháng lưu tại"
+MOD_ARTICLES_CATEGORY_FIELD_ENDDATE_LABEL="Đến ngày"
+MOD_ARTICLES_CATEGORY_FIELD_EXCLUDEDARTICLES_LABEL="Thiết lập tay: Bỏ khỏi danh sách các tin bài này (nhập bằng ID của tin bài, enter xuống dòng cho mỗi ID)"
+MOD_ARTICLES_CATEGORY_FIELD_GROUP_DISPLAY_LABEL="Hiển thị trên site"
+MOD_ARTICLES_CATEGORY_FIELD_GROUP_FILTERING_LABEL="Thiết lập Điều kiện"
+MOD_ARTICLES_CATEGORY_FIELD_GROUP_GROUPING_LABEL="Gom tin bài theo nhóm"
+MOD_ARTICLES_CATEGORY_FIELD_GROUP_ORDERING_LABEL="Sắp xếp tin bài hiển thị"
+MOD_ARTICLES_CATEGORY_FIELD_INTROTEXTLIMIT_LABEL="Chỉ định số ký tự tối đa sẽ được hiển thị của Nội dung Intro"
+MOD_ARTICLES_CATEGORY_FIELD_LINKTITLES_LABEL="Bật link ở Tiêu đề"
+MOD_ARTICLES_CATEGORY_FIELD_MODE_DESC="Với chế độ Normal - Bình Thường chọn các thiết lập trong từng Tab để đưa ra các Tin Bài đúng với yêu cầu.<br />Với chế độ Chế độ Dynamic - Động thì hệ thống sẽ tự động lấy tin bài theo Danh Mục tương ứng mà người xem đang xem. Khi bạn đang xem bài viết đầy đủ, module sẽ truy vấn bài viết hiện tại thuộc Danh Mục nào, và hiển thị chỉ các bài viết trong cùng Danh Mục của tin bài đang xem. "
+MOD_ARTICLES_CATEGORY_FIELD_MODE_LABEL="Mode - Chế độ"
+MOD_ARTICLES_CATEGORY_FIELD_MONTHYEARFORMAT_DESC="Tạo ra dạng ngày tháng hiển thị theo ý bạn. Dùng các ký tự viết tắt Y:năm,m:tháng,d:ngày,H:giờ,i:phút. Ví dụ, hiển thị ngày tháng dạng 25/11/2021 thì nhập vào phía trên là d/m/Y. Một số dạng khác d-m-Y, hoặc ngày d tháng m năm Y."
+MOD_ARTICLES_CATEGORY_FIELD_MONTHYEARFORMAT_LABEL="Định dạng hiển thị Ngày tháng (Tiêu đề nhóm)"
+MOD_ARTICLES_CATEGORY_FIELD_RELATIVEDATE_LABEL="Nằm trong khoảng thời gian là (ngày)"
+MOD_ARTICLES_CATEGORY_FIELD_SHOWCHILDCATEGORYARTICLES_LABEL="Áp dụng trên Danh Mục con"
+MOD_ARTICLES_CATEGORY_FIELD_SHOWFEATURED_LABEL="Hiện tin bài có đánh dấu Feature"
+MOD_ARTICLES_CATEGORY_FIELD_SHOWHITS_LABEL="Lượt xem"
+MOD_ARTICLES_CATEGORY_FIELD_SHOWINTROTEXT_LABEL="Hiển thị Nội dung Intro"
+MOD_ARTICLES_CATEGORY_FIELD_SHOWONARTICLEPAGE_DESC="Nếu bạn chọn No, module sẽ không hiển thị khi xem ở Tin Bài đầy đủ. Module chỉ xuất hiện khi xem ở Danh Mục"
+MOD_ARTICLES_CATEGORY_FIELD_SHOWONARTICLEPAGE_LABEL="Hiện trong bài đầy đủ"
+MOD_ARTICLES_CATEGORY_FIELD_STARTDATE_LABEL="Từ Ngày"
+MOD_ARTICLES_CATEGORY_OPTION_ASCENDING_VALUE="A-Z; nhỏ-lớn; tăng dần;"
+MOD_ARTICLES_CATEGORY_OPTION_CREATED_VALUE="Ngày gửi tin bài"
+MOD_ARTICLES_CATEGORY_OPTION_DATERANGE_VALUE="Chọn ngày chính xác"
+MOD_ARTICLES_CATEGORY_OPTION_DESCENDING_VALUE="Z-A ; lớn-nhỏ; giảm dần;"
+MOD_ARTICLES_CATEGORY_OPTION_DYNAMIC_VALUE="Dynamic - Động"
+MOD_ARTICLES_CATEGORY_OPTION_EXCLUDE_VALUE="Không tính vào Danh mục con của các Danh Mục đã chọn phía trên"
+MOD_ARTICLES_CATEGORY_OPTION_EXCLUSIVE_VALUE="Loại bỏ hết các tin bài theo các lựa chọn bạn chọn phía dưới"
+MOD_ARTICLES_CATEGORY_OPTION_FINISHPUBLISHING_VALUE="Ngày ngưng Xuất bản"
+MOD_ARTICLES_CATEGORY_OPTION_HITS_VALUE="Lượt xem"
+MOD_ARTICLES_CATEGORY_OPTION_ID_VALUE="ID Tin bài"
+MOD_ARTICLES_CATEGORY_OPTION_INCLUDE_VALUE="Tính luôn cả Danh Mục con của các Danh Mục đã chọn phía trên"
+MOD_ARTICLES_CATEGORY_OPTION_INCLUSIVE_VALUE="Lấy tin bài nằm trong các lựa chọn bạn chọn phía dưới"
+MOD_ARTICLES_CATEGORY_OPTION_MODIFIED_VALUE="Ngày chỉnh sửa"
+MOD_ARTICLES_CATEGORY_OPTION_MONTHYEAR_VALUE="Tháng và Năm"
+MOD_ARTICLES_CATEGORY_OPTION_NORMAL_VALUE="Normal - Bình thường"
 MOD_ARTICLES_CATEGORY_OPTION_OFF_VALUE="Off"
-MOD_ARTICLES_CATEGORY_OPTION_ONLYFEATURED_VALUE="Only"
-MOD_ARTICLES_CATEGORY_OPTION_ORDERING_VALUE="Article Order"
-MOD_ARTICLES_CATEGORY_OPTION_ORDERINGFEATURED_VALUE="Featured Articles Order"
-MOD_ARTICLES_CATEGORY_OPTION_RANDOM_VALUE="Random"
-MOD_ARTICLES_CATEGORY_OPTION_RATING_VALUE="Rating"
-MOD_ARTICLES_CATEGORY_OPTION_RELATIVEDAY_VALUE="Relative Date"
-MOD_ARTICLES_CATEGORY_OPTION_STARTPUBLISHING_VALUE="Start Publishing Date"
+MOD_ARTICLES_CATEGORY_OPTION_ONLYFEATURED_VALUE="Only - Duy nhất"
+MOD_ARTICLES_CATEGORY_OPTION_ORDERING_VALUE="Sắp xếp chủ động của Tin Bài"
+MOD_ARTICLES_CATEGORY_OPTION_ORDERINGFEATURED_VALUE="Sắp xếp chủ động của Feature"
+MOD_ARTICLES_CATEGORY_OPTION_RANDOM_VALUE="Ngẫu nhiên"
+MOD_ARTICLES_CATEGORY_OPTION_RATING_VALUE="Vote - Đánh giá"
+MOD_ARTICLES_CATEGORY_OPTION_RELATIVEDAY_VALUE="Tính toán theo khoảng thời gian"
+MOD_ARTICLES_CATEGORY_OPTION_STARTPUBLISHING_VALUE="Ngày bắt đầu Xuất bản"
 MOD_ARTICLES_CATEGORY_OPTION_VOTE_VALUE="Vote"
-MOD_ARTICLES_CATEGORY_OPTION_YEAR_VALUE="Year"
+MOD_ARTICLES_CATEGORY_OPTION_YEAR_VALUE="Năm"
 MOD_ARTICLES_CATEGORY_READ_MORE="Read more: "
 MOD_ARTICLES_CATEGORY_READ_MORE_TITLE="Read More ..."
 MOD_ARTICLES_CATEGORY_REGISTER_TO_READ_MORE="Register to read more"
 MOD_ARTICLES_CATEGORY_UNTAGGED="Untagged"
-MOD_ARTICLES_CATEGORY_XML_DESCRIPTION="This module displays a list of articles from one or more categories."
+MOD_ARTICLES_CATEGORY_XML_DESCRIPTION="Module hiển thị các tin bài với nhiều chế độ, nhiều kiểu kết hợp với nhau. Vd: hiện tin trong 1 hoặc nhiều Danh mục, tin theo tác giả, theo ngày tháng...; chế độ động. Việc sử dụng Module này tương đối phức tạp với khá nhiều các sử dụng và tính năng nâng cao; vì vậy bạn nên đọc hướng dẫn trước khi sử dụng, nếu tài liệu khó hiểu hoặc bạn không sử dụng được module này thì tìm các module khác với tính năng đơn giản hơn để sử dụng."
 
