--- a/package/language/vn-VN/mod_articles_latest.ini
+++ b/package/language/vn-VN/mod_articles_latest.ini
@@ -3,21 +3,21 @@
 ; License GNU General Public License version 2 or later; see LICENSE.txt
 ; Note : All ini files need to be saved as UTF-8
 
-MOD_ARTICLES_LATEST="Articles - Latest"
-MOD_LATEST_NEWS_FIELD_AUTHOR_LABEL="Created by Author(s)"
-MOD_LATEST_NEWS_FIELD_COUNT_LABEL="Articles to Display"
-MOD_LATEST_NEWS_FIELD_FEATURED_LABEL="Featured Articles"
-MOD_LATEST_NEWS_FIELD_ORDERING_LABEL="Order"
-MOD_LATEST_NEWS_FIELD_USER_LABEL="Authors"
-MOD_LATEST_NEWS_VALUE_ADDED_BY_ME="Added or modified by me"
-MOD_LATEST_NEWS_VALUE_ANYONE="Anyone"
-MOD_LATEST_NEWS_VALUE_CREATED_BY="Created by"
-MOD_LATEST_NEWS_VALUE_NOTADDED_BY_ME="Not added or modified by me"
-MOD_LATEST_NEWS_VALUE_ONLY_SHOW_FEATURED="Only show Featured Articles"
-MOD_LATEST_NEWS_VALUE_RECENT_ADDED="Recently Added First"
-MOD_LATEST_NEWS_VALUE_RECENT_MODIFIED="Recently Modified First"
-MOD_LATEST_NEWS_VALUE_RECENT_PUBLISHED="Recently Published First"
-MOD_LATEST_NEWS_VALUE_RECENT_RAND="Random Articles"
+MOD_ARTICLES_LATEST="Tin Bài - Mới nhất"
+MOD_LATEST_NEWS_FIELD_AUTHOR_LABEL="Chọn một tác giả"
+MOD_LATEST_NEWS_FIELD_COUNT_LABEL="Số lượng bài hiển thị"
+MOD_LATEST_NEWS_FIELD_FEATURED_LABEL="Tin bài đánh dấu Feature"
+MOD_LATEST_NEWS_FIELD_ORDERING_LABEL="Sắp xếp thứ tự"
+MOD_LATEST_NEWS_FIELD_USER_LABEL="Ràng buộc điều kiện Tác giả tin"
+MOD_LATEST_NEWS_VALUE_ADDED_BY_ME="Bài tạo hoặc chỉnh bởi tài khoản đang đăng nhập"
+MOD_LATEST_NEWS_VALUE_ANYONE="Tất cả"
+MOD_LATEST_NEWS_VALUE_CREATED_BY="Chọn một tác giả"
+MOD_LATEST_NEWS_VALUE_NOTADDED_BY_ME="Tất cả bài viết khác ngoại trừ bài viết bởi tài khoản đang đăng nhập"
+MOD_LATEST_NEWS_VALUE_ONLY_SHOW_FEATURED="Chỉ hiện tin bài được đánh dấu Feature"
+MOD_LATEST_NEWS_VALUE_RECENT_ADDED="Mới tạo lên trước"
+MOD_LATEST_NEWS_VALUE_RECENT_MODIFIED="Mới chỉnh sửa xong lên trước"
+MOD_LATEST_NEWS_VALUE_RECENT_PUBLISHED="Mới xuất bản lên trước"
+MOD_LATEST_NEWS_VALUE_RECENT_RAND="Ngẫu nhiên"
 MOD_LATEST_NEWS_VALUE_RECENT_TOUCHED="Recently Touched First"
-MOD_LATEST_NEWS_XML_DESCRIPTION="This module shows a list of the most recently published and current Articles."
+MOD_LATEST_NEWS_XML_DESCRIPTION="Hiển thị các tin bài mới nhất."
 
