--- a/package/language/vn-VN/mod_articles_latest.sys.ini
+++ b/package/language/vn-VN/mod_articles_latest.sys.ini
@@ -4,7 +4,7 @@
 ; License GNU General Public License version 2 or later; see LICENSE.txt
 ; Note : All ini files need to be saved as UTF-8
 
-MOD_ARTICLES_LATEST="Articles - Latest"
+MOD_ARTICLES_LATEST="Tin Bài - Mới nhất"
 MOD_ARTICLES_LATEST_LAYOUT_DEFAULT="Default"
-MOD_LATEST_NEWS_XML_DESCRIPTION="This module shows a list of the most recently published and current Articles."
+MOD_LATEST_NEWS_XML_DESCRIPTION="Hiển thị các tin bài mới nhất"
 
