--- a/package/language/vn-VN/mod_articles_news.sys.ini
+++ b/package/language/vn-VN/mod_articles_news.sys.ini
@@ -4,7 +4,7 @@
 ; License GNU General Public License version 2 or later; see LICENSE.txt
 ; Note : All ini files need to be saved as UTF-8
 
-MOD_ARTICLES_NEWS="Articles - Newsflash"
+MOD_ARTICLES_NEWS="Tin Bài - Tin hiển thị"
 MOD_ARTICLES_NEWS_LAYOUT_DEFAULT="Default"
-MOD_ARTICLES_NEWS_XML_DESCRIPTION="The Newsflash Module will display a fixed number of articles from a specific category."
+MOD_ARTICLES_NEWS_XML_DESCRIPTION="Hiển thị tin bài với hình ảnh, tiêu đề, các field tuỳ chỉnh, nội dung Intro"
 
