--- a/package/language/vn-VN/mod_banners.sys.ini
+++ b/package/language/vn-VN/mod_banners.sys.ini
@@ -6,5 +6,6 @@
 
 MOD_BANNERS="Banners"
 MOD_BANNERS_LAYOUT_DEFAULT="Default"
-MOD_BANNERS_XML_DESCRIPTION="The Banner Module displays the active Banners from the Component."
+MOD_BANNERS_XML_DESCRIPTION="Module hiển thị các banner từ component Banner"
+
 
