--- a/package/language/vn-VN/mod_breadcrumbs.ini
+++ b/package/language/vn-VN/mod_breadcrumbs.ini
@@ -3,13 +3,13 @@
 ; License GNU General Public License version 2 or later; see LICENSE.txt
 ; Note : All ini files need to be saved as UTF-8
 
-MOD_BREADCRUMBS="Breadcrumbs"
-MOD_BREADCRUMBS_FIELD_HOMETEXT_DESC="This text will be shown as Home entry. If the field is left empty, it will use the default value from the mod_breadcrumbs.ini language file."
-MOD_BREADCRUMBS_FIELD_HOMETEXT_LABEL="Text for Home Entry"
-MOD_BREADCRUMBS_FIELD_SHOWHERE_LABEL="\"You are here\""
-MOD_BREADCRUMBS_FIELD_SHOWHOME_LABEL="Home"
-MOD_BREADCRUMBS_FIELD_SHOWLAST_LABEL="Last"
-MOD_BREADCRUMBS_HERE="You are here: "
-MOD_BREADCRUMBS_HOME="Home"
-MOD_BREADCRUMBS_XML_DESCRIPTION="This module displays the Breadcrumbs."
+MOD_BREADCRUMBS="Breadcrumbs - Thanh điều hướng"
+MOD_BREADCRUMBS_FIELD_HOMETEXT_DESC="Thay Trang chủ bằng một tên khác trên thanh Breadcrumbs nếu bạn muốn "
+MOD_BREADCRUMBS_FIELD_HOMETEXT_LABEL="Thay tên Trang chủ bằng chữ bạn muốn"
+MOD_BREADCRUMBS_FIELD_SHOWHERE_LABEL="Hiện dòng chữ \"Bạn ở đây\""
+MOD_BREADCRUMBS_FIELD_SHOWHOME_LABEL="Hiện Trang Chủ"
+MOD_BREADCRUMBS_FIELD_SHOWLAST_LABEL="Hiện phần tử cuối cùng"
+MOD_BREADCRUMBS_HERE="Bạn ở đây: "
+MOD_BREADCRUMBS_HOME="Trang chủ"
+MOD_BREADCRUMBS_XML_DESCRIPTION="Module Breadcrumbs - Thanh điều hướng giúp định vị vị trí của trang mà khách truy cập đang xem. Ví dụ minh hoạ Thanh điều hướng: Trang chủ &gt; Danh Mục A &gt; Tin Bài 1"
 
