--- a/package/language/vn-VN/mod_breadcrumbs.sys.ini
+++ b/package/language/vn-VN/mod_breadcrumbs.sys.ini
@@ -4,7 +4,7 @@
 ; License GNU General Public License version 2 or later; see LICENSE.txt
 ; Note : All ini files need to be saved as UTF-8
 
-MOD_BREADCRUMBS="Breadcrumbs"
+MOD_BREADCRUMBS="Breadcrumbs - Thanh điều hướng"
 MOD_BREADCRUMBS_LAYOUT_DEFAULT="Default"
-MOD_BREADCRUMBS_XML_DESCRIPTION="This module displays the Breadcrumbs."
+MOD_BREADCRUMBS_XML_DESCRIPTION="Thanh điều hướng có dạng minh họa: Trang chủ > Danh Mục A > Tin Bài 1"
 
