--- a/package/language/vn-VN/mod_footer.sys.ini
+++ b/package/language/vn-VN/mod_footer.sys.ini
@@ -3,7 +3,7 @@
 ; License GNU General Public License version 2 or later; see LICENSE.txt
 ; Note : All ini files need to be saved as UTF-8
 
-MOD_FOOTER="Footer"
+MOD_FOOTER="Footer - Chân trang"
 MOD_FOOTER_LAYOUT_DEFAULT="Default"
-MOD_FOOTER_XML_DESCRIPTION="This module shows the Joomla! copyright information."
+MOD_FOOTER_XML_DESCRIPTION="Chức năng cực kỳ đơn giản: hiển thị nội dung cố định về Copyright và dòng giới thiệu bổ sung."
 
